--- a/Reviews-page/7Bit-Casino/Payments/index.html
+++ b/Reviews-page/7Bit-Casino/Payments/index.html
@@ -261,201 +261,205 @@
 
   -->
     <section class="casino-allInfo">
-      <div class="casino-banner">
-        <a
-          href="https://7bit.partners/p2004e5c0"
-          aria-label="Read more about 7Bit"
-          ><img
-            src="/img/news-banners/7bitcasino-banner.webp"
-            alt="7bit banner"
-        /></a>
-      </div>
-
-      <div class="casino-infoLogo">
-        <div class="logo-box">
-          <img src="/img/7bit-logo.webp" loading="lazy" alt="7bit logo" />
+      <div class="info-Block">
+        <div class="casino-banner">
+          <a
+            href="https://7bit.partners/p2004e5c0"
+            aria-label="Read more about 7Bit"
+            ><img
+              src="/img/news-banners/7bitcasino-banner.webp"
+              alt="7bit banner"
+          /></a>
         </div>
-      </div>
-      <div class="play-now">
-        <a
-          href="https://7bit.partners/p2004e5c0"
-          aria-label="Read more about B7Bit"
-          ><button>Play Now</button></a
-        >
-      </div>
 
-      <div class="tab-info">
-        <a href="/Reviews-page/7Bit-Casino/" class="tablinks">
-          <button>Overview</button>
-        </a>
-        <a href="/Reviews-page/7Bit-Casino/Bonus/" class="tablinks">
-          <button>Bonuses</button>
-        </a>
-        <a href="/Reviews-page/7Bit-Casino/Games/" class="tablinks">
-          <button>Games</button>
-        </a>
-        <a href="/Reviews-page/7Bit-Casino/Payments/" class="tablinks">
-          <button>Payments</button>
-        </a>
-      </div>
+        <div class="casino-infoLogo">
+          <div class="logo-box">
+            <img src="/img/7bit-logo.webp" loading="lazy" alt="7bit logo" />
+          </div>
+        </div>
+        <div class="play-now">
+          <a
+            href="https://7bit.partners/p2004e5c0"
+            aria-label="Read more about B7Bit"
+            ><button>Play Now</button></a
+          >
+        </div>
 
-      <!-- Tab content -->
+        <div class="tab-info">
+          <a href="/Reviews-page/7Bit-Casino/" class="tablinks">
+            <button>Overview</button>
+          </a>
+          <a href="/Reviews-page/7Bit-Casino/Bonus/" class="tablinks">
+            <button>Bonuses</button>
+          </a>
+          <a href="/Reviews-page/7Bit-Casino/Games/" class="tablinks">
+            <button>Games</button>
+          </a>
+          <a href="/Reviews-page/7Bit-Casino/Payments/" class="tablinks">
+            <button>Payments</button>
+          </a>
+        </div>
 
-      <div id="Payments" class="tabcontent-info">
-        <h1>
-          7Bit Casino Payment Methods: A Full Review for Fast and Secure
-          Payments
-        </h1>
+        <!-- Tab content -->
 
-        <p>
-          Choosing a casino with many <strong>payment methods</strong> is key to
-          a smooth online gaming experience. <strong>7Bit Casino</strong> nails
-          it with many options, for both <strong>crypto</strong> and
-          <strong>fiat</strong> users. In this review, we will go through the
-          payment methods at <strong>7Bit Casino</strong>, benefits, processing
-          time, and limits.
-        </p>
+        <div id="Payments" class="tabcontent-info">
+          <h1>
+            7Bit Casino Payment Methods: A Full Review for Fast and Secure
+            Payments
+          </h1>
 
-        <h2>Crypto Payment Methods at 7Bit Casino</h2>
+          <p>
+            Choosing a casino with many <strong>payment methods</strong> is key
+            to a smooth online gaming experience.
+            <strong>7Bit Casino</strong> nails it with many options, for both
+            <strong>crypto</strong> and <strong>fiat</strong> users. In this
+            review, we will go through the payment methods at
+            <strong>7Bit Casino</strong>, benefits, processing time, and limits.
+          </p>
 
-        <p>
-          For players who want speed and privacy,
-          <strong>7Bit Casino</strong> supports many
-          <strong>cryptocurrencies</strong>. Here are the crypto payment
-          options:
-        </p>
+          <h2>Crypto Payment Methods at 7Bit Casino</h2>
 
-        <ul>
-          <li>
-            <strong>Bitcoin (BTC)</strong>: As the most popular cryptocurrency,
-            Bitcoin is widely accepted at <strong>7Bit Casino</strong>, fast and
-            secure.
-          </li>
-          <li>
-            <strong>Ethereum (ETH)</strong>: Known for its smart contracts,
-            Ethereum is faster than Bitcoin.
-          </li>
-          <li>
-            <strong>Litecoin (LTC)</strong>: Litecoin has low fees and is fast,
-            good for deposits and withdrawals.
-          </li>
-          <li>
-            <strong>Bitcoin Cash (BCH)</strong>: With bigger block sizes,
-            Bitcoin Cash is faster than Bitcoin.
-          </li>
-          <li>
-            <strong>Dogecoin (DOGE)</strong>: Originally a meme cryptocurrency,
-            Dogecoin is now a popular option at <strong>7Bit Casino</strong>.
-          </li>
-          <li>
-            <strong>Binance Coin (BNB)</strong>: Binance Coin has low fees, and
-            <strong>7Bit Casino</strong> supports it.
-          </li>
-          <li>
-            <strong>Ripple (XRP)</strong>: Ripple is the fastest, good for
-            players who want fast transfers.
-          </li>
-        </ul>
+          <p>
+            For players who want speed and privacy,
+            <strong>7Bit Casino</strong> supports many
+            <strong>cryptocurrencies</strong>. Here are the crypto payment
+            options:
+          </p>
 
-        <h3>Benefits of Crypto Payments:</h3>
-        <ul>
-          <li>
-            <strong>Instant Processing</strong>: Crypto transactions are
-            processed in seconds, you get instant access to your funds.
-          </li>
-          <li>
-            <strong>Enhanced Security and Privacy</strong>: Cryptos are more
-            private and secure, reducing the risk of fraud.
-          </li>
-        </ul>
+          <ul>
+            <li>
+              <strong>Bitcoin (BTC)</strong>: As the most popular
+              cryptocurrency, Bitcoin is widely accepted at
+              <strong>7Bit Casino</strong>, fast and secure.
+            </li>
+            <li>
+              <strong>Ethereum (ETH)</strong>: Known for its smart contracts,
+              Ethereum is faster than Bitcoin.
+            </li>
+            <li>
+              <strong>Litecoin (LTC)</strong>: Litecoin has low fees and is
+              fast, good for deposits and withdrawals.
+            </li>
+            <li>
+              <strong>Bitcoin Cash (BCH)</strong>: With bigger block sizes,
+              Bitcoin Cash is faster than Bitcoin.
+            </li>
+            <li>
+              <strong>Dogecoin (DOGE)</strong>: Originally a meme
+              cryptocurrency, Dogecoin is now a popular option at
+              <strong>7Bit Casino</strong>.
+            </li>
+            <li>
+              <strong>Binance Coin (BNB)</strong>: Binance Coin has low fees,
+              and <strong>7Bit Casino</strong> supports it.
+            </li>
+            <li>
+              <strong>Ripple (XRP)</strong>: Ripple is the fastest, good for
+              players who want fast transfers.
+            </li>
+          </ul>
 
-        <h2>Fiat Payment Methods</h2>
+          <h3>Benefits of Crypto Payments:</h3>
+          <ul>
+            <li>
+              <strong>Instant Processing</strong>: Crypto transactions are
+              processed in seconds, you get instant access to your funds.
+            </li>
+            <li>
+              <strong>Enhanced Security and Privacy</strong>: Cryptos are more
+              private and secure, reducing the risk of fraud.
+            </li>
+          </ul>
 
-        <p>
-          <strong>7Bit Casino</strong> also has traditional
-          <strong>fiat payment</strong> options for those who prefer the old
-          ways:
-        </p>
+          <h2>Fiat Payment Methods</h2>
 
-        <ul>
-          <li>
-            <strong>Visa and Mastercard</strong>: These credit and debit cards
-            are widely accepted and secure for deposits.
-          </li>
-          <li>
-            <strong>Bank Transfer (including Rapid Transfer)</strong>: For
-            direct bank transactions, processing time is 1-3 business days for
-            withdrawals.
-          </li>
-          <li>
-            <strong>E-Wallets</strong> :
-            <ul>
-              <li>
-                <strong>Neteller</strong> : Fast processing and strong security.
-              </li>
-              <li><strong>Skrill</strong> : Quick and user-friendly.</li>
-              <li>
-                <strong>MuchBetter</strong>: Mobile payment solution gaining
-                popularity for ease of use and security.
-              </li>
-            </ul>
-          </li>
-          <li>
-            <strong>Prepaid Cards</strong> :
-            <ul>
-              <li>
-                <strong>Neosurf</strong> : Deposit without linking to a bank
-                account, extra privacy.
-              </li>
-              <li>
-                <strong>AstroPay</strong> : Secure and fast, good for prepaid
-                card users.
-              </li>
-            </ul>
-          </li>
-        </ul>
+          <p>
+            <strong>7Bit Casino</strong> also has traditional
+            <strong>fiat payment</strong> options for those who prefer the old
+            ways:
+          </p>
 
-        <h3>Benefits of Fiat Payment Methods:</h3>
-        <ul>
-          <li>
-            <strong>Many Options</strong> : You have many payment methods to
-            choose from, finding what suits you best.
-          </li>
-          <li>
-            <strong>Secure</strong> : Fiat payments are encrypted, ensuring your
-            financial info is safe.
-          </li>
-        </ul>
+          <ul>
+            <li>
+              <strong>Visa and Mastercard</strong>: These credit and debit cards
+              are widely accepted and secure for deposits.
+            </li>
+            <li>
+              <strong>Bank Transfer (including Rapid Transfer)</strong>: For
+              direct bank transactions, processing time is 1-3 business days for
+              withdrawals.
+            </li>
+            <li>
+              <strong>E-Wallets</strong> :
+              <ul>
+                <li>
+                  <strong>Neteller</strong> : Fast processing and strong
+                  security.
+                </li>
+                <li><strong>Skrill</strong> : Quick and user-friendly.</li>
+                <li>
+                  <strong>MuchBetter</strong>: Mobile payment solution gaining
+                  popularity for ease of use and security.
+                </li>
+              </ul>
+            </li>
+            <li>
+              <strong>Prepaid Cards</strong> :
+              <ul>
+                <li>
+                  <strong>Neosurf</strong> : Deposit without linking to a bank
+                  account, extra privacy.
+                </li>
+                <li>
+                  <strong>AstroPay</strong> : Secure and fast, good for prepaid
+                  card users.
+                </li>
+              </ul>
+            </li>
+          </ul>
 
-        <h2>Processing Time and Limits</h2>
+          <h3>Benefits of Fiat Payment Methods:</h3>
+          <ul>
+            <li>
+              <strong>Many Options</strong> : You have many payment methods to
+              choose from, finding what suits you best.
+            </li>
+            <li>
+              <strong>Secure</strong> : Fiat payments are encrypted, ensuring
+              your financial info is safe.
+            </li>
+          </ul>
 
-        <p>
-          <strong>Deposit Time</strong>: Most deposits, whether crypto or fiat,
-          are processed instantly, so you can start playing right away.
-        </p>
-        <p>
-          <strong>Withdrawal Time</strong>: Crypto withdrawals are processed in
-          a few minutes, while <strong>fiat withdrawals</strong> take 1-3
-          business days depending on the method.
-        </p>
-        <p>
-          <strong>Limits</strong>: Minimum deposit is $10 or equivalent in
-          crypto. Withdrawal limits range from $20 to $4,000 per transaction.
-        </p>
+          <h2>Processing Time and Limits</h2>
 
-        <h2>Why 7Bit Casino?</h2>
+          <p>
+            <strong>Deposit Time</strong>: Most deposits, whether crypto or
+            fiat, are processed instantly, so you can start playing right away.
+          </p>
+          <p>
+            <strong>Withdrawal Time</strong>: Crypto withdrawals are processed
+            in a few minutes, while <strong>fiat withdrawals</strong> take 1-3
+            business days depending on the method.
+          </p>
+          <p>
+            <strong>Limits</strong>: Minimum deposit is $10 or equivalent in
+            crypto. Withdrawal limits range from $20 to $4,000 per transaction.
+          </p>
 
-        <p>
-          <strong>7Bit Casino</strong> offers many payment options, so you can
-          choose what suits you best. Crypto or fiat,
-          <strong>7Bit Casino</strong> has a secure way to manage your funds.
-        </p>
+          <h2>Why 7Bit Casino?</h2>
 
-        <p>
-          For fast transactions and a variety of payment options,
-          <strong>7Bit Casino</strong> is the way to go. Check out all payment
-          methods and start playing at <strong>7Bit Casino</strong> today.
-        </p>
+          <p>
+            <strong>7Bit Casino</strong> offers many payment options, so you can
+            choose what suits you best. Crypto or fiat,
+            <strong>7Bit Casino</strong> has a secure way to manage your funds.
+          </p>
+
+          <p>
+            For fast transactions and a variety of payment options,
+            <strong>7Bit Casino</strong> is the way to go. Check out all payment
+            methods and start playing at <strong>7Bit Casino</strong> today.
+          </p>
+        </div>
       </div>
 
       <footer class="bottom-page">
