--- a/Reviews-page/BC.Game/Payments/index.html
+++ b/Reviews-page/BC.Game/Payments/index.html
@@ -260,202 +260,208 @@
 
   -->
     <section class="casino-allInfo">
-      <div class="casino-banner">
-        <a
-          href="https://bc.game/i-2boyjret5-n/"
-          aria-label="Read more about Bc.Game"
-          ><img
-            class="responsive-gif"
-            src="/img/news-banners/BCGAMES-Banner.gif"
-            alt=" bcGame Banner"
-        /></a>
-      </div>
-
-      <div class="casino-infoLogo">
-        <div class="logo-box">
-          <img src="/img/BC-Game.webp" alt="BC>Game logo" />
+      <div class="info-Block">
+        <div class="casino-banner">
+          <a
+            href="https://bc.game/i-2boyjret5-n/"
+            aria-label="Read more about Bc.Game"
+            ><img
+              class="responsive-gif"
+              src="/img/news-banners/BCGAMES-Banner.gif"
+              alt=" bcGame Banner"
+          /></a>
         </div>
-      </div>
-      <div class="play-now">
-        <a
-          href="https://bc.game/i-2boyjret5-n/"
-          aria-label="Read more about B7Bit"
-          ><button>Play Now</button></a
-        >
-      </div>
 
-      <div class="tab-info">
-        <a href="/Reviews-page/BC.Game/" class="tablinks">
-          <button>Overview</button>
-        </a>
-        <a href="/Reviews-page/BC.Game/Bonus/" class="tablinks">
-          <button>Bonuses</button>
-        </a>
-        <a href="/Reviews-page/BC.Game/Games/" class="tablinks">
-          <button>Games</button>
-        </a>
-        <a href="/Reviews-page/BC.Game/Payments/" class="tablinks">
-          <button>Payments</button>
-        </a>
-      </div>
+        <div class="casino-infoLogo">
+          <div class="logo-box">
+            <img src="/img/BC-Game.webp" alt="BC>Game logo" />
+          </div>
+        </div>
+        <div class="play-now">
+          <a
+            href="https://bc.game/i-2boyjret5-n/"
+            aria-label="Read more about B7Bit"
+            ><button>Play Now</button></a
+          >
+        </div>
 
-      <!-- Tab content -->
+        <div class="tab-info">
+          <a href="/Reviews-page/BC.Game/" class="tablinks">
+            <button>Overview</button>
+          </a>
+          <a href="/Reviews-page/BC.Game/Bonus/" class="tablinks">
+            <button>Bonuses</button>
+          </a>
+          <a href="/Reviews-page/BC.Game/Games/" class="tablinks">
+            <button>Games</button>
+          </a>
+          <a href="/Reviews-page/BC.Game/Payments/" class="tablinks">
+            <button>Payments</button>
+          </a>
+        </div>
 
-      <div id="Payments" class="tabcontent-info">
-        <h1>BC Game Payment Methods: Your Guide to Crypto and FIAT Options</h1>
+        <!-- Tab content -->
 
-        <p>
-          Welcome to <strong>BC Game</strong>, where we offer a wide range of
-          payment methods to make your gaming experience as smooth as possible.
-          Whether you're a fan of <strong>cryptocurrency</strong> or prefer
-          <strong>FIAT</strong>, we’ve got you covered. Here’s everything you
-          need to know:
-        </p>
+        <div id="Payments" class="tabcontent-info">
+          <h1>
+            BC Game Payment Methods: Your Guide to Crypto and FIAT Options
+          </h1>
 
-        <h2>Cryptocurrency Payment Methods</h2>
+          <p>
+            Welcome to <strong>BC Game</strong>, where we offer a wide range of
+            payment methods to make your gaming experience as smooth as
+            possible. Whether you're a fan of <strong>cryptocurrency</strong> or
+            prefer <strong>FIAT</strong>, we’ve got you covered. Here’s
+            everything you need to know:
+          </p>
 
-        <p>
-          If you're into <strong>cryptocurrency</strong>, BC Game has you sorted
-          with support for over 40 different options. Whether you’re depositing
-          or withdrawing, you'll find a crypto that fits your needs. Some
-          popular choices include:
-        </p>
+          <h2>Cryptocurrency Payment Methods</h2>
 
-        <ul>
-          <li><strong>Litecoin (LTC)</strong></li>
-          <li><strong>Bitcoin Cash (BCH)</strong></li>
-          <li><strong>Dogecoin (DOGE)</strong></li>
-          <li><strong>Ripple (XRP)</strong></li>
-          <li><strong>Tron (TRX)</strong></li>
-          <li><strong>EOS (EOS)</strong></li>
-          <li><strong>Tether (USDT)</strong></li>
-          <li><strong>Bitcoin (BTC)</strong></li>
-          <li><strong>Ethereum (ETH)</strong></li>
-        </ul>
+          <p>
+            If you're into <strong>cryptocurrency</strong>, BC Game has you
+            sorted with support for over 40 different options. Whether you’re
+            depositing or withdrawing, you'll find a crypto that fits your
+            needs. Some popular choices include:
+          </p>
 
-        <p>
-          The best part? <strong>Crypto deposits</strong> are usually processed
-          <strong>instantly</strong>, making it one of the fastest ways to get
-          your funds into your account. Plus, there are no deposit limits for
-          cryptocurrencies, giving you total flexibility.
-        </p>
+          <ul>
+            <li><strong>Litecoin (LTC)</strong></li>
+            <li><strong>Bitcoin Cash (BCH)</strong></li>
+            <li><strong>Dogecoin (DOGE)</strong></li>
+            <li><strong>Ripple (XRP)</strong></li>
+            <li><strong>Tron (TRX)</strong></li>
+            <li><strong>EOS (EOS)</strong></li>
+            <li><strong>Tether (USDT)</strong></li>
+            <li><strong>Bitcoin (BTC)</strong></li>
+            <li><strong>Ethereum (ETH)</strong></li>
+          </ul>
 
-        <h3>Cryptocurrency Minimum Withdrawal Limits</h3>
+          <p>
+            The best part? <strong>Crypto deposits</strong> are usually
+            processed <strong>instantly</strong>, making it one of the fastest
+            ways to get your funds into your account. Plus, there are no deposit
+            limits for cryptocurrencies, giving you total flexibility.
+          </p>
 
-        <p>
-          When it comes to withdrawing, here are the minimum amounts you need to
-          know for each cryptocurrency:
-        </p>
+          <h3>Cryptocurrency Minimum Withdrawal Limits</h3>
 
-        <ul>
-          <li><strong>Bitcoin (BTC):</strong> 0.001022 BTC</li>
-          <li><strong>Litecoin (LTC):</strong> 0.11 LTC</li>
-          <li><strong>Ethereum (ETH):</strong> 0.022 ETH</li>
-          <li><strong>Tether (USDT):</strong> 23.597824 USDT</li>
-          <li><strong>Binance Coin (BNB):</strong> 0.051 BNB</li>
-          <li><strong>Tron (TRX):</strong> 201 TRX</li>
-          <li><strong>Ripple (XRP):</strong> 22.25 XRP</li>
-          <li><strong>Dogecoin (DOGE):</strong> 97 DOGE</li>
-        </ul>
+          <p>
+            When it comes to withdrawing, here are the minimum amounts you need
+            to know for each cryptocurrency:
+          </p>
 
-        <p>
-          Just make sure you meet these minimums before requesting a withdrawal!
-        </p>
+          <ul>
+            <li><strong>Bitcoin (BTC):</strong> 0.001022 BTC</li>
+            <li><strong>Litecoin (LTC):</strong> 0.11 LTC</li>
+            <li><strong>Ethereum (ETH):</strong> 0.022 ETH</li>
+            <li><strong>Tether (USDT):</strong> 23.597824 USDT</li>
+            <li><strong>Binance Coin (BNB):</strong> 0.051 BNB</li>
+            <li><strong>Tron (TRX):</strong> 201 TRX</li>
+            <li><strong>Ripple (XRP):</strong> 22.25 XRP</li>
+            <li><strong>Dogecoin (DOGE):</strong> 97 DOGE</li>
+          </ul>
 
-        <h2>FIAT Payment Methods</h2>
+          <p>
+            Just make sure you meet these minimums before requesting a
+            withdrawal!
+          </p>
 
-        <p>
-          If <strong>FIAT currency</strong> is more your style, BC Game offers
-          several options for deposits and withdrawals. Depending on where you
-          are, you can use:
-        </p>
+          <h2>FIAT Payment Methods</h2>
 
-        <ul>
-          <li>
-            <strong>Credit/Debit Cards:</strong> Deposits are
-            <strong>instant</strong>, though you should check if your card
-            provider charges any fees.
-          </li>
-          <li>
-            <strong>eWallets:</strong> Also <strong>instant</strong>, with no
-            fees from BC Game, but be sure to check for any provider fees.
-          </li>
-          <li>
-            <strong>Bank Transfers:</strong> These might take up to
-            <strong>24 hours</strong>, but usually come with no extra fees.
-          </li>
-          <li>
-            <strong>Prepaid Cards:</strong> Deposits are
-            <strong>instant</strong> and generally fee-free.
-          </li>
-        </ul>
+          <p>
+            If <strong>FIAT currency</strong> is more your style, BC Game offers
+            several options for deposits and withdrawals. Depending on where you
+            are, you can use:
+          </p>
 
-        <h3>FIAT Withdrawal Options</h3>
+          <ul>
+            <li>
+              <strong>Credit/Debit Cards:</strong> Deposits are
+              <strong>instant</strong>, though you should check if your card
+              provider charges any fees.
+            </li>
+            <li>
+              <strong>eWallets:</strong> Also <strong>instant</strong>, with no
+              fees from BC Game, but be sure to check for any provider fees.
+            </li>
+            <li>
+              <strong>Bank Transfers:</strong> These might take up to
+              <strong>24 hours</strong>, but usually come with no extra fees.
+            </li>
+            <li>
+              <strong>Prepaid Cards:</strong> Deposits are
+              <strong>instant</strong> and generally fee-free.
+            </li>
+          </ul>
 
-        <p>
-          For those using <strong>FIAT</strong> currency, BC Game offers several
-          withdrawal methods. Here’s a quick look at what you can choose from:
-        </p>
+          <h3>FIAT Withdrawal Options</h3>
 
-        <ul>
-          <li>
-            <strong>PayTM:</strong> Takes around <strong>449 minutes</strong>.
-            The fee is <strong>4.75% + $ 6</strong>, with a minimum withdrawal
-            of <strong>113 $</strong> and a maximum of
-            <strong>20,000 $</strong>.
-          </li>
-          <li>
-            <strong>PayOut UPI:</strong> Processes in about
-            <strong>169 minutes</strong> with the same fee structure:
-            <strong>4.75% + $ 6</strong>. Minimum withdrawal is
-            <strong>113 $</strong>, and the maximum is
-            <strong>100,000 $</strong>.
-          </li>
-          <li>
-            <strong>Bank Transfer:</strong> Completed within
-            <strong>39 minutes</strong>, with a fee of
-            <strong>4.75% + $ 6</strong>. The minimum withdrawal is
-            <strong>1,054 $</strong>, and the maximum is
-            <strong>50,000 $</strong>.
-          </li>
-        </ul>
+          <p>
+            For those using <strong>FIAT</strong> currency, BC Game offers
+            several withdrawal methods. Here’s a quick look at what you can
+            choose from:
+          </p>
 
-        <p>
-          These options make it easy to access your funds quickly. Just keep in
-          mind the associated fees and limits.
-        </p>
+          <ul>
+            <li>
+              <strong>PayTM:</strong> Takes around <strong>449 minutes</strong>.
+              The fee is <strong>4.75% + $ 6</strong>, with a minimum withdrawal
+              of <strong>113 $</strong> and a maximum of
+              <strong>20,000 $</strong>.
+            </li>
+            <li>
+              <strong>PayOut UPI:</strong> Processes in about
+              <strong>169 minutes</strong> with the same fee structure:
+              <strong>4.75% + $ 6</strong>. Minimum withdrawal is
+              <strong>113 $</strong>, and the maximum is
+              <strong>100,000 $</strong>.
+            </li>
+            <li>
+              <strong>Bank Transfer:</strong> Completed within
+              <strong>39 minutes</strong>, with a fee of
+              <strong>4.75% + $ 6</strong>. The minimum withdrawal is
+              <strong>1,054 $</strong>, and the maximum is
+              <strong>50,000 $</strong>.
+            </li>
+          </ul>
 
-        <h3>Deposit and Withdrawal Limits</h3>
+          <p>
+            These options make it easy to access your funds quickly. Just keep
+            in mind the associated fees and limits.
+          </p>
 
-        <p>
-          <strong>Cryptocurrency Deposits:</strong> Enjoy the freedom of
-          <strong>no deposit limits</strong> for crypto, allowing for both large
-          and small transactions.
-        </p>
+          <h3>Deposit and Withdrawal Limits</h3>
 
-        <p>
-          <strong>FIAT Deposits:</strong> For bonuses, the
-          <strong>minimum deposit</strong> is <strong>$10</strong>, while the
-          maximum is usually around <strong>$1,000</strong>.
-        </p>
+          <p>
+            <strong>Cryptocurrency Deposits:</strong> Enjoy the freedom of
+            <strong>no deposit limits</strong> for crypto, allowing for both
+            large and small transactions.
+          </p>
 
-        <p>
-          If you have any questions about limits or fees, don’t hesitate to
-          reach out to BC Game’s <strong>customer support</strong> for help.
-        </p>
+          <p>
+            <strong>FIAT Deposits:</strong> For bonuses, the
+            <strong>minimum deposit</strong> is <strong>$10</strong>, while the
+            maximum is usually around <strong>$1,000</strong>.
+          </p>
 
-        <h2>Summary</h2>
+          <p>
+            If you have any questions about limits or fees, don’t hesitate to
+            reach out to BC Game’s <strong>customer support</strong> for help.
+          </p>
 
-        <p>
-          At <strong>BC Game</strong>, whether you’re using
-          <strong>cryptocurrency</strong> or <strong>FIAT</strong>, we’ve got a
-          range of payment options to fit your needs. Enjoy
-          <strong>instant crypto deposits</strong> with no limits or choose from
-          secure and fast FIAT methods like <strong>PayTM</strong>,
-          <strong>UPI</strong>, and <strong>bank transfers</strong>. With clear
-          information on limits and fees, you can have a smooth and enjoyable
-          gaming experience.
-        </p>
+          <h2>Summary</h2>
+
+          <p>
+            At <strong>BC Game</strong>, whether you’re using
+            <strong>cryptocurrency</strong> or <strong>FIAT</strong>, we’ve got
+            a range of payment options to fit your needs. Enjoy
+            <strong>instant crypto deposits</strong> with no limits or choose
+            from secure and fast FIAT methods like <strong>PayTM</strong>,
+            <strong>UPI</strong>, and <strong>bank transfers</strong>. With
+            clear information on limits and fees, you can have a smooth and
+            enjoyable gaming experience.
+          </p>
+        </div>
       </div>
 
       <footer class="bottom-page">
