--- a/Reviews-page/BetFury/Games/index.html
+++ b/Reviews-page/BetFury/Games/index.html
@@ -260,205 +260,214 @@
 
   -->
     <section class="casino-allInfo">
-      <div class="casino-banner">
-        <a
-          href="https://betfury.bet/d345852ac"
-          aria-label="Read more about Roobet"
-          ><img
-            src="/img/news-banners/BetFury-banner.webp"
-            alt="betfury banner"
-        /></a>
-      </div>
-
-      <div class="casino-infoLogo">
-        <div class="logo-box">
-          <img src="/img/BetFury-logo.webp" loading="lazy" alt="betfury logo" />
-        </div>
-      </div>
-      <div class="play-now">
-        <a
-          href="https://betfury.bet/d345852ac"
-          aria-label="Read more about Roobet"
-          ><button>Play Now</button></a
-        >
-      </div>
-
-      <div class="tab-info">
-        <a href="/Reviews-page/BetFury/" class="tablinks">
-          <button>Overview</button>
-        </a>
-        <a href="/Reviews-page/BetFury/Bonus/" class="tablinks">
-          <button>Bonuses</button>
-        </a>
-        <a href="/Reviews-page/BetFury/Games/" class="tablinks">
-          <button>Games</button>
-        </a>
-        <a href="/Reviews-page/BetFury/Payments/" class="tablinks">
-          <button>Payments</button>
-        </a>
-      </div>
-
-      <!-- Tab content -->
-
-      <div id="Games" class="tabcontent-info">
-        <h1>Explore the Best Slot Games at BetFury Casino: A Detailed Guide</h1>
-        <p>
-          BetFury Casino is a premier destination for slot enthusiasts, offering
-          an extensive collection of online slot games tailored to various
-          preferences. Whether you’re searching for classic slots, video slots,
-          or progressive jackpots, BetFury Casino has something for everyone.
-          Here’s an in-depth look at what makes BetFury Casino stand out in the
-          world of online slots.
-        </p>
-
-        <h2>Diverse Range of Slot Games</h2>
-        <p>
-          <strong>Themes and Game Styles</strong>: BetFury Casino provides a
-          rich variety of slot games, covering themes that range from exotic
-          adventures to high-energy excitement. With everything from vibrant
-          modern video slots to innovative new titles, the casino caters to all
-          types of players.
-        </p>
-        <div class="review-img">
-          <img
-            src="/img/news-banners/betfury-games.webp"
-            loading="lazy"
-            alt="betfury welcome bonus"
-          />
+      <div class="info-Block">
+        <div class="casino-banner">
+          <a
+            href="https://betfury.bet/d345852ac"
+            aria-label="Read more about Roobet"
+            ><img
+              src="/img/news-banners/BetFury-banner.webp"
+              alt="betfury banner"
+          /></a>
         </div>
 
-        <h3>Top 5 Popular Slot Games:</h3>
-        <ul>
-          <li>
-            <strong>Green Chilli 2</strong> by <strong>Betsoft</strong>: This
-            lively slot game brings a spicy Mexican theme to life with colorful
-            graphics and engaging features. Enjoy the vibrant atmosphere and
-            potential for big wins with its exciting bonus rounds and
-            multipliers.
-          </li>
-          <li>
-            <strong>Tiger Gems</strong> by <strong>Red Tiger Gaming</strong>:
-            Immerse yourself in the lush world of the jungle with this slot’s
-            stunning visuals and dynamic gameplay. The game features a unique
-            gem-based mechanic and thrilling bonus opportunities.
-          </li>
-          <li>
-            <strong>Super Sticky Piggy</strong> by
-            <strong>Nolimit Cityt</strong> : Join the fun with this whimsical
-            slot that features adorable piggy characters and sticky wilds. The
-            game offers a playful theme combined with potential for lucrative
-            rewards.
-          </li>
-          <li>
-            <strong>Coin Up</strong> by <strong>Betsoft</strong> BGaming: This
-            game takes you on a treasure hunt with its classic arcade style and
-            simple mechanics. Coin Up provides straightforward gameplay with
-            chances for generous payouts.
-          </li>
-          <li>
-            <strong>Alien Fruits 2</strong> by <strong>Amatic</strong> :
-            Experience an out-of-this-world adventure with this alien-themed
-            slot. Alien Fruits 2 combines fruity fun with extraterrestrial
-            excitement, offering unique features and rewarding gameplay.
-          </li>
-          <li>
-            <strong>Bonanza Billion</strong> by <strong>High 5 Games</strong> :
-            Dive into a high-energy slot with a fantastic theme and big win
-            potential. Bonanza Billion features engaging graphics and a range of
-            exciting bonus features.
-          </li>
-        </ul>
+        <div class="casino-infoLogo">
+          <div class="logo-box">
+            <img
+              src="/img/BetFury-logo.webp"
+              loading="lazy"
+              alt="betfury logo"
+            />
+          </div>
+        </div>
+        <div class="play-now">
+          <a
+            href="https://betfury.bet/d345852ac"
+            aria-label="Read more about Roobet"
+            ><button>Play Now</button></a
+          >
+        </div>
 
-        <h2>Leading Software Providers</h2>
-        <p>
-          <strong>Top Slot Game Providers</strong>: BetFury Casino partners with
-          industry-leading software developers like Betsoft, Red Tiger Gaming,
-          Nolimit City, BGaming, Amatic, and High 5 Games. These partnerships
-          ensure players enjoy high-quality graphics, innovative features, and
-          reliable gameplay.
-        </p>
+        <div class="tab-info">
+          <a href="/Reviews-page/BetFury/" class="tablinks">
+            <button>Overview</button>
+          </a>
+          <a href="/Reviews-page/BetFury/Bonus/" class="tablinks">
+            <button>Bonuses</button>
+          </a>
+          <a href="/Reviews-page/BetFury/Games/" class="tablinks">
+            <button>Games</button>
+          </a>
+          <a href="/Reviews-page/BetFury/Payments/" class="tablinks">
+            <button>Payments</button>
+          </a>
+        </div>
 
-        <h2>How to Play BetFury Slots: A Step-by-Step Guide</h2>
+        <!-- Tab content -->
 
-        <p>
-          If you’re new to online slots, don’t worry! Here’s a simple guide to
-          get you started on BetFuty:
-        </p>
+        <div id="Games" class="tabcontent-info">
+          <h1>
+            Explore the Best Slot Games at BetFury Casino: A Detailed Guide
+          </h1>
+          <p>
+            BetFury Casino is a premier destination for slot enthusiasts,
+            offering an extensive collection of online slot games tailored to
+            various preferences. Whether you’re searching for classic slots,
+            video slots, or progressive jackpots, BetFury Casino has something
+            for everyone. Here’s an in-depth look at what makes BetFury Casino
+            stand out in the world of online slots.
+          </p>
 
-        <ol>
-          <li>
-            <strong>Sign Up for a BetFury Account:</strong> Click the
-            <a
-              href="https://betfury.bet/d345852ac"
-              aria-label="Read more about BetFury"
-              >Sign Up</a
-            >
-            button and complete the registration form with your details.
-          </li>
-          <li>
-            <strong>Make Your First Deposit:</strong> Use one of the supported
-            cryptocurrencies to fund your account.
-          </li>
-          <li>
-            <strong>Claim Your Welcome Bonus:</strong> Get a bonus that matches
-            your initial deposit with promo credit.
-          </li>
-          <li>
-            <strong>Access the Slots Section:</strong> Navigate to the Slots tab
-            via the sidebar.
-          </li>
-          <li>
-            <strong>Choose a Slot Game:</strong> Select the slot you want to
-            play.
-          </li>
-          <li>
-            <strong>Set Your Stake and Spin the Reels:</strong> Enter your
-            desired stake and start spinning to land winning combinations.
-          </li>
-        </ol>
+          <h2>Diverse Range of Slot Games</h2>
+          <p>
+            <strong>Themes and Game Styles</strong>: BetFury Casino provides a
+            rich variety of slot games, covering themes that range from exotic
+            adventures to high-energy excitement. With everything from vibrant
+            modern video slots to innovative new titles, the casino caters to
+            all types of players.
+          </p>
+          <div class="review-img">
+            <img
+              src="/img/news-banners/betfury-games.webp"
+              loading="lazy"
+              alt="betfury welcome bonus"
+            />
+          </div>
 
-        <h2>High RTP Slots and Exclusive Titles</h2>
-        <p>
-          <strong>High RTP Online Slots</strong>: Many slot games at BetFury
-          Casino boast high Return to Player (RTP) percentages, typically around
-          96% or higher, offering players a better chance of winning over time.
-        </p>
-        <p>
-          <strong>Exclusive Slot Games</strong>: The casino also features
-          exclusive online slots that can’t be found elsewhere, providing a
-          unique and exciting gaming experience for its players.
-        </p>
+          <h3>Top 5 Popular Slot Games:</h3>
+          <ul>
+            <li>
+              <strong>Green Chilli 2</strong> by <strong>Betsoft</strong>: This
+              lively slot game brings a spicy Mexican theme to life with
+              colorful graphics and engaging features. Enjoy the vibrant
+              atmosphere and potential for big wins with its exciting bonus
+              rounds and multipliers.
+            </li>
+            <li>
+              <strong>Tiger Gems</strong> by <strong>Red Tiger Gaming</strong>:
+              Immerse yourself in the lush world of the jungle with this slot’s
+              stunning visuals and dynamic gameplay. The game features a unique
+              gem-based mechanic and thrilling bonus opportunities.
+            </li>
+            <li>
+              <strong>Super Sticky Piggy</strong> by
+              <strong>Nolimit Cityt</strong> : Join the fun with this whimsical
+              slot that features adorable piggy characters and sticky wilds. The
+              game offers a playful theme combined with potential for lucrative
+              rewards.
+            </li>
+            <li>
+              <strong>Coin Up</strong> by <strong>Betsoft</strong> BGaming: This
+              game takes you on a treasure hunt with its classic arcade style
+              and simple mechanics. Coin Up provides straightforward gameplay
+              with chances for generous payouts.
+            </li>
+            <li>
+              <strong>Alien Fruits 2</strong> by <strong>Amatic</strong> :
+              Experience an out-of-this-world adventure with this alien-themed
+              slot. Alien Fruits 2 combines fruity fun with extraterrestrial
+              excitement, offering unique features and rewarding gameplay.
+            </li>
+            <li>
+              <strong>Bonanza Billion</strong> by
+              <strong>High 5 Games</strong> : Dive into a high-energy slot with
+              a fantastic theme and big win potential. Bonanza Billion features
+              engaging graphics and a range of exciting bonus features.
+            </li>
+          </ul>
 
-        <h2>Seamless Mobile Compatibility</h2>
-        <p>
-          <strong>Mobile-Friendly Slots</strong>: All slot games at BetFury
-          Casino are fully optimized for mobile play, allowing you to enjoy your
-          favorite slots anytime, anywhere, without sacrificing quality or
-          performance.
-        </p>
+          <h2>Leading Software Providers</h2>
+          <p>
+            <strong>Top Slot Game Providers</strong>: BetFury Casino partners
+            with industry-leading software developers like Betsoft, Red Tiger
+            Gaming, Nolimit City, BGaming, Amatic, and High 5 Games. These
+            partnerships ensure players enjoy high-quality graphics, innovative
+            features, and reliable gameplay.
+          </p>
 
-        <h2>Free Play and Slot Bonuses</h2>
-        <p>
-          <strong>Demo Slot Games</strong>: Most slots at BetFury Casino offer a
-          demo mode, allowing players to try out the games for free before
-          wagering real money. This is a great way to get familiar with the
-          slot’s mechanics and features.
-        </p>
-        <p>
-          <strong>Slot Bonuses and Promotions</strong>: BetFury Casino
-          frequently offers slot-specific promotions, including free spins on
-          new or popular titles, giving players extra chances to win while
-          enjoying their favorite games.
-        </p>
+          <h2>How to Play BetFury Slots: A Step-by-Step Guide</h2>
 
-        <p>
-          By offering a comprehensive selection of popular and high-quality slot
-          games, BetFury Casino has established itself as a top choice for
-          players seeking an engaging and rewarding online gaming experience.
-          Whether you're a casual player or a high roller, BetFury Casino
-          provides the variety, quality, and winning potential that make it a
-          standout in the world of online slots.
-        </p>
+          <p>
+            If you’re new to online slots, don’t worry! Here’s a simple guide to
+            get you started on BetFuty:
+          </p>
+
+          <ol>
+            <li>
+              <strong>Sign Up for a BetFury Account:</strong> Click the
+              <a
+                href="https://betfury.bet/d345852ac"
+                aria-label="Read more about BetFury"
+                >Sign Up</a
+              >
+              button and complete the registration form with your details.
+            </li>
+            <li>
+              <strong>Make Your First Deposit:</strong> Use one of the supported
+              cryptocurrencies to fund your account.
+            </li>
+            <li>
+              <strong>Claim Your Welcome Bonus:</strong> Get a bonus that
+              matches your initial deposit with promo credit.
+            </li>
+            <li>
+              <strong>Access the Slots Section:</strong> Navigate to the Slots
+              tab via the sidebar.
+            </li>
+            <li>
+              <strong>Choose a Slot Game:</strong> Select the slot you want to
+              play.
+            </li>
+            <li>
+              <strong>Set Your Stake and Spin the Reels:</strong> Enter your
+              desired stake and start spinning to land winning combinations.
+            </li>
+          </ol>
+
+          <h2>High RTP Slots and Exclusive Titles</h2>
+          <p>
+            <strong>High RTP Online Slots</strong>: Many slot games at BetFury
+            Casino boast high Return to Player (RTP) percentages, typically
+            around 96% or higher, offering players a better chance of winning
+            over time.
+          </p>
+          <p>
+            <strong>Exclusive Slot Games</strong>: The casino also features
+            exclusive online slots that can’t be found elsewhere, providing a
+            unique and exciting gaming experience for its players.
+          </p>
+
+          <h2>Seamless Mobile Compatibility</h2>
+          <p>
+            <strong>Mobile-Friendly Slots</strong>: All slot games at BetFury
+            Casino are fully optimized for mobile play, allowing you to enjoy
+            your favorite slots anytime, anywhere, without sacrificing quality
+            or performance.
+          </p>
+
+          <h2>Free Play and Slot Bonuses</h2>
+          <p>
+            <strong>Demo Slot Games</strong>: Most slots at BetFury Casino offer
+            a demo mode, allowing players to try out the games for free before
+            wagering real money. This is a great way to get familiar with the
+            slot’s mechanics and features.
+          </p>
+          <p>
+            <strong>Slot Bonuses and Promotions</strong>: BetFury Casino
+            frequently offers slot-specific promotions, including free spins on
+            new or popular titles, giving players extra chances to win while
+            enjoying their favorite games.
+          </p>
+
+          <p>
+            By offering a comprehensive selection of popular and high-quality
+            slot games, BetFury Casino has established itself as a top choice
+            for players seeking an engaging and rewarding online gaming
+            experience. Whether you're a casual player or a high roller, BetFury
+            Casino provides the variety, quality, and winning potential that
+            make it a standout in the world of online slots.
+          </p>
+        </div>
       </div>
 
       <footer class="bottom-page">
