--- a/Reviews-page/BetFury/Payments/index.html
+++ b/Reviews-page/BetFury/Payments/index.html
@@ -260,166 +260,174 @@
 
   -->
     <section class="casino-allInfo">
-      <div class="casino-banner">
-        <a
-          href="https://betfury.bet/d345852ac"
-          aria-label="Read more about Roobet"
-          ><img
-            src="/img/news-banners/BetFury-banner.webp"
-            alt="betfury banner"
-        /></a>
-      </div>
-
-      <div class="casino-infoLogo">
-        <div class="logo-box">
-          <img src="/img/BetFury-logo.webp" loading="lazy" alt="betfury logo" />
+      <div class="info-Block">
+        <div class="casino-banner">
+          <a
+            href="https://betfury.bet/d345852ac"
+            aria-label="Read more about Roobet"
+            ><img
+              src="/img/news-banners/BetFury-banner.webp"
+              alt="betfury banner"
+          /></a>
         </div>
-      </div>
-      <div class="play-now">
-        <a
-          href="https://betfury.bet/d345852ac"
-          aria-label="Read more about Roobet"
-          ><button>Play Now</button></a
-        >
-      </div>
 
-      <div class="tab-info">
-        <a href="/Reviews-page/BetFury/" class="tablinks">
-          <button>Overview</button>
-        </a>
-        <a href="/Reviews-page/BetFury/Bonus/" class="tablinks">
-          <button>Bonuses</button>
-        </a>
-        <a href="/Reviews-page/BetFury/Games/" class="tablinks">
-          <button>Games</button>
-        </a>
-        <a href="/Reviews-page/BetFury/Payments/" class="tablinks">
-          <button>Payments</button>
-        </a>
-      </div>
+        <div class="casino-infoLogo">
+          <div class="logo-box">
+            <img
+              src="/img/BetFury-logo.webp"
+              loading="lazy"
+              alt="betfury logo"
+            />
+          </div>
+        </div>
+        <div class="play-now">
+          <a
+            href="https://betfury.bet/d345852ac"
+            aria-label="Read more about Roobet"
+            ><button>Play Now</button></a
+          >
+        </div>
 
-      <!-- Tab content -->
+        <div class="tab-info">
+          <a href="/Reviews-page/BetFury/" class="tablinks">
+            <button>Overview</button>
+          </a>
+          <a href="/Reviews-page/BetFury/Bonus/" class="tablinks">
+            <button>Bonuses</button>
+          </a>
+          <a href="/Reviews-page/BetFury/Games/" class="tablinks">
+            <button>Games</button>
+          </a>
+          <a href="/Reviews-page/BetFury/Payments/" class="tablinks">
+            <button>Payments</button>
+          </a>
+        </div>
 
-      <div id="Payments" class="tabcontent-info">
-        <h1>Understanding BetFury Payments: A Comprehensive Guide</h1>
+        <!-- Tab content -->
 
-        <h2>Accepted Payment Methods at BetFury Casino</h2>
-        <p>
-          BetFury supports a diverse array of
-          <strong>payment methods</strong> to cater to different player
-          preferences. These include:
-        </p>
-        <ul>
-          <li>
-            <strong>Credit and Debit Cards</strong>: Traditional payment methods
-            such as Visa and MasterCard are accepted for both deposits and
-            withdrawals.
-          </li>
-          <li>
-            <strong>E-Wallets</strong>: Modern digital solutions like
-            <strong>PayPal</strong>, <strong>Neteller</strong>, and
-            <strong>Skrill</strong> offer quick and secure transactions.
-          </li>
-          <li>
-            <strong>Cryptocurrencies</strong>: For those who prefer digital
-            currencies, BetFury supports <strong>Bitcoin</strong>,
-            <strong>Ethereum</strong>, and other popular cryptocurrencies. This
-            option is ideal for players seeking
-            <strong>fast and anonymous transactions</strong>.
-          </li>
-        </ul>
-        <p>
-          This broad selection ensures that players from various regions can
-          easily find a payment method that suits their needs.
-        </p>
+        <div id="Payments" class="tabcontent-info">
+          <h1>Understanding BetFury Payments: A Comprehensive Guide</h1>
 
-        <h2>How to Deposit Funds on BetFury Casino</h2>
-        <p>
-          To get started, you need to<strong>
+          <h2>Accepted Payment Methods at BetFury Casino</h2>
+          <p>
+            BetFury supports a diverse array of
+            <strong>payment methods</strong> to cater to different player
+            preferences. These include:
+          </p>
+          <ul>
+            <li>
+              <strong>Credit and Debit Cards</strong>: Traditional payment
+              methods such as Visa and MasterCard are accepted for both deposits
+              and withdrawals.
+            </li>
+            <li>
+              <strong>E-Wallets</strong>: Modern digital solutions like
+              <strong>PayPal</strong>, <strong>Neteller</strong>, and
+              <strong>Skrill</strong> offer quick and secure transactions.
+            </li>
+            <li>
+              <strong>Cryptocurrencies</strong>: For those who prefer digital
+              currencies, BetFury supports <strong>Bitcoin</strong>,
+              <strong>Ethereum</strong>, and other popular cryptocurrencies.
+              This option is ideal for players seeking
+              <strong>fast and anonymous transactions</strong>.
+            </li>
+          </ul>
+          <p>
+            This broad selection ensures that players from various regions can
+            easily find a payment method that suits their needs.
+          </p>
+
+          <h2>How to Deposit Funds on BetFury Casino</h2>
+          <p>
+            To get started, you need to<strong>
+              <a
+                href="https://betfury.bet/d345852ac"
+                aria-label="Read more about Roobet"
+              >
+                an account</a
+              ></strong
+            >
+            with BetFury Casino. After registering, head to the payment section
+            where you can select from available
+            <strong>deposit methods</strong>. The process is designed to be
+            user-friendly, and the casino provides clear instructions for each
+            option. If you're searching for ways to
+            <strong>deposit funds quickly on BetFury</strong>, this
+            1344streamlined process ensures your account is funded efficiently.
+          </p>
+          <div class="missionU">
             <a
               href="https://betfury.bet/d345852ac"
-              aria-label="Read more about Roobet"
+              aria-label="Read more about  BetFury"
             >
-              an account</a
-            ></strong
-          >
-          with BetFury Casino. After registering, head to the payment section
-          where you can select from available <strong>deposit methods</strong>.
-          The process is designed to be user-friendly, and the casino provides
-          clear instructions for each option. If you're searching for ways to
-          <strong>deposit funds quickly on BetFury</strong>, this
-          1344streamlined process ensures your account is funded efficiently.
-        </p>
-        <div class="missionU">
-          <a
-            href="https://betfury.bet/d345852ac"
-            aria-label="Read more about  BetFury"
-          >
-            <img
-              src="/img/Betfury-deposit.webp"
-              loading="lazy"
-              alt=" BetFury img"
-          /></a>
+              <img
+                src="/img/Betfury-deposit.webp"
+                loading="lazy"
+                alt=" BetFury img"
+            /></a>
+          </div>
+          <h2>BetFury Withdrawal Process and Fees</h2>
+          <p>
+            Withdrawing your winnings from BetFury is straightforward. Simply
+            choose your preferred <strong>withdrawal method</strong> from the
+            available options and follow the instructions. It's important to
+            note that BetFury has specific
+            <strong>withdrawal processing times</strong> and fees that vary by
+            method. For the fastest access to your funds, consider using
+            e-wallets or cryptocurrencies, known for their quicker transaction
+            times compared to traditional bank transfers. This makes them ideal
+            if you’re looking for
+            <strong>fastest withdrawal methods at BetFury</strong>.
+          </p>
+          <div class="missionU">
+            <a
+              href="https://betfury.bet/d345852ac"
+              aria-label="Read more about  BetFury"
+            >
+              <img
+                src="/img/BetFury-withdrawal.webp"
+                loading="lazy"
+                alt=" BetFury img"
+            /></a>
+          </div>
+          <h2>BetFury Payment Security Measures</h2>
+          <p>
+            Security is a top priority at BetFury. The casino utilizes advanced
+            encryption technologies and secure payment gateways to protect all
+            financial transactions. Players can feel confident knowing that
+            their payment information is safe and secure. This commitment to
+            security is crucial for anyone concerned about
+            <strong>BetFury payment security measures</strong>.
+          </p>
+
+          <h2>Troubleshooting BetFury Payments</h2>
+          <p>
+            If you encounter issues with BetFury payments, the casino provides a
+            comprehensive troubleshooting guide. This guide addresses common
+            problems such as failed transactions or verification issues,
+            offering practical solutions to resolve them quickly. If you’re
+            experiencing difficulties, consult the
+            <strong>BetFury payment troubleshooting guide</strong> for
+            assistance.
+          </p>
+
+          <h2>Payment Bonuses and Promotions</h2>
+          <p>
+            BetFury Casino also features various bonuses and promotions related
+            to payments. Keep an eye out for special deposit bonuses, free
+            spins, and other promotional offers that can provide extra value to
+            your deposits. These incentives enhance your gaming experience and
+            are an excellent way to maximize your
+            <strong>BetFury payment bonuses and promotions</strong>.
+          </p>
+
+          <p>
+            For further details on BetFury’s payment options and processes,
+            visit the casino’s official website or reach out to their customer
+            support team.
+          </p>
         </div>
-        <h2>BetFury Withdrawal Process and Fees</h2>
-        <p>
-          Withdrawing your winnings from BetFury is straightforward. Simply
-          choose your preferred <strong>withdrawal method</strong> from the
-          available options and follow the instructions. It's important to note
-          that BetFury has specific
-          <strong>withdrawal processing times</strong> and fees that vary by
-          method. For the fastest access to your funds, consider using e-wallets
-          or cryptocurrencies, known for their quicker transaction times
-          compared to traditional bank transfers. This makes them ideal if
-          you’re looking for
-          <strong>fastest withdrawal methods at BetFury</strong>.
-        </p>
-        <div class="missionU">
-          <a
-            href="https://betfury.bet/d345852ac"
-            aria-label="Read more about  BetFury"
-          >
-            <img
-              src="/img/BetFury-withdrawal.webp"
-              loading="lazy"
-              alt=" BetFury img"
-          /></a>
-        </div>
-        <h2>BetFury Payment Security Measures</h2>
-        <p>
-          Security is a top priority at BetFury. The casino utilizes advanced
-          encryption technologies and secure payment gateways to protect all
-          financial transactions. Players can feel confident knowing that their
-          payment information is safe and secure. This commitment to security is
-          crucial for anyone concerned about
-          <strong>BetFury payment security measures</strong>.
-        </p>
-
-        <h2>Troubleshooting BetFury Payments</h2>
-        <p>
-          If you encounter issues with BetFury payments, the casino provides a
-          comprehensive troubleshooting guide. This guide addresses common
-          problems such as failed transactions or verification issues, offering
-          practical solutions to resolve them quickly. If you’re experiencing
-          difficulties, consult the
-          <strong>BetFury payment troubleshooting guide</strong> for assistance.
-        </p>
-
-        <h2>Payment Bonuses and Promotions</h2>
-        <p>
-          BetFury Casino also features various bonuses and promotions related to
-          payments. Keep an eye out for special deposit bonuses, free spins, and
-          other promotional offers that can provide extra value to your
-          deposits. These incentives enhance your gaming experience and are an
-          excellent way to maximize your
-          <strong>BetFury payment bonuses and promotions</strong>.
-        </p>
-
-        <p>
-          For further details on BetFury’s payment options and processes, visit
-          the casino’s official website or reach out to their customer support
-          team.
-        </p>
       </div>
 
       <footer class="bottom-page">
