--- a/Reviews-page/BetFury/index.html
+++ b/Reviews-page/BetFury/index.html
@@ -257,237 +257,244 @@
 
   -->
     <section class="casino-allInfo">
-      <div class="casino-banner">
-        <a
-          href="https://betfury.bet/d345852ac"
-          aria-label="Read more about Roobet"
-          ><img
-            src="/img/news-banners/BetFury-banner.webp"
-            alt="betfury banner"
-        /></a>
-      </div>
-
-      <div class="casino-infoLogo">
-        <div class="logo-box">
-          <img src="/img/BetFury-logo.webp" loading="lazy" alt="betfury logo" />
+      <div class="info-Block">
+        <div class="casino-banner">
+          <a
+            href="https://betfury.bet/d345852ac"
+            aria-label="Read more about Roobet"
+            ><img
+              src="/img/news-banners/BetFury-banner.webp"
+              alt="betfury banner"
+          /></a>
         </div>
-      </div>
-      <div class="play-now">
-        <a
-          href="https://betfury.bet/d345852ac"
-          aria-label="Read more about Roobet"
-          ><button>Play Now</button></a
-        >
-      </div>
 
-      <div class="tab-info">
-        <a href="/Reviews-page/BetFury/" class="tablinks">
-          <button>Overview</button>
-        </a>
-        <a href="/Reviews-page/BetFury/Bonus/" class="tablinks">
-          <button>Bonuses</button>
-        </a>
-        <a href="/Reviews-page/BetFury/Games/" class="tablinks">
-          <button>Games</button>
-        </a>
-        <a href="/Reviews-page/BetFury/Payments/" class="tablinks">
-          <button>Payments</button>
-        </a>
-      </div>
-
-      <!-- Tab content -->
-
-      <div id="Overview" class="tabcontent-info">
-        <div class="overview-button-container">
-          <div class="overview-button">
-            <p>Company</p>
-            <p>Universe B Games B.V</p>
+        <div class="casino-infoLogo">
+          <div class="logo-box">
+            <img
+              src="/img/BetFury-logo.webp"
+              loading="lazy"
+              alt="betfury logo"
+            />
           </div>
-          <div class="overview-button">
-            <p>Year Founded</p>
-            <p>2019</p>
-          </div>
-          <div class="overview-button">
-            <p>License</p>
-            <p>Curacao</p>
-          </div>
-          <div class="overview-button">
-            <p>Payout Speed</p>
-            <p>15 min</p>
-          </div>
-          <div class="overview-button">
-            <p>Minimum Deposit</p>
-            <p>0.05 mBTC</p>
-          </div>
-          <div class="overview-button">
-            <p>Withdrawal Limit</p>
-            <p>No Withdrawal Limits</p>
-          </div>
+        </div>
+        <div class="play-now">
+          <a
+            href="https://betfury.bet/d345852ac"
+            aria-label="Read more about Roobet"
+            ><button>Play Now</button></a
+          >
+        </div>
 
-          <div class="overview-button" id="card-tipe-container">
-            <p>Deposit Methods</p>
-            <div class="cardTipe-container">
-              <img
-                class="card-tipe-info"
-                src="/img/visa-logo.webp"
-                loading="lazy"
-                alt="visa logo"
-              />
+        <div class="tab-info">
+          <a href="/Reviews-page/BetFury/" class="tablinks">
+            <button>Overview</button>
+          </a>
+          <a href="/Reviews-page/BetFury/Bonus/" class="tablinks">
+            <button>Bonuses</button>
+          </a>
+          <a href="/Reviews-page/BetFury/Games/" class="tablinks">
+            <button>Games</button>
+          </a>
+          <a href="/Reviews-page/BetFury/Payments/" class="tablinks">
+            <button>Payments</button>
+          </a>
+        </div>
 
-              <img
-                class="card-tipe-info"
-                src="/img/mastercard-logo.webp"
-                loading="lazy"
-                alt="mastercard-logo"
-              />
+        <!-- Tab content -->
 
-              <img
-                class="card-tipe-info"
-                src="/img/skrill-logo.webp"
-                loading="lazy"
-                alt="skrill logo"
-              />
-
-              <img
-                class="card-tipe tipe4"
-                src="/img/AstroPay.webp"
-                loading="lazy"
-                alt="astropay icon"
-              />
-
-              <img
-                class="card-tipe"
-                src="/img/litecoin-logo.webp"
-                loading="lazy"
-                alt="litecoin logo"
-              />
-
-              <img
-                class="card-tipe"
-                src="/img/ethrtium-logo.webp"
-                loading="lazy"
-                alt="etherium logo"
-              />
-
-              <img
-                class="card-tipe"
-                id="bitCoin-logo"
-                src="/img/bit-coin-logo.webp"
-                loading="lazy"
-                alt="bitcoin logo"
-              />
+        <div id="Overview" class="tabcontent-info">
+          <div class="overview-button-container">
+            <div class="overview-button">
+              <p>Company</p>
+              <p>Universe B Games B.V</p>
             </div>
-          </div>
-          <div class="overview-summary">
-            <h1>BetFury Casino Overview</h1>
-            <p>
-              BetFury Casino is a fantastic online gaming destination where
-              players can dive into a wide range of slot games and enjoy
-              exciting bonuses. Whether you're a newcomer or a seasoned player,
-              BetFury has something special for everyone.
-            </p>
-            <div class="review-img">
-              <img
-                src="/img/news-banners/betfury-overview.webp"
-                loading="lazy"
-                alt="betfury welcome bonus"
-              />
+            <div class="overview-button">
+              <p>Year Founded</p>
+              <p>2019</p>
+            </div>
+            <div class="overview-button">
+              <p>License</p>
+              <p>Curacao</p>
+            </div>
+            <div class="overview-button">
+              <p>Payout Speed</p>
+              <p>15 min</p>
+            </div>
+            <div class="overview-button">
+              <p>Minimum Deposit</p>
+              <p>0.05 mBTC</p>
+            </div>
+            <div class="overview-button">
+              <p>Withdrawal Limit</p>
+              <p>No Withdrawal Limits</p>
             </div>
 
-            <h2>Diverse Slot Game Collection</h2>
-            <p>
-              At BetFury, you’ll find a colorful selection of slot games that
-              cater to all tastes:
-            </p>
-            <ul>
-              <li>
-                <strong>Green Chilli 2 by Betsoft:</strong> This lively slot
-                brings a vibrant Mexican fiesta to life with fun graphics and
-                exciting bonus features, including multipliers and free spins.
-              </li>
-              <li>
-                <strong>Tiger Gems by Red Tiger Gaming:</strong> Immerse
-                yourself in a lush jungle adventure with stunning visuals and a
-                unique gem-based mechanic that keeps the excitement high.
-              </li>
-              <li>
-                <strong>Super Sticky Piggy by Nolimit City:</strong> Enjoy a
-                whimsical experience with adorable pig characters and sticky
-                wilds, making for both fun gameplay and the chance to snag some
-                big rewards.
-              </li>
-              <li>
-                <strong>Coin Up by BGaming:</strong> Go on a treasure hunt with
-                this classic arcade-style slot, known for its straightforward
-                mechanics and great payout potential.
-              </li>
-              <li>
-                <strong>Alien Fruits 2 by Amatic:</strong> Take a trip to outer
-                space with this fruity alien adventure, blending unique features
-                and entertaining gameplay for a truly out-of-this-world
-                experience.
-              </li>
-            </ul>
+            <div class="overview-button" id="card-tipe-container">
+              <p>Deposit Methods</p>
+              <div class="cardTipe-container">
+                <img
+                  class="card-tipe-info"
+                  src="/img/visa-logo.webp"
+                  loading="lazy"
+                  alt="visa logo"
+                />
 
-            <h2>Attractive Bonuses and Promotions</h2>
-            <p>
-              BetFury Casino knows how to keep the fun going with a variety of
-              enticing bonuses:
-            </p>
-            <ul>
-              <li>
-                <strong>Welcome Bonus:</strong> New players can kick off their
-                journey with a generous welcome package of up to 590% in bonuses
-                and 225 free spins across their first three deposits. It’s a
-                great way to boost your bankroll right from the start!
-              </li>
-              <li>
-                <strong>Cashback Offers:</strong> If luck isn’t on your side,
-                don’t worry! BetFury offers cashback on losses, letting you
-                recover up to 25% of lost coins, which helps you stay in the
-                game longer.
-              </li>
-              <li>
-                <strong>Rakeback + Boost:</strong> Players earn rewards on every
-                bet placed, and with the Boost feature, you can multiply these
-                rewards, giving you even more value whether you win or lose.
-              </li>
-              <li>
-                <strong>Weekly and Monthly Bonuses:</strong> BetFury keeps the
-                excitement alive with bonuses based on your betting activity, so
-                the more you play, the more you can earn!
-              </li>
-            </ul>
+                <img
+                  class="card-tipe-info"
+                  src="/img/mastercard-logo.webp"
+                  loading="lazy"
+                  alt="mastercard-logo"
+                />
 
-            <h2>Secure Payment Methods</h2>
-            <p>
-              BetFury makes it easy to manage your funds with a variety of
-              payment options:
-            </p>
-            <ul>
-              <li>
-                <strong>Credit and Debit Cards:</strong> You can use Visa and
-                MasterCard for hassle-free deposits and withdrawals.
-              </li>
-              <li>
-                <strong>E-Wallets:</strong> Enjoy quick transactions with
-                services like PayPal, Neteller, and Skrill.
-              </li>
-              <li>
-                <strong>Cryptocurrencies:</strong> For those who prefer digital
-                currencies, BetFury supports popular options like Bitcoin and
-                Ethereum, offering fast and secure transactions.
-              </li>
-            </ul>
+                <img
+                  class="card-tipe-info"
+                  src="/img/skrill-logo.webp"
+                  loading="lazy"
+                  alt="skrill logo"
+                />
 
-            <h2>Mobile Compatibility and Customer Support</h2>
-            <p>
-              All of BetFury’s games are fully optimized for mobile devices, so
-              you can enjoy your favorite slots wherever you are. Plus, their
-              customer support team is always ready to help through live chat
-              and email, ensuring you get the assistance you need when you need
-              it.
-            </p>
+                <img
+                  class="card-tipe tipe4"
+                  src="/img/AstroPay.webp"
+                  loading="lazy"
+                  alt="astropay icon"
+                />
+
+                <img
+                  class="card-tipe"
+                  src="/img/litecoin-logo.webp"
+                  loading="lazy"
+                  alt="litecoin logo"
+                />
+
+                <img
+                  class="card-tipe"
+                  src="/img/ethrtium-logo.webp"
+                  loading="lazy"
+                  alt="etherium logo"
+                />
+
+                <img
+                  class="card-tipe"
+                  id="bitCoin-logo"
+                  src="/img/bit-coin-logo.webp"
+                  loading="lazy"
+                  alt="bitcoin logo"
+                />
+              </div>
+            </div>
+            <div class="overview-summary">
+              <h1>BetFury Casino Overview</h1>
+              <p>
+                BetFury Casino is a fantastic online gaming destination where
+                players can dive into a wide range of slot games and enjoy
+                exciting bonuses. Whether you're a newcomer or a seasoned
+                player, BetFury has something special for everyone.
+              </p>
+              <div class="review-img">
+                <img
+                  src="/img/news-banners/betfury-overview.webp"
+                  loading="lazy"
+                  alt="betfury welcome bonus"
+                />
+              </div>
+
+              <h2>Diverse Slot Game Collection</h2>
+              <p>
+                At BetFury, you’ll find a colorful selection of slot games that
+                cater to all tastes:
+              </p>
+              <ul>
+                <li>
+                  <strong>Green Chilli 2 by Betsoft:</strong> This lively slot
+                  brings a vibrant Mexican fiesta to life with fun graphics and
+                  exciting bonus features, including multipliers and free spins.
+                </li>
+                <li>
+                  <strong>Tiger Gems by Red Tiger Gaming:</strong> Immerse
+                  yourself in a lush jungle adventure with stunning visuals and
+                  a unique gem-based mechanic that keeps the excitement high.
+                </li>
+                <li>
+                  <strong>Super Sticky Piggy by Nolimit City:</strong> Enjoy a
+                  whimsical experience with adorable pig characters and sticky
+                  wilds, making for both fun gameplay and the chance to snag
+                  some big rewards.
+                </li>
+                <li>
+                  <strong>Coin Up by BGaming:</strong> Go on a treasure hunt
+                  with this classic arcade-style slot, known for its
+                  straightforward mechanics and great payout potential.
+                </li>
+                <li>
+                  <strong>Alien Fruits 2 by Amatic:</strong> Take a trip to
+                  outer space with this fruity alien adventure, blending unique
+                  features and entertaining gameplay for a truly
+                  out-of-this-world experience.
+                </li>
+              </ul>
+
+              <h2>Attractive Bonuses and Promotions</h2>
+              <p>
+                BetFury Casino knows how to keep the fun going with a variety of
+                enticing bonuses:
+              </p>
+              <ul>
+                <li>
+                  <strong>Welcome Bonus:</strong> New players can kick off their
+                  journey with a generous welcome package of up to 590% in
+                  bonuses and 225 free spins across their first three deposits.
+                  It’s a great way to boost your bankroll right from the start!
+                </li>
+                <li>
+                  <strong>Cashback Offers:</strong> If luck isn’t on your side,
+                  don’t worry! BetFury offers cashback on losses, letting you
+                  recover up to 25% of lost coins, which helps you stay in the
+                  game longer.
+                </li>
+                <li>
+                  <strong>Rakeback + Boost:</strong> Players earn rewards on
+                  every bet placed, and with the Boost feature, you can multiply
+                  these rewards, giving you even more value whether you win or
+                  lose.
+                </li>
+                <li>
+                  <strong>Weekly and Monthly Bonuses:</strong> BetFury keeps the
+                  excitement alive with bonuses based on your betting activity,
+                  so the more you play, the more you can earn!
+                </li>
+              </ul>
+
+              <h2>Secure Payment Methods</h2>
+              <p>
+                BetFury makes it easy to manage your funds with a variety of
+                payment options:
+              </p>
+              <ul>
+                <li>
+                  <strong>Credit and Debit Cards:</strong> You can use Visa and
+                  MasterCard for hassle-free deposits and withdrawals.
+                </li>
+                <li>
+                  <strong>E-Wallets:</strong> Enjoy quick transactions with
+                  services like PayPal, Neteller, and Skrill.
+                </li>
+                <li>
+                  <strong>Cryptocurrencies:</strong> For those who prefer
+                  digital currencies, BetFury supports popular options like
+                  Bitcoin and Ethereum, offering fast and secure transactions.
+                </li>
+              </ul>
+
+              <h2>Mobile Compatibility and Customer Support</h2>
+              <p>
+                All of BetFury’s games are fully optimized for mobile devices,
+                so you can enjoy your favorite slots wherever you are. Plus,
+                their customer support team is always ready to help through live
+                chat and email, ensuring you get the assistance you need when
+                you need it.
+              </p>
+            </div>
           </div>
         </div>
       </div>
