--- a/Reviews-page/CloudBet/Games/index.html
+++ b/Reviews-page/CloudBet/Games/index.html
@@ -260,202 +260,210 @@
 
   -->
     <section class="casino-allInfo">
-      <div class="casino-banner">
-        <a
-          href="  https://cldbt.cloud/go/en/landing/bitcoin-bonus?af_token=5938c4b2e77d3c3df0f143280e9c6d1a&aftm_campaign=all4wins&aftm_source=HP&aftm_medium=organic&aftm_content=HP  "
-          aria-label="Read more about CloudBet"
-        >
-          <img
-            src="/img/news-banners/cloudBet-banner.webp"
-            alt="cloudBet banner"
-          />
-        </a>
-      </div>
-
-      <div class="casino-infoLogo">
-        <div class="logo-box">
-          <img
-            src="/img/CloudBet-logo.webp"
-            loading="lazy"
-            alt="cloudBet logo"
-          />
+      <div class="info-Block">
+        <div class="casino-banner">
+          <a
+            href="  https://cldbt.cloud/go/en/landing/bitcoin-bonus?af_token=5938c4b2e77d3c3df0f143280e9c6d1a&aftm_campaign=all4wins&aftm_source=HP&aftm_medium=organic&aftm_content=HP  "
+            aria-label="Read more about CloudBet"
+          >
+            <img
+              src="/img/news-banners/cloudBet-banner.webp"
+              alt="cloudBet banner"
+            />
+          </a>
         </div>
-      </div>
-      <div class="play-now">
-        <a
-          href="  https://cldbt.cloud/go/en/landing/bitcoin-bonus?af_token=5938c4b2e77d3c3df0f143280e9c6d1a&aftm_campaign=all4wins&aftm_source=HP&aftm_medium=organic&aftm_content=HP  "
-          aria-label="Read more about CloudBet"
-        >
-          <button>Play Now</button>
-        </a>
-      </div>
 
-      <div class="tab-info">
-        <a href="/Reviews-page/CloudBet/" class="tablinks">
-          <button>Overview</button>
-        </a>
-        <a href="/Reviews-page/CloudBet/Bonus/" class="tablinks">
-          <button>Bonuses</button>
-        </a>
-        <a href="/Reviews-page/CloudBet/Games/" class="tablinks">
-          <button>Games</button>
-        </a>
-        <a href="/Reviews-page/CloudBet/Payments/" class="tablinks">
-          <button>Payments</button>
-        </a>
-      </div>
+        <div class="casino-infoLogo">
+          <div class="logo-box">
+            <img
+              src="/img/CloudBet-logo.webp"
+              loading="lazy"
+              alt="cloudBet logo"
+            />
+          </div>
+        </div>
+        <div class="play-now">
+          <a
+            href="  https://cldbt.cloud/go/en/landing/bitcoin-bonus?af_token=5938c4b2e77d3c3df0f143280e9c6d1a&aftm_campaign=all4wins&aftm_source=HP&aftm_medium=organic&aftm_content=HP  "
+            aria-label="Read more about CloudBet"
+          >
+            <button>Play Now</button>
+          </a>
+        </div>
 
-      <!-- Tab content -->
+        <div class="tab-info">
+          <a href="/Reviews-page/CloudBet/" class="tablinks">
+            <button>Overview</button>
+          </a>
+          <a href="/Reviews-page/CloudBet/Bonus/" class="tablinks">
+            <button>Bonuses</button>
+          </a>
+          <a href="/Reviews-page/CloudBet/Games/" class="tablinks">
+            <button>Games</button>
+          </a>
+          <a href="/Reviews-page/CloudBet/Payments/" class="tablinks">
+            <button>Payments</button>
+          </a>
+        </div>
 
-      <div id="Games" class="tabcontent-info">
-        <h1>Cloudbet – Games, Sports & Esports Betting</h1>
+        <!-- Tab content -->
 
-        <h2>Casino Games Section</h2>
+        <div id="Games" class="tabcontent-info">
+          <h1>Cloudbet – Games, Sports & Esports Betting</h1>
 
-        <h3>Game Library & Variety</h3>
-        <p>
-          Cloudbet provides a rich casino section with thousands of titles,
-          including:
-        </p>
-        <ul>
-          <li>
-            <strong>Slots:</strong> Classic three-reel, modern video slots, and
-            progressive jackpots.
-          </li>
-          <li>
-            <strong>Table Games:</strong> RNG-based blackjack, roulette,
-            baccarat, and poker variations.
-          </li>
-          <li>
-            <strong>Live-Dealer Tables:</strong> Real-time blackjack, roulette,
-            baccarat with human dealers.
-          </li>
-          <li>
-            <strong>Instant Action / Provably Fair Crypto Games:</strong>
-            Blockchain-based games allowing verification of fairness.
-          </li>
-          <li>
-            New game releases and progressive jackpot sections for added
-            variety.
-          </li>
-        </ul>
+          <h2>Casino Games Section</h2>
 
-        <h3>Game Providers & Features</h3>
-        <ul>
-          <li>
-            Partners with over 100 studios including Pragmatic Play, Play’n GO,
-            Evolution, Ezugi, and Nolimit City.
-          </li>
-          <li>High-roller sections for players seeking larger stakes.</li>
-          <li>Filtering options by provider, theme, and volatility.</li>
-          <li>Mobile-friendly gameplay for smooth experience on any device.</li>
-          <li>
-            Slot games generally contribute 100% towards bonus wagering; live
-            and table games contribute ~10%.
-          </li>
-        </ul>
+          <h3>Game Library & Variety</h3>
+          <p>
+            Cloudbet provides a rich casino section with thousands of titles,
+            including:
+          </p>
+          <ul>
+            <li>
+              <strong>Slots:</strong> Classic three-reel, modern video slots,
+              and progressive jackpots.
+            </li>
+            <li>
+              <strong>Table Games:</strong> RNG-based blackjack, roulette,
+              baccarat, and poker variations.
+            </li>
+            <li>
+              <strong>Live-Dealer Tables:</strong> Real-time blackjack,
+              roulette, baccarat with human dealers.
+            </li>
+            <li>
+              <strong>Instant Action / Provably Fair Crypto Games:</strong>
+              Blockchain-based games allowing verification of fairness.
+            </li>
+            <li>
+              New game releases and progressive jackpot sections for added
+              variety.
+            </li>
+          </ul>
 
-        <h3>Strengths & Considerations</h3>
-        <ul>
-          <li>
-            <strong>Strengths:</strong> Broad game selection, crypto-native
-            feel, provably fair options, mobile-ready, frequent updates.
-          </li>
-          <li>
-            <strong>Considerations:</strong> Live-dealer niches may be smaller
-            than specialist casinos; regional restrictions may apply; check game
-            contribution rates for bonuses.
-          </li>
-        </ul>
+          <h3>Game Providers & Features</h3>
+          <ul>
+            <li>
+              Partners with over 100 studios including Pragmatic Play, Play’n
+              GO, Evolution, Ezugi, and Nolimit City.
+            </li>
+            <li>High-roller sections for players seeking larger stakes.</li>
+            <li>Filtering options by provider, theme, and volatility.</li>
+            <li>
+              Mobile-friendly gameplay for smooth experience on any device.
+            </li>
+            <li>
+              Slot games generally contribute 100% towards bonus wagering; live
+              and table games contribute ~10%.
+            </li>
+          </ul>
 
-        <h2>Sports & Esports Betting</h2>
+          <h3>Strengths & Considerations</h3>
+          <ul>
+            <li>
+              <strong>Strengths:</strong> Broad game selection, crypto-native
+              feel, provably fair options, mobile-ready, frequent updates.
+            </li>
+            <li>
+              <strong>Considerations:</strong> Live-dealer niches may be smaller
+              than specialist casinos; regional restrictions may apply; check
+              game contribution rates for bonuses.
+            </li>
+          </ul>
 
-        <h3>Sportsbook Offering</h3>
-        <p>Cloudbet supports a wide range of sports globally, including:</p>
-        <ul>
-          <li>Football (Soccer)</li>
-          <li>Basketball</li>
-          <li>Tennis</li>
-          <li>American Football</li>
-          <li>Ice Hockey</li>
-        </ul>
-        <p>
-          Live (in-play) betting is available, allowing wagers during matches.
-          Users can access pre-match and live markets, including outcomes,
-          handicaps, totals/over-unders, and prop bets. Margins are competitive,
-          especially for major events.
-        </p>
+          <h2>Sports & Esports Betting</h2>
 
-        <h3>Esports Betting</h3>
-        <p>
-          Cloudbet includes a dedicated esports section covering major titles:
-        </p>
-        <ul>
-          <li>Counter-Strike 2 (CS2)</li>
-          <li>Dota 2</li>
-          <li>League of Legends</li>
-          <li>Valorant</li>
-          <li>FIFA</li>
-          <li>Rainbow Six</li>
-        </ul>
-        <p>
-          Available markets include match winners, map winners, handicaps, total
-          kills, and other props. Both pre-match and live betting options are
-          offered.
-        </p>
+          <h3>Sportsbook Offering</h3>
+          <p>Cloudbet supports a wide range of sports globally, including:</p>
+          <ul>
+            <li>Football (Soccer)</li>
+            <li>Basketball</li>
+            <li>Tennis</li>
+            <li>American Football</li>
+            <li>Ice Hockey</li>
+          </ul>
+          <p>
+            Live (in-play) betting is available, allowing wagers during matches.
+            Users can access pre-match and live markets, including outcomes,
+            handicaps, totals/over-unders, and prop bets. Margins are
+            competitive, especially for major events.
+          </p>
 
-        <h3>Markets & Betting Tools</h3>
-        <ul>
-          <li>Money-line (win/lose/draw)</li>
-          <li>Spreads / Handicaps</li>
-          <li>Totals / Over-Unders</li>
-          <li>Player/Team Props (goals, kills, duration, etc.)</li>
-          <li>Outrights (tournament winners)</li>
-          <li>Live/in-play markets for both sports and esports</li>
-          <li>High betting limits for crypto deposits</li>
-          <li>Global sport list with niche events available in some regions</li>
-        </ul>
+          <h3>Esports Betting</h3>
+          <p>
+            Cloudbet includes a dedicated esports section covering major titles:
+          </p>
+          <ul>
+            <li>Counter-Strike 2 (CS2)</li>
+            <li>Dota 2</li>
+            <li>League of Legends</li>
+            <li>Valorant</li>
+            <li>FIFA</li>
+            <li>Rainbow Six</li>
+          </ul>
+          <p>
+            Available markets include match winners, map winners, handicaps,
+            total kills, and other props. Both pre-match and live betting
+            options are offered.
+          </p>
 
-        <h3>Strengths & Considerations</h3>
-        <ul>
-          <li>
-            <strong>Strengths:</strong> Unified platform for casino + sportsbook
-            + esports, crypto support for fast transactions, broad sport and
-            esports coverage.
-          </li>
-          <li>
-            <strong>Considerations:</strong> Esports depth may be less than
-            specialist platforms, micro-markets may be limited, regional
-            restrictions apply, large wins may trigger verification.
-          </li>
-        </ul>
+          <h3>Markets & Betting Tools</h3>
+          <ul>
+            <li>Money-line (win/lose/draw)</li>
+            <li>Spreads / Handicaps</li>
+            <li>Totals / Over-Unders</li>
+            <li>Player/Team Props (goals, kills, duration, etc.)</li>
+            <li>Outrights (tournament winners)</li>
+            <li>Live/in-play markets for both sports and esports</li>
+            <li>High betting limits for crypto deposits</li>
+            <li>
+              Global sport list with niche events available in some regions
+            </li>
+          </ul>
 
-        <h2>Summary & Final Thoughts</h2>
-        <p>
-          Cloudbet is ideal for players seeking both casino gaming and
-          sports/esports betting in one integrated platform. Its wide selection
-          of games, live-dealer tables, extensive sportsbook, and esports
-          options provide something for every type of bettor.
-        </p>
+          <h3>Strengths & Considerations</h3>
+          <ul>
+            <li>
+              <strong>Strengths:</strong> Unified platform for casino +
+              sportsbook + esports, crypto support for fast transactions, broad
+              sport and esports coverage.
+            </li>
+            <li>
+              <strong>Considerations:</strong> Esports depth may be less than
+              specialist platforms, micro-markets may be limited, regional
+              restrictions apply, large wins may trigger verification.
+            </li>
+          </ul>
 
-        <ul>
-          <li>
-            Crypto-friendly platform with fast transactions and global access
-            (subject to regulations).
-          </li>
-          <li>Comprehensive coverage of popular sports and esports titles.</li>
-          <li>Unified account for both casino and betting activities.</li>
-          <li>
-            Check region eligibility, withdrawal processes, and contribution
-            rates for bonuses before playing.
-          </li>
-        </ul>
+          <h2>Summary & Final Thoughts</h2>
+          <p>
+            Cloudbet is ideal for players seeking both casino gaming and
+            sports/esports betting in one integrated platform. Its wide
+            selection of games, live-dealer tables, extensive sportsbook, and
+            esports options provide something for every type of bettor.
+          </p>
 
-        <p>
-          Overall, Cloudbet offers a robust and flexible environment for both
-          casual and high-roller players who value variety, speed, and crypto
-          integration.
-        </p>
+          <ul>
+            <li>
+              Crypto-friendly platform with fast transactions and global access
+              (subject to regulations).
+            </li>
+            <li>
+              Comprehensive coverage of popular sports and esports titles.
+            </li>
+            <li>Unified account for both casino and betting activities.</li>
+            <li>
+              Check region eligibility, withdrawal processes, and contribution
+              rates for bonuses before playing.
+            </li>
+          </ul>
+
+          <p>
+            Overall, Cloudbet offers a robust and flexible environment for both
+            casual and high-roller players who value variety, speed, and crypto
+            integration.
+          </p>
+        </div>
       </div>
 
       <footer class="bottom-page">
