--- a/Reviews-page/CloudBet/Payments/index.html
+++ b/Reviews-page/CloudBet/Payments/index.html
@@ -262,242 +262,247 @@
 
   -->
     <section class="casino-allInfo">
-      <div class="casino-banner">
-        <a
-          href="  https://cldbt.cloud/go/en/landing/bitcoin-bonus?af_token=5938c4b2e77d3c3df0f143280e9c6d1a&aftm_campaign=all4wins&aftm_source=HP&aftm_medium=organic&aftm_content=HP  "
-          aria-label="Read more about CloudBet"
-        >
-          <img
-            src="/img/news-banners/cloudBet-banner.webp"
-            alt="cloudBet banner"
-          />
-        </a>
-      </div>
-
-      <div class="casino-infoLogo">
-        <div class="logo-box">
-          <img
-            src="/img/CloudBet-logo.webp"
-            loading="lazy"
-            alt="cloudBet logo"
-          />
+      <div class="info-Block">
+        <div class="casino-banner">
+          <a
+            href="  https://cldbt.cloud/go/en/landing/bitcoin-bonus?af_token=5938c4b2e77d3c3df0f143280e9c6d1a&aftm_campaign=all4wins&aftm_source=HP&aftm_medium=organic&aftm_content=HP  "
+            aria-label="Read more about CloudBet"
+          >
+            <img
+              src="/img/news-banners/cloudBet-banner.webp"
+              alt="cloudBet banner"
+            />
+          </a>
         </div>
-      </div>
-      <div class="play-now">
-        <a
-          href="  https://cldbt.cloud/go/en/landing/bitcoin-bonus?af_token=5938c4b2e77d3c3df0f143280e9c6d1a&aftm_campaign=all4wins&aftm_source=HP&aftm_medium=organic&aftm_content=HP  "
-          aria-label="Read more about CloudBet"
-        >
-          <button>Play Now</button>
-        </a>
-      </div>
 
-      <div class="tab-info">
-        <a href="/Reviews-page/CloudBet/" class="tablinks">
-          <button>Overview</button>
-        </a>
-        <a href="/Reviews-page/CloudBet/Bonus/" class="tablinks">
-          <button>Bonuses</button>
-        </a>
-        <a href="/Reviews-page/CloudBet/Games/" class="tablinks">
-          <button>Games</button>
-        </a>
-        <a href="/Reviews-page/CloudBet/Payments/" class="tablinks">
-          <button>Payments</button>
-        </a>
-      </div>
+        <div class="casino-infoLogo">
+          <div class="logo-box">
+            <img
+              src="/img/CloudBet-logo.webp"
+              loading="lazy"
+              alt="cloudBet logo"
+            />
+          </div>
+        </div>
+        <div class="play-now">
+          <a
+            href="  https://cldbt.cloud/go/en/landing/bitcoin-bonus?af_token=5938c4b2e77d3c3df0f143280e9c6d1a&aftm_campaign=all4wins&aftm_source=HP&aftm_medium=organic&aftm_content=HP  "
+            aria-label="Read more about CloudBet"
+          >
+            <button>Play Now</button>
+          </a>
+        </div>
 
-      <!-- Tab content -->
+        <div class="tab-info">
+          <a href="/Reviews-page/CloudBet/" class="tablinks">
+            <button>Overview</button>
+          </a>
+          <a href="/Reviews-page/CloudBet/Bonus/" class="tablinks">
+            <button>Bonuses</button>
+          </a>
+          <a href="/Reviews-page/CloudBet/Games/" class="tablinks">
+            <button>Games</button>
+          </a>
+          <a href="/Reviews-page/CloudBet/Payments/" class="tablinks">
+            <button>Payments</button>
+          </a>
+        </div>
 
-      <div id="Payments" class="tabcontent-info">
-        <h1>Cloudbet – Payments & Banking Breakdown</h1>
+        <!-- Tab content -->
 
-        <h2>Overview of Payments</h2>
-        <p>
-          Cloudbet is primarily a crypto-native platform, designed for fast and
-          secure digital currency transactions. At the same time, it supports
-          fiat-to-crypto deposits and withdrawals, allowing players without
-          cryptocurrency holdings to participate. This dual system ensures
-          efficiency for crypto users and accessibility for fiat users.
-        </p>
-        <p>
-          Speed, transparency, and global reach (where permitted by law) make
-          Cloudbet’s banking system a core part of the user experience, enabling
-          smooth deposits, quick withdrawals, and flexible payment options for
-          casual players and high-rollers alike.
-        </p>
+        <div id="Payments" class="tabcontent-info">
+          <h1>Cloudbet – Payments & Banking Breakdown</h1>
 
-        <h2>Deposit Options</h2>
+          <h2>Overview of Payments</h2>
+          <p>
+            Cloudbet is primarily a crypto-native platform, designed for fast
+            and secure digital currency transactions. At the same time, it
+            supports fiat-to-crypto deposits and withdrawals, allowing players
+            without cryptocurrency holdings to participate. This dual system
+            ensures efficiency for crypto users and accessibility for fiat
+            users.
+          </p>
+          <p>
+            Speed, transparency, and global reach (where permitted by law) make
+            Cloudbet’s banking system a core part of the user experience,
+            enabling smooth deposits, quick withdrawals, and flexible payment
+            options for casual players and high-rollers alike.
+          </p>
 
-        <h3>Cryptocurrencies</h3>
-        <p>
-          Cloudbet supports a wide variety of cryptocurrencies for deposits.
-          Major options include:
-        </p>
-        <ul>
-          <li>Bitcoin (BTC)</li>
-          <li>Ethereum (ETH)</li>
-          <li>Litecoin (LTC)</li>
-          <li>Tether (USDT)</li>
-          <li>USD Coin (USDC)</li>
-          <li>
-            Other altcoins: Solana (SOL), Dogecoin (DOGE), Cardano (ADA),
-            Polkadot (DOT)
-          </li>
-        </ul>
-        <p>
-          Crypto deposits are processed almost instantly after blockchain
-          confirmations. Minimum deposits vary by coin, sometimes as low as
-          0.0001 BTC. Deposits are generally free from platform fees, though
-          network fees are inherent to blockchain transfers. High-rollers
-          benefit from the lack of a strict maximum deposit limit.
-        </p>
+          <h2>Deposit Options</h2>
 
-        <h3>Fiat Deposits & On-Ramps</h3>
-        <p>
-          For users without cryptocurrency, Cloudbet provides several fiat
-          options that convert into crypto:
-        </p>
-        <ul>
-          <li>
-            <strong>MoonPay:</strong> Allows purchases via credit/debit cards,
-            Apple Pay, or Google Pay
-          </li>
-          <li>
-            <strong>Other third-party wallets:</strong> Jeton or Vega in select
-            jurisdictions
-          </li>
-        </ul>
-        <p>
-          Fiat deposits via these services may incur fees, and availability
-          varies by country. Once the fiat is converted into crypto, the funds
-          are immediately available for betting or casino games.
-        </p>
+          <h3>Cryptocurrencies</h3>
+          <p>
+            Cloudbet supports a wide variety of cryptocurrencies for deposits.
+            Major options include:
+          </p>
+          <ul>
+            <li>Bitcoin (BTC)</li>
+            <li>Ethereum (ETH)</li>
+            <li>Litecoin (LTC)</li>
+            <li>Tether (USDT)</li>
+            <li>USD Coin (USDC)</li>
+            <li>
+              Other altcoins: Solana (SOL), Dogecoin (DOGE), Cardano (ADA),
+              Polkadot (DOT)
+            </li>
+          </ul>
+          <p>
+            Crypto deposits are processed almost instantly after blockchain
+            confirmations. Minimum deposits vary by coin, sometimes as low as
+            0.0001 BTC. Deposits are generally free from platform fees, though
+            network fees are inherent to blockchain transfers. High-rollers
+            benefit from the lack of a strict maximum deposit limit.
+          </p>
 
-        <h3>Deposit Features</h3>
-        <p>
-          Deposits are generally instant once blockchain confirmations or fiat
-          conversions are complete. Crypto deposits have minimal fees and no
-          strict limits, while fiat deposits depend on third-party providers’
-          processing times and fees. Funds are ready for play immediately upon
-          successful deposit.
-        </p>
+          <h3>Fiat Deposits & On-Ramps</h3>
+          <p>
+            For users without cryptocurrency, Cloudbet provides several fiat
+            options that convert into crypto:
+          </p>
+          <ul>
+            <li>
+              <strong>MoonPay:</strong> Allows purchases via credit/debit cards,
+              Apple Pay, or Google Pay
+            </li>
+            <li>
+              <strong>Other third-party wallets:</strong> Jeton or Vega in
+              select jurisdictions
+            </li>
+          </ul>
+          <p>
+            Fiat deposits via these services may incur fees, and availability
+            varies by country. Once the fiat is converted into crypto, the funds
+            are immediately available for betting or casino games.
+          </p>
 
-        <h2>Withdrawal Options</h2>
+          <h3>Deposit Features</h3>
+          <p>
+            Deposits are generally instant once blockchain confirmations or fiat
+            conversions are complete. Crypto deposits have minimal fees and no
+            strict limits, while fiat deposits depend on third-party providers’
+            processing times and fees. Funds are ready for play immediately upon
+            successful deposit.
+          </p>
 
-        <h3>Crypto Withdrawals</h3>
-        <p>
-          Withdrawals are primarily processed in the same cryptocurrency used
-          for deposits. Options include:
-        </p>
-        <ul>
-          <li>Bitcoin (BTC)</li>
-          <li>Ethereum (ETH)</li>
-          <li>Litecoin (LTC)</li>
-          <li>Tether (USDT)</li>
-          <li>USD Coin (USDC)</li>
-          <li>Other altcoins</li>
-        </ul>
-        <p>
-          Standard withdrawals are often completed within minutes for verified
-          accounts. Large withdrawals or flagged amounts may require manual
-          verification, taking longer.
-        </p>
+          <h2>Withdrawal Options</h2>
 
-        <h3>Fiat Withdrawals</h3>
-        <p>
-          For players who deposited via fiat, Cloudbet allows withdrawals
-          through the same provider used for deposit (where supported). This
-          generally involves converting crypto back into fiat and sending it to
-          your bank account, credit/debit card, or third-party wallet.
-          Processing times for fiat withdrawals can take longer than crypto,
-          typically ranging from a few hours to a few business days, depending
-          on the provider and jurisdiction.
-        </p>
+          <h3>Crypto Withdrawals</h3>
+          <p>
+            Withdrawals are primarily processed in the same cryptocurrency used
+            for deposits. Options include:
+          </p>
+          <ul>
+            <li>Bitcoin (BTC)</li>
+            <li>Ethereum (ETH)</li>
+            <li>Litecoin (LTC)</li>
+            <li>Tether (USDT)</li>
+            <li>USD Coin (USDC)</li>
+            <li>Other altcoins</li>
+          </ul>
+          <p>
+            Standard withdrawals are often completed within minutes for verified
+            accounts. Large withdrawals or flagged amounts may require manual
+            verification, taking longer.
+          </p>
 
-        <h3>Minimum & Limits</h3>
-        <p>Withdrawal thresholds vary:</p>
-        <ul>
-          <li>Crypto minimums can be as low as 0.0001 BTC (~$10 equivalent)</li>
-          <li>
-            Fiat minimums depend on provider limits and may be higher than
-            crypto
-          </li>
-        </ul>
-        <p>
-          High-rollers benefit from flexible limits, though large withdrawals
-          may require additional verification to comply with KYC/AML
-          regulations.
-        </p>
+          <h3>Fiat Withdrawals</h3>
+          <p>
+            For players who deposited via fiat, Cloudbet allows withdrawals
+            through the same provider used for deposit (where supported). This
+            generally involves converting crypto back into fiat and sending it
+            to your bank account, credit/debit card, or third-party wallet.
+            Processing times for fiat withdrawals can take longer than crypto,
+            typically ranging from a few hours to a few business days, depending
+            on the provider and jurisdiction.
+          </p>
 
-        <h3>Fees & Processing</h3>
-        <p>
-          Cloudbet generally does not charge platform fees on crypto deposits or
-          withdrawals, but network fees or third-party conversion fees may
-          apply. Fiat withdrawals often incur provider fees and slightly longer
-          processing times. Overall, crypto withdrawals are near-instant when
-          verification requirements are met.
-        </p>
+          <h3>Minimum & Limits</h3>
+          <p>Withdrawal thresholds vary:</p>
+          <ul>
+            <li>
+              Crypto minimums can be as low as 0.0001 BTC (~$10 equivalent)
+            </li>
+            <li>
+              Fiat minimums depend on provider limits and may be higher than
+              crypto
+            </li>
+          </ul>
+          <p>
+            High-rollers benefit from flexible limits, though large withdrawals
+            may require additional verification to comply with KYC/AML
+            regulations.
+          </p>
 
-        <h3>Security & Verification</h3>
-        <p>
-          All transactions use SSL encryption. Most funds are kept in cold
-          wallets for security, with hot wallets handling daily liquidity.
-          Two-factor authentication (2FA) is recommended. KYC verification is
-          mandatory for large withdrawals or accounts flagged for compliance,
-          which may include proof of identity, address, or payment method.
-        </p>
+          <h3>Fees & Processing</h3>
+          <p>
+            Cloudbet generally does not charge platform fees on crypto deposits
+            or withdrawals, but network fees or third-party conversion fees may
+            apply. Fiat withdrawals often incur provider fees and slightly
+            longer processing times. Overall, crypto withdrawals are
+            near-instant when verification requirements are met.
+          </p>
 
-        <h3>Currency Support & Country Considerations</h3>
-        <p>
-          Cloudbet supports numerous cryptocurrencies, giving players from
-          multiple regions the ability to participate. Fiat options broaden
-          access in areas where users do not hold crypto. However, availability
-          depends on local regulations and providers—MoonPay or other wallets
-          may not be accessible everywhere. Players should confirm that gambling
-          is legal in their region and that their selected payment method is
-          supported before depositing.
-        </p>
+          <h3>Security & Verification</h3>
+          <p>
+            All transactions use SSL encryption. Most funds are kept in cold
+            wallets for security, with hot wallets handling daily liquidity.
+            Two-factor authentication (2FA) is recommended. KYC verification is
+            mandatory for large withdrawals or accounts flagged for compliance,
+            which may include proof of identity, address, or payment method.
+          </p>
 
-        <h2>Key Tips & What to Watch</h2>
-        <ul>
-          <li>
-            Carefully select your account’s base currency, as Cloudbet may lock
-            it to the first deposit currency.
-          </li>
-          <li>Use crypto for faster, more private transactions.</li>
-          <li>Check fees and conversion rates when using fiat on-ramps.</li>
-          <li>
-            Complete KYC verification before attempting large withdrawals to
-            avoid delays.
-          </li>
-          <li>
-            Match deposit and withdrawal methods/currencies to reduce compliance
-            risks.
-          </li>
-          <li>Large withdrawals may trigger manual review.</li>
-          <li>
-            Always review terms and conditions, including minimums, expected
-            processing times, and geographic restrictions.
-          </li>
-        </ul>
+          <h3>Currency Support & Country Considerations</h3>
+          <p>
+            Cloudbet supports numerous cryptocurrencies, giving players from
+            multiple regions the ability to participate. Fiat options broaden
+            access in areas where users do not hold crypto. However,
+            availability depends on local regulations and providers—MoonPay or
+            other wallets may not be accessible everywhere. Players should
+            confirm that gambling is legal in their region and that their
+            selected payment method is supported before depositing.
+          </p>
 
-        <h2>Summary</h2>
-        <p>
-          Cloudbet provides a highly flexible and secure banking system suitable
-          for both cryptocurrency and fiat users. Fast deposits, broad crypto
-          support, and near-instant withdrawals make it appealing for
-          high-rollers and casual players alike. Fiat on-ramps extend access to
-          users without crypto holdings, though these often involve third-party
-          fees and may have regional restrictions.
-        </p>
-        <p>
-          The combination of speed, flexibility, security, and wide currency
-          support makes Cloudbet’s payment system one of the platform’s
-          strongest features. Players should ensure their region supports the
-          platform, complete KYC verification for large withdrawals, and be
-          aware of any fees when converting between fiat and crypto.
-        </p>
+          <h2>Key Tips & What to Watch</h2>
+          <ul>
+            <li>
+              Carefully select your account’s base currency, as Cloudbet may
+              lock it to the first deposit currency.
+            </li>
+            <li>Use crypto for faster, more private transactions.</li>
+            <li>Check fees and conversion rates when using fiat on-ramps.</li>
+            <li>
+              Complete KYC verification before attempting large withdrawals to
+              avoid delays.
+            </li>
+            <li>
+              Match deposit and withdrawal methods/currencies to reduce
+              compliance risks.
+            </li>
+            <li>Large withdrawals may trigger manual review.</li>
+            <li>
+              Always review terms and conditions, including minimums, expected
+              processing times, and geographic restrictions.
+            </li>
+          </ul>
+
+          <h2>Summary</h2>
+          <p>
+            Cloudbet provides a highly flexible and secure banking system
+            suitable for both cryptocurrency and fiat users. Fast deposits,
+            broad crypto support, and near-instant withdrawals make it appealing
+            for high-rollers and casual players alike. Fiat on-ramps extend
+            access to users without crypto holdings, though these often involve
+            third-party fees and may have regional restrictions.
+          </p>
+          <p>
+            The combination of speed, flexibility, security, and wide currency
+            support makes Cloudbet’s payment system one of the platform’s
+            strongest features. Players should ensure their region supports the
+            platform, complete KYC verification for large withdrawals, and be
+            aware of any fees when converting between fiat and crypto.
+          </p>
+        </div>
       </div>
 
       <footer class="bottom-page">
