--- a/Reviews-page/DuelBits/Bonus/index.html
+++ b/Reviews-page/DuelBits/Bonus/index.html
@@ -262,7 +262,8 @@
 
   -->
     <section class="casino-allInfo">
-      <div class="casino-banner">
+      <div class="info-Block">
+        <div class="casino-banner">
         <a
           href="https://affiliates.duelbits.com/visit/?bta=36526&nci=5800"
           aria-label="Read more about GG.Bet"
@@ -755,6 +756,8 @@
           <li>Custom bets follow our standard betting rules.</li>
         </ul>
       </div>
+      </div>
+      
 
       <footer class="bottom-page">
         <a href="#" class="scroll-to-top"
