--- a/Reviews-page/DuelBits/Payments/index.html
+++ b/Reviews-page/DuelBits/Payments/index.html
@@ -260,264 +260,270 @@
 
   -->
     <section class="casino-allInfo">
-      <div class="casino-banner">
-        <a
-          href="https://affiliates.duelbits.com/visit/?bta=36526&nci=5800"
-          aria-label="Read more about GG.Bet"
-          ><img
-            src="/img/news-banners/duelbits-banner.webp"
-            alt="gg.bet banner"
-        /></a>
-      </div>
-
-      <div class="casino-infoLogo">
-        <div class="logo-box">
-          <img
-            src="/img/duelbits-small-banner.webp"
-            loading="lazy"
-            alt="gg.bet logo"
-          />
-        </div>
-      </div>
-      <div class="play-now">
-        <a
-          href="https://affiliates.duelbits.com/visit/?bta=36526&nci=5800"
-          aria-label="Read more about GG.Bet"
-          ><button>Play Now</button></a
-        >
-      </div>
-
-      <div class="tab-info">
-        <a href="/Reviews-page/DuelBits/" class="tablinks">
-          <button>Overview</button>
-        </a>
-        <a href="/Reviews-page/DuelBits/Bonus/" class="tablinks">
-          <button>Bonuses</button>
-        </a>
-        <a href="/Reviews-page/DuelBits/Games/" class="tablinks">
-          <button>Games</button>
-        </a>
-        <a href="/Reviews-page/DuelBits/Payments/" class="tablinks">
-          <button>Payments</button>
-        </a>
-      </div>
-
-      <!-- Tab content -->
-
-      <div id="Payments" class="tabcontent-info">
-        <h1>
-          Duelbits Payment System: Comprehensive Overview of Deposits and
-          Withdrawals
-        </h1>
-
-        <p>
-          Duelbits offers a robust payment system designed to accommodate both
-          cryptocurrency enthusiasts and traditional players. With multiple
-          banking options, users can easily fund their accounts and withdraw
-          winnings, ensuring a seamless gaming experience.
-        </p>
-
-        <h2>Deposits and Withdrawals</h2>
-
-        <p>
-          When it comes to banking at Duelbits, cryptocurrency is the preferred
-          option, offering numerous advantages, including zero fees from the
-          casino. However, the platform also supports various fiat banking
-          methods.
-        </p>
-        <div class="review-img">
-          <img
-            src="/img/news-banners/Payment-Methods-at-Duelbits-.webp"
-            loading="lazy"
-            alt="katsubet site"
-          />
+      <div class="info-Block">
+        <div class="casino-banner">
+          <a
+            href="https://affiliates.duelbits.com/visit/?bta=36526&nci=5800"
+            aria-label="Read more about GG.Bet"
+            ><img
+              src="/img/news-banners/duelbits-banner.webp"
+              alt="gg.bet banner"
+          /></a>
         </div>
 
-        <h3>Withdrawals</h3>
+        <div class="casino-infoLogo">
+          <div class="logo-box">
+            <img
+              src="/img/duelbits-small-banner.webp"
+              loading="lazy"
+              alt="gg.bet logo"
+            />
+          </div>
+        </div>
+        <div class="play-now">
+          <a
+            href="https://affiliates.duelbits.com/visit/?bta=36526&nci=5800"
+            aria-label="Read more about GG.Bet"
+            ><button>Play Now</button></a
+          >
+        </div>
 
-        <p>
-          Withdrawals at Duelbits are processed instantly, allowing players to
-          access their funds without delay. Importantly, the casino does not
-          impose any fees for cryptocurrency withdrawals. However, players
-          should be aware that they will incur blockchain fees when making
-          cryptocurrency withdrawals, which currently average around $9 per
-          transaction for Bitcoin.
-        </p>
+        <div class="tab-info">
+          <a href="/Reviews-page/DuelBits/" class="tablinks">
+            <button>Overview</button>
+          </a>
+          <a href="/Reviews-page/DuelBits/Bonus/" class="tablinks">
+            <button>Bonuses</button>
+          </a>
+          <a href="/Reviews-page/DuelBits/Games/" class="tablinks">
+            <button>Games</button>
+          </a>
+          <a href="/Reviews-page/DuelBits/Payments/" class="tablinks">
+            <button>Payments</button>
+          </a>
+        </div>
 
-        <h3>Deposit and Withdrawal Limits</h3>
+        <!-- Tab content -->
 
-        <ul>
-          <li>
-            <strong>Minimum Deposit:</strong> There is no minimum deposit
-            requirement at Duelbits, allowing players to start with any amount.
-          </li>
-          <li>
-            <strong>Minimum Withdrawal:</strong> The minimum withdrawal is set
-            at 50 units of the chosen currency (e.g., 50 microBTC, roughly $30).
-          </li>
-          <li>
-            <strong>Maximum Withdrawal:</strong> Duelbits has no maximum
-            withdrawal limit, making it an appealing choice for high rollers who
-            wish to withdraw substantial amounts.
-          </li>
-        </ul>
+        <div id="Payments" class="tabcontent-info">
+          <h1>
+            Duelbits Payment System: Comprehensive Overview of Deposits and
+            Withdrawals
+          </h1>
 
-        <h2>Payment Methods</h2>
+          <p>
+            Duelbits offers a robust payment system designed to accommodate both
+            cryptocurrency enthusiasts and traditional players. With multiple
+            banking options, users can easily fund their accounts and withdraw
+            winnings, ensuring a seamless gaming experience.
+          </p>
 
-        <p>
-          Duelbits accepts a diverse range of payment methods, catering to
-          different user preferences. Players can choose from both
-          cryptocurrency and fiat options, ensuring a convenient experience for
-          all.
-        </p>
+          <h2>Deposits and Withdrawals</h2>
 
-        <h3>Accepted Cryptocurrencies</h3>
+          <p>
+            When it comes to banking at Duelbits, cryptocurrency is the
+            preferred option, offering numerous advantages, including zero fees
+            from the casino. However, the platform also supports various fiat
+            banking methods.
+          </p>
+          <div class="review-img">
+            <img
+              src="/img/news-banners/Payment-Methods-at-Duelbits-.webp"
+              loading="lazy"
+              alt="katsubet site"
+            />
+          </div>
 
-        <p>
-          Duelbits supports an impressive array of cryptocurrencies for
-          deposits, including:
-        </p>
-        <ul>
-          <li>Bitcoin (BTC)</li>
-          <li>Ethereum (ETH)</li>
-          <li>Litecoin (LTC)</li>
-          <li>Solana (SOL)</li>
-          <li>Ape Coin (APE)</li>
-          <li>Shiba Inu (SHIB)</li>
-          <li>Tether (USDT)</li>
-          <li>Ripple (XRP)</li>
-          <li>Tron (TRX)</li>
-        </ul>
+          <h3>Withdrawals</h3>
 
-        <h3>Fiat Payment Methods</h3>
+          <p>
+            Withdrawals at Duelbits are processed instantly, allowing players to
+            access their funds without delay. Importantly, the casino does not
+            impose any fees for cryptocurrency withdrawals. However, players
+            should be aware that they will incur blockchain fees when making
+            cryptocurrency withdrawals, which currently average around $9 per
+            transaction for Bitcoin.
+          </p>
 
-        <p>
-          For players who prefer traditional payment methods, Duelbits accepts
-          various fiat options, including:
-        </p>
-        <ul>
-          <li><strong>Debit and Credit Cards:</strong> Visa and Mastercard</li>
-          <li><strong>E-wallets:</strong> PayPal, Skrill, Paysafecard</li>
-          <li><strong>Bank Transfers</strong></li>
-        </ul>
+          <h3>Deposit and Withdrawal Limits</h3>
 
-        <p>
-          It is important to note that while players can deposit using fiat
-          methods, all payouts from Duelbits are processed exclusively in
-          cryptocurrency.
-        </p>
+          <ul>
+            <li>
+              <strong>Minimum Deposit:</strong> There is no minimum deposit
+              requirement at Duelbits, allowing players to start with any
+              amount.
+            </li>
+            <li>
+              <strong>Minimum Withdrawal:</strong> The minimum withdrawal is set
+              at 50 units of the chosen currency (e.g., 50 microBTC, roughly
+              $30).
+            </li>
+            <li>
+              <strong>Maximum Withdrawal:</strong> Duelbits has no maximum
+              withdrawal limit, making it an appealing choice for high rollers
+              who wish to withdraw substantial amounts.
+            </li>
+          </ul>
 
-        <h2>Deposit Methods at Duelbits</h2>
+          <h2>Payment Methods</h2>
 
-        <p>
-          To play for real money, players must fund their accounts through one
-          of the many deposit options available. Duelbits prides itself on
-          offering a wide variety of deposit methods, allowing users to choose
-          what suits them best.
-        </p>
+          <p>
+            Duelbits accepts a diverse range of payment methods, catering to
+            different user preferences. Players can choose from both
+            cryptocurrency and fiat options, ensuring a convenient experience
+            for all.
+          </p>
 
-        <h3>Traditional and Cryptocurrency Options</h3>
+          <h3>Accepted Cryptocurrencies</h3>
 
-        <ul>
-          <li>
-            <strong>Traditional Deposit Methods:</strong> Players can use
-            well-known payment systems like VISA, MasterCard, Skrill, WebMoney,
-            and Paysafecard for instant deposits.
-          </li>
-          <li>
-            <strong>Cryptocurrency Options:</strong> Duelbits also features
-            exceptional support for cryptocurrencies, allowing players to
-            deposit using various coins such as:
-          </li>
+          <p>
+            Duelbits supports an impressive array of cryptocurrencies for
+            deposits, including:
+          </p>
+          <ul>
+            <li>Bitcoin (BTC)</li>
+            <li>Ethereum (ETH)</li>
+            <li>Litecoin (LTC)</li>
+            <li>Solana (SOL)</li>
+            <li>Ape Coin (APE)</li>
+            <li>Shiba Inu (SHIB)</li>
+            <li>Tether (USDT)</li>
+            <li>Ripple (XRP)</li>
+            <li>Tron (TRX)</li>
+          </ul>
+
+          <h3>Fiat Payment Methods</h3>
+
+          <p>
+            For players who prefer traditional payment methods, Duelbits accepts
+            various fiat options, including:
+          </p>
+          <ul>
+            <li>
+              <strong>Debit and Credit Cards:</strong> Visa and Mastercard
+            </li>
+            <li><strong>E-wallets:</strong> PayPal, Skrill, Paysafecard</li>
+            <li><strong>Bank Transfers</strong></li>
+          </ul>
+
+          <p>
+            It is important to note that while players can deposit using fiat
+            methods, all payouts from Duelbits are processed exclusively in
+            cryptocurrency.
+          </p>
+
+          <h2>Deposit Methods at Duelbits</h2>
+
+          <p>
+            To play for real money, players must fund their accounts through one
+            of the many deposit options available. Duelbits prides itself on
+            offering a wide variety of deposit methods, allowing users to choose
+            what suits them best.
+          </p>
+
+          <h3>Traditional and Cryptocurrency Options</h3>
+
+          <ul>
+            <li>
+              <strong>Traditional Deposit Methods:</strong> Players can use
+              well-known payment systems like VISA, MasterCard, Skrill,
+              WebMoney, and Paysafecard for instant deposits.
+            </li>
+            <li>
+              <strong>Cryptocurrency Options:</strong> Duelbits also features
+              exceptional support for cryptocurrencies, allowing players to
+              deposit using various coins such as:
+            </li>
+            <ul>
+              <li>Bitcoin</li>
+              <li>Bitcoin Cash</li>
+              <li>Litecoin</li>
+              <li>Dogecoin</li>
+              <li>Ripple</li>
+              <li>Solana</li>
+              <li>Tether</li>
+              <li>Binance Coin</li>
+              <li>Ape Coin</li>
+              <li>Tron</li>
+              <li>Shiba Inu</li>
+            </ul>
+          </ul>
+
+          <p>
+            For those who prefer non-crypto options, players can deposit funds
+            through gift cards purchased from trusted third-party websites.
+            Acceptable gift cards include:
+          </p>
+
+          <ul>
+            <li>VISA/MasterCard gift cards</li>
+            <li>PayPal gift cards</li>
+            <li>Web Money gift cards</li>
+            <li>Skrill gift cards</li>
+            <li>Paysafecard gift cards</li>
+          </ul>
+
+          <p>
+            Players should be aware that the maximum deposit using gift cards is
+            $250 per transaction.
+          </p>
+
+          <h2>Withdrawal Methods at Duelbits</h2>
+
+          <p>
+            The withdrawal process at Duelbits maintains the simplicity and
+            speed found in the deposit methods. However, unlike deposits,
+            withdrawal options are more limited, as payouts can only be made in
+            cryptocurrencies.
+          </p>
+
+          <h3>Cryptocurrency Withdrawal Options</h3>
+
+          <p>
+            Players can withdraw their winnings using the following
+            cryptocurrencies:
+          </p>
           <ul>
             <li>Bitcoin</li>
             <li>Bitcoin Cash</li>
-            <li>Litecoin</li>
             <li>Dogecoin</li>
+            <li>Litecoin</li>
             <li>Ripple</li>
             <li>Solana</li>
-            <li>Tether</li>
-            <li>Binance Coin</li>
-            <li>Ape Coin</li>
-            <li>Tron</li>
-            <li>Shiba Inu</li>
+            <li>CSGO skins (for users who have linked their Steam accounts)</li>
           </ul>
-        </ul>
 
-        <p>
-          For those who prefer non-crypto options, players can deposit funds
-          through gift cards purchased from trusted third-party websites.
-          Acceptable gift cards include:
-        </p>
+          <h3>Withdrawal Process</h3>
 
-        <ul>
-          <li>VISA/MasterCard gift cards</li>
-          <li>PayPal gift cards</li>
-          <li>Web Money gift cards</li>
-          <li>Skrill gift cards</li>
-          <li>Paysafecard gift cards</li>
-        </ul>
+          <p>
+            To withdraw funds from Duelbits, users must navigate to the Cashier
+            tab, select "Withdraw," and choose their desired payout method. One
+            of the standout features of Duelbits is that cash-outs are instant,
+            allowing players to receive their funds without unnecessary delays.
+          </p>
 
-        <p>
-          Players should be aware that the maximum deposit using gift cards is
-          $250 per transaction.
-        </p>
+          <h3>No Fees and Privacy</h3>
 
-        <h2>Withdrawal Methods at Duelbits</h2>
+          <p>
+            Duelbits does not charge any fees for withdrawals. However, users
+            should keep in mind that standard network charges may apply for
+            transactions involving the Bitcoin or Ethereum blockchains. A
+            significant advantage is that players do not need to provide
+            personal information or financial details to withdraw funds,
+            ensuring a high level of privacy.
+          </p>
 
-        <p>
-          The withdrawal process at Duelbits maintains the simplicity and speed
-          found in the deposit methods. However, unlike deposits, withdrawal
-          options are more limited, as payouts can only be made in
-          cryptocurrencies.
-        </p>
+          <h2>Conclusion</h2>
 
-        <h3>Cryptocurrency Withdrawal Options</h3>
-
-        <p>
-          Players can withdraw their winnings using the following
-          cryptocurrencies:
-        </p>
-        <ul>
-          <li>Bitcoin</li>
-          <li>Bitcoin Cash</li>
-          <li>Dogecoin</li>
-          <li>Litecoin</li>
-          <li>Ripple</li>
-          <li>Solana</li>
-          <li>CSGO skins (for users who have linked their Steam accounts)</li>
-        </ul>
-
-        <h3>Withdrawal Process</h3>
-
-        <p>
-          To withdraw funds from Duelbits, users must navigate to the Cashier
-          tab, select "Withdraw," and choose their desired payout method. One of
-          the standout features of Duelbits is that cash-outs are instant,
-          allowing players to receive their funds without unnecessary delays.
-        </p>
-
-        <h3>No Fees and Privacy</h3>
-
-        <p>
-          Duelbits does not charge any fees for withdrawals. However, users
-          should keep in mind that standard network charges may apply for
-          transactions involving the Bitcoin or Ethereum blockchains. A
-          significant advantage is that players do not need to provide personal
-          information or financial details to withdraw funds, ensuring a high
-          level of privacy.
-        </p>
-
-        <h2>Conclusion</h2>
-
-        <p>
-          Duelbits offers a versatile and user-friendly payment system that
-          caters to a broad range of preferences, from cryptocurrency to
-          traditional banking methods. With no fees for crypto transactions,
-          instant withdrawals, and an extensive selection of deposit options,
-          players can enjoy a secure and efficient banking experience as they
-          engage in thrilling gaming at Duelbits.
-        </p>
+          <p>
+            Duelbits offers a versatile and user-friendly payment system that
+            caters to a broad range of preferences, from cryptocurrency to
+            traditional banking methods. With no fees for crypto transactions,
+            instant withdrawals, and an extensive selection of deposit options,
+            players can enjoy a secure and efficient banking experience as they
+            engage in thrilling gaming at Duelbits.
+          </p>
+        </div>
       </div>
 
       <footer class="bottom-page">
