--- a/Reviews-page/GG.Bet/Payments/index.html
+++ b/Reviews-page/GG.Bet/Payments/index.html
@@ -262,7 +262,8 @@
 
   -->
     <section class="casino-allInfo">
-      <div class="casino-banner">
+      <div class="info-Block">
+        <div class="casino-banner">
         <a
           href="https://ggbetpro.com/l/66c441bc84bb190bc0013f57"
           aria-label="Read more about GG.Bet"
@@ -523,6 +524,9 @@
           and casino betting.
         </p>
       </div>
+      </div>
+      
+      
 
       <footer class="bottom-page">
         <a href="#" class="scroll-to-top"
