--- a/Reviews-page/Katsubet/Payments/index.html
+++ b/Reviews-page/Katsubet/Payments/index.html
@@ -266,7 +266,8 @@
 
   -->
     <section class="casino-allInfo">
-      <div class="casino-banner">
+      <div class="info-Block">
+        <div class="casino-banner">
         <a
           href="https://katsubet.partners/pf3a02676"
           aria-label="Read more about KatsuBet"
@@ -551,6 +552,8 @@
           and banking with confidence in 2025.
         </p>
       </div>
+      </div>
+      
 
       <footer class="bottom-page">
         <a href="#" class="scroll-to-top"
