--- a/Reviews-page/Loot.bet/index.html
+++ b/Reviews-page/Loot.bet/index.html
@@ -255,12 +255,17 @@
 
   -->
     <section class="casino-allInfo">
-      <div class="casino-infoLogo">
-        <div class="logo-box">
-          <img src="/img/loot.bet-logo.webp" loading="lazy" alt="roobet logo" />
+      <div class="info-Block">
+        <div class="casino-infoLogo">
+          <div class="logo-box">
+            <img
+              src="/img/loot.bet-logo.webp"
+              loading="lazy"
+              alt="roobet logo"
+            />
+          </div>
         </div>
-      </div>
-      <!-- <div class="play-now">
+        <!-- <div class="play-now">
         <a
           href="https://lootclick.net/_HszlLf-Uqqkt5ET4DcCllGNd7ZgqdRLk/1/"
           aria-label="Read more about Roobet"
@@ -268,124 +273,126 @@
         >
       </div> -->
 
-      <!-- Tab content -->
-      <div id="Overview" class="tabcontent-info">
-        <div class="overview-button-container">
-          <div class="overview-button">
-            <p>Company</p>
-            <p>Livestream Limited</p>
-          </div>
-          <div class="overview-button">
-            <p>Year Founded</p>
-            <p>2019</p>
-          </div>
-          <div class="overview-button">
-            <p>License</p>
-            <p>Curacao</p>
-          </div>
-          <div class="overview-button">
-            <p>Payout Speed</p>
-            <p>--</p>
-          </div>
-          <div class="overview-button">
-            <p>Minimum Deposit</p>
-            <p>--</p>
-          </div>
-          <div class="overview-button">
-            <p>Withdrawal Limit</p>
-            <p>--</p>
-          </div>
-
-          <div class="overview-button" id="card-tipe-container">
-            <p>Deposit Methods</p>
-            <div class="cardTipe-container">
-              <img
-                class="card-tipe-info"
-                src="/img/visa-logo.webp"
-                loading="lazy"
-                alt="visa logo"
-              />
-              <img
-                class="card-tipe-info"
-                src="/img/mastercard-logo.webp"
-                loading="lazy"
-                alt="mastercard-logo"
-              />
-              <img
-                class="card-tipe-info"
-                src="/img/skrill-logo.webp"
-                loading="lazy"
-                alt="skrill logo"
-              />
-              <img
-                class="card-tipe tipe4"
-                src="/img/AstroPay.webp"
-                loading="lazy"
-                alt="astropay icon"
-              />
-              <img
-                class="card-tipe"
-                src="/img/litecoin-logo.webp"
-                loading="lazy"
-                alt="litecoin logo"
-              />
-              <img
-                class="card-tipe"
-                src="/img/ethrtium-logo.webp"
-                loading="lazy"
-                alt="etherium logo"
-              />
-              <img
-                class="card-tipe"
-                id="bitCoin-logo"
-                src="/img/bit-coin-logo.webp"
-                loading="lazy"
-                alt="bitcoin logo"
-              />
+        <!-- Tab content -->
+        <div id="Overview" class="tabcontent-info">
+          <div class="overview-button-container">
+            <div class="overview-button">
+              <p>Company</p>
+              <p>Livestream Limited</p>
             </div>
-          </div>
-          <div class="overview-summary">
-            <h1>
-              Loot.Bet Casino Shut Down – Is the Site Still Active in 2025?
-            </h1>
-            <h2>Loot.Bet Casino – No Longer Operational</h2>
+            <div class="overview-button">
+              <p>Year Founded</p>
+              <p>2019</p>
+            </div>
+            <div class="overview-button">
+              <p>License</p>
+              <p>Curacao</p>
+            </div>
+            <div class="overview-button">
+              <p>Payout Speed</p>
+              <p>--</p>
+            </div>
+            <div class="overview-button">
+              <p>Minimum Deposit</p>
+              <p>--</p>
+            </div>
+            <div class="overview-button">
+              <p>Withdrawal Limit</p>
+              <p>--</p>
+            </div>
 
-            <p>
-              Loot.Bet was once a well-known online casino and esports betting
-              platform, but as of early 2025, it appears to have shut down. The
-              website has been inaccessible for weeks, leaving users unable to
-              log in or withdraw their funds.
-            </p>
-            <h2>What Happened to Loot.Bet?</h2>
-            <p>
-              Loot.Bet's website went offline without prior notice, and multiple
-              players have reported issues with pending withdrawals and
-              unresponsive customer support. Some users were left with funds
-              stuck in their accounts when the platform suddenly became
-              unavailable.
-            </p>
-            <h2>Is Loot.Bet Down Permanently?</h2>
-            <p>
-              As of now, there has been no official statement from the company
-              regarding its status. However, the prolonged downtime and lack of
-              communication strongly suggest that the casino has ceased
-              operations. If you had an account with Loot.Bet and were unable to
-              withdraw funds, consider reaching out to relevant authorities or
-              consumer protection services for possible solutions.
-            </p>
+            <div class="overview-button" id="card-tipe-container">
+              <p>Deposit Methods</p>
+              <div class="cardTipe-container">
+                <img
+                  class="card-tipe-info"
+                  src="/img/visa-logo.webp"
+                  loading="lazy"
+                  alt="visa logo"
+                />
+                <img
+                  class="card-tipe-info"
+                  src="/img/mastercard-logo.webp"
+                  loading="lazy"
+                  alt="mastercard-logo"
+                />
+                <img
+                  class="card-tipe-info"
+                  src="/img/skrill-logo.webp"
+                  loading="lazy"
+                  alt="skrill logo"
+                />
+                <img
+                  class="card-tipe tipe4"
+                  src="/img/AstroPay.webp"
+                  loading="lazy"
+                  alt="astropay icon"
+                />
+                <img
+                  class="card-tipe"
+                  src="/img/litecoin-logo.webp"
+                  loading="lazy"
+                  alt="litecoin logo"
+                />
+                <img
+                  class="card-tipe"
+                  src="/img/ethrtium-logo.webp"
+                  loading="lazy"
+                  alt="etherium logo"
+                />
+                <img
+                  class="card-tipe"
+                  id="bitCoin-logo"
+                  src="/img/bit-coin-logo.webp"
+                  loading="lazy"
+                  alt="bitcoin logo"
+                />
+              </div>
+            </div>
+            <div class="overview-summary">
+              <h1>
+                Loot.Bet Casino Shut Down – Is the Site Still Active in 2025?
+              </h1>
+              <h2>Loot.Bet Casino – No Longer Operational</h2>
 
-            <h2>Alternatives to Loot.Bet</h2>
-            <p>
-              If you're looking for a reliable online casino or esports betting
-              site, several trustworthy alternatives offer similar features,
-              including competitive odds, casino games, and esports betting
-              markets.
-            </p>
-            <p>
-              For more updates on online casinos and sportsbook platforms, stay
-              tuned to
-              <a href="https://www.all4wins.com/Esports/">All4Wins/Esports</a>.
-            </p>
+              <p>
+                Loot.Bet was once a well-known online casino and esports betting
+                platform, but as of early 2025, it appears to have shut down.
+                The website has been inaccessible for weeks, leaving users
+                unable to log in or withdraw their funds.
+              </p>
+              <h2>What Happened to Loot.Bet?</h2>
+              <p>
+                Loot.Bet's website went offline without prior notice, and
+                multiple players have reported issues with pending withdrawals
+                and unresponsive customer support. Some users were left with
+                funds stuck in their accounts when the platform suddenly became
+                unavailable.
+              </p>
+              <h2>Is Loot.Bet Down Permanently?</h2>
+              <p>
+                As of now, there has been no official statement from the company
+                regarding its status. However, the prolonged downtime and lack
+                of communication strongly suggest that the casino has ceased
+                operations. If you had an account with Loot.Bet and were unable
+                to withdraw funds, consider reaching out to relevant authorities
+                or consumer protection services for possible solutions.
+              </p>
+
+              <h2>Alternatives to Loot.Bet</h2>
+              <p>
+                If you're looking for a reliable online casino or esports
+                betting site, several trustworthy alternatives offer similar
+                features, including competitive odds, casino games, and esports
+                betting markets.
+              </p>
+              <p>
+                For more updates on online casinos and sportsbook platforms,
+                stay tuned to
+                <a href="https://www.all4wins.com/Esports/">All4Wins/Esports</a
+                >.
+              </p>
+            </div>
           </div>
         </div>
       </div>
