--- a/Reviews-page/Rabona/Payments/index.html
+++ b/Reviews-page/Rabona/Payments/index.html
@@ -261,277 +261,285 @@
 
   -->
     <section class="casino-allInfo">
-      <div class="casino-banner">
-        <a
-          href="https://rbn.servclick1move.com/?mid=231292_1378794"
-          aria-label="Read more about Roobet"
-          ><img src="/img/news-banners/rabona-banner.webp" alt="rabona banner"
-        /></a>
-      </div>
-
-      <div class="casino-infoLogo">
-        <div class="logo-box">
-          <img src="/img/rabonaLogo.webp" loading="lazy" alt="rabona logo" />
+      <div class="info-Block">
+        <div class="casino-banner">
+          <a
+            href="https://rbn.servclick1move.com/?mid=231292_1378794"
+            aria-label="Read more about Roobet"
+            ><img
+              src="/img/news-banners/rabona-banner.webp"
+              alt="rabona banner"
+          /></a>
         </div>
-      </div>
-      <div class="play-now">
-        <a
-          href="https://rbn.servclick1move.com/?mid=231292_1378794"
-          aria-label="Read more about Roobet"
-          ><button>Play Now</button></a
-        >
-      </div>
 
-      <div class="tab-info">
-        <a href="/Reviews-page/Rabona/" class="tablinks">
-          <button>Overview</button>
-        </a>
-        <a href="/Reviews-page/Rabona/Bonus/" class="tablinks">
-          <button>Bonuses</button>
-        </a>
-        <a href="/Reviews-page/Rabona/Games/" class="tablinks">
-          <button>Games</button>
-        </a>
-        <a href="/Reviews-page/Rabona/Payments/" class="tablinks">
-          <button>Payments</button>
-        </a>
-      </div>
+        <div class="casino-infoLogo">
+          <div class="logo-box">
+            <img src="/img/rabonaLogo.webp" loading="lazy" alt="rabona logo" />
+          </div>
+        </div>
+        <div class="play-now">
+          <a
+            href="https://rbn.servclick1move.com/?mid=231292_1378794"
+            aria-label="Read more about Roobet"
+            ><button>Play Now</button></a
+          >
+        </div>
 
-      <!-- Tab content -->
+        <div class="tab-info">
+          <a href="/Reviews-page/Rabona/" class="tablinks">
+            <button>Overview</button>
+          </a>
+          <a href="/Reviews-page/Rabona/Bonus/" class="tablinks">
+            <button>Bonuses</button>
+          </a>
+          <a href="/Reviews-page/Rabona/Games/" class="tablinks">
+            <button>Games</button>
+          </a>
+          <a href="/Reviews-page/Rabona/Payments/" class="tablinks">
+            <button>Payments</button>
+          </a>
+        </div>
 
-      <div id="Payments" class="tabcontent-info">
-        <h1>Rabona Payment and Banking System</h1>
+        <!-- Tab content -->
 
-        <p>
-          Rabona Casino makes it easy for players to handle their money, whether
-          it's depositing funds or withdrawing winnings. In this guide, we’ll
-          break down how the payment system works, so you can enjoy your gaming
-          experience without any hassles.
-        </p>
+        <div id="Payments" class="tabcontent-info">
+          <h1>Rabona Payment and Banking System</h1>
 
-        <h2>Banking Options at Rabona</h2>
+          <p>
+            Rabona Casino makes it easy for players to handle their money,
+            whether it's depositing funds or withdrawing winnings. In this
+            guide, we’ll break down how the payment system works, so you can
+            enjoy your gaming experience without any hassles.
+          </p>
 
-        <p>
-          Rabona offers a variety of safe and secure payment options. Here’s
-          what you can use:
-        </p>
+          <h2>Banking Options at Rabona</h2>
 
-        <ul>
-          <li>
-            <strong>Bank Cards:</strong> You can use major credit and debit
-            cards for quick and easy transactions.
-          </li>
-          <li>
-            <strong>E-Wallets:</strong> Services like Skrill and Neteller allow
-            for super-fast transfers.
-          </li>
-          <li>
-            <strong>Trustly:</strong> Trustly lets you make direct bank payments
-            without extra steps.
-          </li>
-          <li>
-            <strong>Cryptocurrency:</strong> Rabona supports Bitcoin, Ethereum,
-            Litecoin, and other cryptocurrencies for fast and secure payments.
-          </li>
-        </ul>
+          <p>
+            Rabona offers a variety of safe and secure payment options. Here’s
+            what you can use:
+          </p>
 
-        <p>
-          These methods are all protected with top-notch encryption, ensuring
-          your transactions are safe.
-        </p>
+          <ul>
+            <li>
+              <strong>Bank Cards:</strong> You can use major credit and debit
+              cards for quick and easy transactions.
+            </li>
+            <li>
+              <strong>E-Wallets:</strong> Services like Skrill and Neteller
+              allow for super-fast transfers.
+            </li>
+            <li>
+              <strong>Trustly:</strong> Trustly lets you make direct bank
+              payments without extra steps.
+            </li>
+            <li>
+              <strong>Cryptocurrency:</strong> Rabona supports Bitcoin,
+              Ethereum, Litecoin, and other cryptocurrencies for fast and secure
+              payments.
+            </li>
+          </ul>
 
-        <p>
-          <strong>Important Note:</strong> The payment methods available can
-          vary based on where you live. Before you make your first deposit,
-          double-check what options are available to you.
-        </p>
+          <p>
+            These methods are all protected with top-notch encryption, ensuring
+            your transactions are safe.
+          </p>
 
-        <h2>Payment Methods: Processing Times and Limits</h2>
+          <p>
+            <strong>Important Note:</strong> The payment methods available can
+            vary based on where you live. Before you make your first deposit,
+            double-check what options are available to you.
+          </p>
 
-        <p>
-          Rabona offers a variety of payment methods to suit your needs. Below,
-          you’ll find detailed information on processing times, as well as the
-          minimum and maximum amounts for each payment option. Choose the method
-          that best fits your preferences and start managing your funds with
-          ease!
-        </p>
+          <h2>Payment Methods: Processing Times and Limits</h2>
 
-        <h3>Payment Methods Overview</h3>
+          <p>
+            Rabona offers a variety of payment methods to suit your needs.
+            Below, you’ll find detailed information on processing times, as well
+            as the minimum and maximum amounts for each payment option. Choose
+            the method that best fits your preferences and start managing your
+            funds with ease!
+          </p>
 
-        <ul>
-          <li>
-            <strong>Interact eTransfer:</strong> 1-3 days processing time.
-            Minimum amount: €10, Maximum amount: €300.
-          </li>
-          <li>
-            <strong>FundID:</strong> 1-3 days processing time. Minimum amount:
-            €30, Maximum amount: €2,200.
-          </li>
-          <li>
-            <strong>Bank Transfer:</strong> 1-3 days processing time. Minimum
-            amount: €80, Maximum amount: €10,000.
-          </li>
-          <li>
-            <strong>Jeton:</strong> 1-3 days processing time. Minimum amount:
-            €20, Maximum amount: €10,000.
-          </li>
-          <li>
-            <strong>MiFinity:</strong> 1-3 days processing time. Minimum amount:
-            €15, Maximum amount: €3,750.
-          </li>
-          <li>
-            <strong>Bitcoin Cash:</strong> 1-3 days processing time. Minimum
-            amount: €20, Maximum amount: €10,000.
-          </li>
-          <li>
-            <strong>Tether:</strong> 1-3 days processing time. Minimum amount:
-            €20, Maximum amount: €10,000.
-          </li>
-          <li>
-            <strong>Bitcoin:</strong> 1-3 days processing time. Minimum amount:
-            €50, Maximum amount: €10,000.
-          </li>
-          <li>
-            <strong>Litecoin:</strong> 1-3 days processing time. Minimum amount:
-            €20, Maximum amount: €10,000.
-          </li>
-          <li>
-            <strong>Ethereum:</strong> 1-3 days processing time. Minimum amount:
-            €20, Maximum amount: €10,000.
-          </li>
-          <li>
-            <strong>Ripple:</strong> 1-3 days processing time. Minimum amount:
-            €20, Maximum amount: €10,000.
-          </li>
-          <li>
-            <strong>USD Coin:</strong> 1-3 days processing time. Minimum amount:
-            €20, Maximum amount: €10,000.
-          </li>
-          <li>
-            <strong>DAI:</strong> 1-3 days processing time. Minimum amount: €20,
-            Maximum amount: €10,000.
-          </li>
-        </ul>
+          <h3>Payment Methods Overview</h3>
 
-        <h2>How to Make Deposits</h2>
+          <ul>
+            <li>
+              <strong>Interact eTransfer:</strong> 1-3 days processing time.
+              Minimum amount: €10, Maximum amount: €300.
+            </li>
+            <li>
+              <strong>FundID:</strong> 1-3 days processing time. Minimum amount:
+              €30, Maximum amount: €2,200.
+            </li>
+            <li>
+              <strong>Bank Transfer:</strong> 1-3 days processing time. Minimum
+              amount: €80, Maximum amount: €10,000.
+            </li>
+            <li>
+              <strong>Jeton:</strong> 1-3 days processing time. Minimum amount:
+              €20, Maximum amount: €10,000.
+            </li>
+            <li>
+              <strong>MiFinity:</strong> 1-3 days processing time. Minimum
+              amount: €15, Maximum amount: €3,750.
+            </li>
+            <li>
+              <strong>Bitcoin Cash:</strong> 1-3 days processing time. Minimum
+              amount: €20, Maximum amount: €10,000.
+            </li>
+            <li>
+              <strong>Tether:</strong> 1-3 days processing time. Minimum amount:
+              €20, Maximum amount: €10,000.
+            </li>
+            <li>
+              <strong>Bitcoin:</strong> 1-3 days processing time. Minimum
+              amount: €50, Maximum amount: €10,000.
+            </li>
+            <li>
+              <strong>Litecoin:</strong> 1-3 days processing time. Minimum
+              amount: €20, Maximum amount: €10,000.
+            </li>
+            <li>
+              <strong>Ethereum:</strong> 1-3 days processing time. Minimum
+              amount: €20, Maximum amount: €10,000.
+            </li>
+            <li>
+              <strong>Ripple:</strong> 1-3 days processing time. Minimum amount:
+              €20, Maximum amount: €10,000.
+            </li>
+            <li>
+              <strong>USD Coin:</strong> 1-3 days processing time. Minimum
+              amount: €20, Maximum amount: €10,000.
+            </li>
+            <li>
+              <strong>DAI:</strong> 1-3 days processing time. Minimum amount:
+              €20, Maximum amount: €10,000.
+            </li>
+          </ul>
 
-        <p>
-          Depositing money into your Rabona account is simple. Here’s what you
-          need to do:
-        </p>
+          <h2>How to Make Deposits</h2>
 
-        <ol>
-          <li>
-            <strong>Go to the Deposit Section:</strong> After logging in, find
-            the “Deposits and Withdrawals” page.
-          </li>
-          <li>
-            <strong>Choose Your Payment Method:</strong> Pick the option you’re
-            most comfortable with.
-          </li>
-          <li>
-            <strong>Deposit Minimum:</strong> The minimum amount you can deposit
-            is €20, but you can always add more if you want.
-          </li>
-          <li>
-            <strong>Supported Methods:</strong> Rabona accepts several options
-            like Ethereum, EcoPayz, and Neteller for deposits.
-          </li>
-        </ol>
+          <p>
+            Depositing money into your Rabona account is simple. Here’s what you
+            need to do:
+          </p>
 
-        <p>
-          Keep in mind that some deposit methods may not be available for
-          withdrawals, so you might need to use a different method to cash out.
-        </p>
+          <ol>
+            <li>
+              <strong>Go to the Deposit Section:</strong> After logging in, find
+              the “Deposits and Withdrawals” page.
+            </li>
+            <li>
+              <strong>Choose Your Payment Method:</strong> Pick the option
+              you’re most comfortable with.
+            </li>
+            <li>
+              <strong>Deposit Minimum:</strong> The minimum amount you can
+              deposit is €20, but you can always add more if you want.
+            </li>
+            <li>
+              <strong>Supported Methods:</strong> Rabona accepts several options
+              like Ethereum, EcoPayz, and Neteller for deposits.
+            </li>
+          </ol>
 
-        <h2>How Withdrawals Work at Rabona</h2>
+          <p>
+            Keep in mind that some deposit methods may not be available for
+            withdrawals, so you might need to use a different method to cash
+            out.
+          </p>
 
-        <p>
-          Withdrawing your winnings at Rabona is quick, usually taking between 0
-          and 4 hours. Here's how you can withdraw your money:
-        </p>
+          <h2>How Withdrawals Work at Rabona</h2>
 
-        <h3>How Long Does It Take?</h3>
+          <p>
+            Withdrawing your winnings at Rabona is quick, usually taking between
+            0 and 4 hours. Here's how you can withdraw your money:
+          </p>
 
-        <p>
-          Most withdrawals are processed instantly. However, it could take up to
-          4 hours depending on a few factors like:
-        </p>
+          <h3>How Long Does It Take?</h3>
 
-        <ul>
-          <li>
-            <strong>Technical Issues or Maintenance:</strong> Sometimes delays
-            happen due to routine checks or technical problems.
-          </li>
-          <li>
-            <strong>KYC (Know Your Customer):</strong> Rabona follows legal
-            rules to verify your identity, which could take some time.
-          </li>
-          <li>
-            <strong>Intermediary Delays:</strong> Certain payment gateways might
-            cause short delays.
-          </li>
-        </ul>
+          <p>
+            Most withdrawals are processed instantly. However, it could take up
+            to 4 hours depending on a few factors like:
+          </p>
 
-        <h3>Withdrawal Requirements</h3>
+          <ul>
+            <li>
+              <strong>Technical Issues or Maintenance:</strong> Sometimes delays
+              happen due to routine checks or technical problems.
+            </li>
+            <li>
+              <strong>KYC (Know Your Customer):</strong> Rabona follows legal
+              rules to verify your identity, which could take some time.
+            </li>
+            <li>
+              <strong>Intermediary Delays:</strong> Certain payment gateways
+              might cause short delays.
+            </li>
+          </ul>
 
-        <p>
-          To keep your account safe, Rabona follows a "Know Your Customer" (KYC)
-          process. This means you’ll need to verify your identity before making
-          a withdrawal.
-        </p>
+          <h3>Withdrawal Requirements</h3>
 
-        <h3>Documents You’ll Need:</h3>
+          <p>
+            To keep your account safe, Rabona follows a "Know Your Customer"
+            (KYC) process. This means you’ll need to verify your identity before
+            making a withdrawal.
+          </p>
 
-        <ul>
-          <li>
-            <strong>Proof of Identity:</strong> Passport, driver’s license, or
-            ID card.
-          </li>
-          <li>
-            <strong>Proof of Address:</strong> A utility bill or bank statement
-            showing your address.
-          </li>
-          <li>
-            <strong>Payment Method Verification:</strong> Proof that the payment
-            method you’re using is yours.
-          </li>
-        </ul>
+          <h3>Documents You’ll Need:</h3>
 
-        <h3>Tips for Fast Verification:</h3>
+          <ul>
+            <li>
+              <strong>Proof of Identity:</strong> Passport, driver’s license, or
+              ID card.
+            </li>
+            <li>
+              <strong>Proof of Address:</strong> A utility bill or bank
+              statement showing your address.
+            </li>
+            <li>
+              <strong>Payment Method Verification:</strong> Proof that the
+              payment method you’re using is yours.
+            </li>
+          </ul>
 
-        <ul>
-          <li>Make sure your document photos are clear and show all edges.</li>
-          <li>Use natural lighting for better visibility.</li>
-          <li>Only use valid documents that aren’t expired.</li>
-        </ul>
+          <h3>Tips for Fast Verification:</h3>
 
-        <h2>Security at Rabona</h2>
+          <ul>
+            <li>
+              Make sure your document photos are clear and show all edges.
+            </li>
+            <li>Use natural lighting for better visibility.</li>
+            <li>Only use valid documents that aren’t expired.</li>
+          </ul>
 
-        <p>
-          Rabona takes security seriously. They use advanced encryption to
-          protect all transactions and work with trusted, licensed payment
-          providers. This means your money and personal information are always
-          safe.
-        </p>
+          <h2>Security at Rabona</h2>
 
-        <h2>Customer Support</h2>
+          <p>
+            Rabona takes security seriously. They use advanced encryption to
+            protect all transactions and work with trusted, licensed payment
+            providers. This means your money and personal information are always
+            safe.
+          </p>
 
-        <p>
-          If you run into any issues or have questions, Rabona’s customer
-          support is available 24/7. You can reach them through live chat or
-          email, and they usually respond quickly. There’s also a handy FAQ
-          section for common questions.
-        </p>
+          <h2>Customer Support</h2>
 
-        <h2>Conclusion</h2>
+          <p>
+            If you run into any issues or have questions, Rabona’s customer
+            support is available 24/7. You can reach them through live chat or
+            email, and they usually respond quickly. There’s also a handy FAQ
+            section for common questions.
+          </p>
 
-        <p>
-          Rabona Casino makes handling your money easy and secure. Whether
-          you’re depositing or withdrawing, the process is quick, with plenty of
-          options to choose from. Plus, with top-level security in place, you
-          can enjoy playing without worrying about your funds.
-        </p>
+          <h2>Conclusion</h2>
+
+          <p>
+            Rabona Casino makes handling your money easy and secure. Whether
+            you’re depositing or withdrawing, the process is quick, with plenty
+            of options to choose from. Plus, with top-level security in place,
+            you can enjoy playing without worrying about your funds.
+          </p>
+        </div>
       </div>
 
       <footer class="bottom-page">
