--- a/Reviews-page/Roobet/Bonus/index.html
+++ b/Reviews-page/Roobet/Bonus/index.html
@@ -276,241 +276,245 @@
 
   -->
     <section class="casino-allInfo">
-      <div class="casino-banner">
-        <a
-          href="https://go.roobetaffiliates.com/visit/?bta=39114&nci=5349"
-          aria-label="Read more about Roobet"
-          ><img
-            src="/img/news-banners/roobet-banner4.webp"
-            width="300"
-            height="200"
-            alt="roobet banner"
-        /></a>
-      </div>
-
-      <div class="casino-infoLogo">
-        <div class="logo-box">
-          <img src="/img/Roobet.webp" loading="lazy" alt="roobet logo" />
+      <div class="info-Block">
+        <div class="casino-banner">
+          <a
+            href="https://go.roobetaffiliates.com/visit/?bta=39114&nci=5349"
+            aria-label="Read more about Roobet"
+            ><img
+              src="/img/news-banners/roobet-banner4.webp"
+              width="300"
+              height="200"
+              alt="roobet banner"
+          /></a>
         </div>
-      </div>
-      <div class="play-now">
-        <a
-          href="https://go.roobetaffiliates.com/visit/?bta=39114&nci=5349"
-          aria-label="Read more about Roobet"
-          ><button>Play Now</button></a
-        >
-      </div>
 
-      <div class="tab-info">
-        <a href="/Reviews-page/Roobet/" class="tablinks">
-          <button>Overview</button>
-        </a>
-        <a href="/Reviews-page/Roobet/Bonus/" class="tablinks">
-          <button>Bonuses</button>
-        </a>
-        <a href="/Reviews-page/Roobet/Games/" class="tablinks">
-          <button>Games</button>
-        </a>
-        <a href="/Reviews-page/Roobet/Payments/" class="tablinks">
-          <button>Payments</button>
-        </a>
-      </div>
-
-      <!-- Tab content -->
-      <div id="Bonuses" class="tabcontent-info">
-        <!-- bonus tabs -->
-        <div class="bonus-tabs">
-          <div id="tab-buttons">
-            <button
-              class="tab-button-bonus active"
-              onclick="showTab('casinos')"
-            >
-              Casino
-            </button>
-            <button class="tab-button-bonus" onclick="showTab('esports')">
-              ESports
-            </button>
-            <button class="tab-button-bonus" onclick="showTab('sports')">
-              Sports
-            </button>
-          </div>
-
-          <!-- Tab content -->
-          <div id="tab-contents-bonus">
-            <!-- casino tab -->
-            <div id="casinos" class="tab-content-bonus active">
-              <div class="short-info">
-                <ul>
-                  <li>Best Reward System</li>
-                  <li>UFC Brand Ambasadors</li>
-                  <li>6000+ Games</li>
-                </ul>
-              </div>
-              <div class="casino-bonus">
-                <p class="casino-bonus-title"></p>
-                <p>Parlay Power Play – $40K in Prizes</p>
-              </div>
-              <div class="buttons-toWebsite">
-                <div class="promo-code">
-                  <p>Promo code</p>
-                  <p>ALL4Wins</p>
-                </div>
-                <a
-                  href="https://go.roobetaffiliates.com/visit/?bta=39114&nci=5349"
-                  aria-label="Read more about Roobet"
-                >
-                  <div class="to-website" id="play-Bet-now">Play now</div>
-                </a>
-              </div>
-            </div>
-            <!-- espoerts tab -->
-            <div id="esports" class="tab-content-bonus">
-              <div class="short-info">
-                <ul>
-                  <li>Best Reward System</li>
-                  <li>UFC Brand Ambasadors</li>
-                  <li>Competitive Odds</li>
-                </ul>
-              </div>
-              <div class="casino-bonus">
-                <p class="casino-bonus-title"></p>
-                <p>Parlay Power Play – $40K in Prizes</p>
-              </div>
-              <div class="buttons-toWebsite">
-                <div class="promo-code">
-                  <p>Promo code</p>
-                  <p>ALL4WINS</p>
-                </div>
-                <a
-                  href="https://go.roobetaffiliates.com/visit/?bta=39114&nci=5684"
-                >
-                  <div class="to-website" id="play-Bet-now">Bet now</div>
-                </a>
-              </div>
-            </div>
-            <!-- sports tab -->
-            <div id="sports" class="tab-content-bonus">
-              <div class="short-info">
-                <ul>
-                  <li>Best Reward System</li>
-                  <li>UFC Brand Ambasadors</li>
-                  <li>Competitive Odds</li>
-                </ul>
-              </div>
-              <div class="casino-bonus">
-                <p class="casino-bonus-title"></p>
-                <p>Parlay Power Play – $40K in Prizes</p>
-              </div>
-              <div class="buttons-toWebsite">
-                <div class="promo-code">
-                  <p>Promo code</p>
-                  <p>ALL4WINS</p>
-                </div>
-                <a
-                  href="https://go.roobetaffiliates.com/visit/?bta=39114&nci=6458"
-                >
-                  <div class="to-website" id="play-Bet-now">Bet now</div>
-                </a>
-              </div>
-            </div>
+        <div class="casino-infoLogo">
+          <div class="logo-box">
+            <img src="/img/Roobet.webp" loading="lazy" alt="roobet logo" />
           </div>
         </div>
-
-        <!-- bonus info -->
-        <h1>Promotions and Bonuses</h1>
-
-        <p>
-          Once you are part of the Roobet community, you’ll find the
-          <strong>Promotions Page</strong> through the
-          <strong>megaphone icon</strong> on their handy left-hand sidebar. This
-          will be your go-to spot for staying up-to-date with all the ways to
-          win big. Whether it’s ongoing <strong>slot tournaments</strong>,
-          exciting <strong>raffles</strong>, special
-          <strong>Sportsbook promotions</strong>, or their new
-          <strong>loyalty rewards system</strong>, every bet is a new chance to
-          boost your winnings.
-        </p>
-
-        <h2>Rewards and Loyalty Program</h2>
-
-        <p>
-          Join the community, level up, and unlock exclusive
-          <strong>Rewards</strong> at every stage of your gameplay:
-        </p>
-        <ul>
-          <li>
-            <strong>Instant Rakeback:</strong> you can claim a percentage of
-            your wagered amount back every <strong>30 minutes</strong>, part of
-            it will go directly to your balance, and part of it will go into
-            <strong>The Vault</strong>.
-          </li>
-          <li>
-            <strong>The Vault:</strong> Extra lossback and rakeback available
-            that you can claim <strong>three times a day</strong>.
-          </li>
-          <li>
-            <strong>Daily, Weekly, and Monthly Bonuses:</strong> Stay active for
-            personalized rewards every day, every week, and every month based on
-            your previous activity.
-          </li>
-          <li>
-            <strong>Rake Boost:</strong> Better rakeback every time you claim
-            your rewards.
-          </li>
-          <li>
-            <strong>Rank-Up Bonuses:</strong> Instant cash rewards every time
-            you level up.
-          </li>
-        </ul>
-        <div class="review-img">
-          <img
-            src="/img/news-banners/roobet-promotions.webp"
-            width="300"
-            height="200"
-            loading="lazy"
-            alt="katsubet site"
-          />
+        <div class="play-now">
+          <a
+            href="https://go.roobetaffiliates.com/visit/?bta=39114&nci=5349"
+            aria-label="Read more about Roobet"
+            ><button>Play Now</button></a
+          >
         </div>
 
-        <p>
-          As a valued Roobettor, you’ll earn extra perks, like
-          <strong>birthday rewards</strong>, and the chance to compete every
-          month in a <strong>$25,000 Loyalty Competition</strong>.
-        </p>
+        <div class="tab-info">
+          <a href="/Reviews-page/Roobet/" class="tablinks">
+            <button>Overview</button>
+          </a>
+          <a href="/Reviews-page/Roobet/Bonus/" class="tablinks">
+            <button>Bonuses</button>
+          </a>
+          <a href="/Reviews-page/Roobet/Games/" class="tablinks">
+            <button>Games</button>
+          </a>
+          <a href="/Reviews-page/Roobet/Payments/" class="tablinks">
+            <button>Payments</button>
+          </a>
+        </div>
 
-        <h2>Ongoing Raffles</h2>
+        <!-- Tab content -->
+        <div id="Bonuses" class="tabcontent-info">
+          <!-- bonus tabs -->
+          <div class="bonus-tabs">
+            <div id="tab-buttons">
+              <button
+                class="tab-button-bonus active"
+                onclick="showTab('casinos')"
+              >
+                Casino
+              </button>
+              <button class="tab-button-bonus" onclick="showTab('esports')">
+                ESports
+              </button>
+              <button class="tab-button-bonus" onclick="showTab('sports')">
+                Sports
+              </button>
+            </div>
 
-        <p>
-          With <strong>$100,000</strong> up for grabs in August, Roobet’s
-          <strong>$100,000 Go for Gold Raffle</strong> is just a slice of their
-          <strong>$250,000 Go for Gold</strong> campaign that is taking place
-          this month. Keep an eye out for special
-          <strong>weekend events</strong>, <strong>High Multi Tourneys</strong>,
-          <strong>Cash Drops</strong>, and even more opportunities to win.
-        </p>
+            <!-- Tab content -->
+            <div id="tab-contents-bonus">
+              <!-- casino tab -->
+              <div id="casinos" class="tab-content-bonus active">
+                <div class="short-info">
+                  <ul>
+                    <li>Best Reward System</li>
+                    <li>UFC Brand Ambasadors</li>
+                    <li>6000+ Games</li>
+                  </ul>
+                </div>
+                <div class="casino-bonus">
+                  <p class="casino-bonus-title"></p>
+                  <p>Parlay Power Play – $40K in Prizes</p>
+                </div>
+                <div class="buttons-toWebsite">
+                  <div class="promo-code">
+                    <p>Promo code</p>
+                    <p>ALL4Wins</p>
+                  </div>
+                  <a
+                    href="https://go.roobetaffiliates.com/visit/?bta=39114&nci=5349"
+                    aria-label="Read more about Roobet"
+                  >
+                    <div class="to-website" id="play-Bet-now">Play now</div>
+                  </a>
+                </div>
+              </div>
+              <!-- espoerts tab -->
+              <div id="esports" class="tab-content-bonus">
+                <div class="short-info">
+                  <ul>
+                    <li>Best Reward System</li>
+                    <li>UFC Brand Ambasadors</li>
+                    <li>Competitive Odds</li>
+                  </ul>
+                </div>
+                <div class="casino-bonus">
+                  <p class="casino-bonus-title"></p>
+                  <p>Parlay Power Play – $40K in Prizes</p>
+                </div>
+                <div class="buttons-toWebsite">
+                  <div class="promo-code">
+                    <p>Promo code</p>
+                    <p>ALL4WINS</p>
+                  </div>
+                  <a
+                    href="https://go.roobetaffiliates.com/visit/?bta=39114&nci=5684"
+                  >
+                    <div class="to-website" id="play-Bet-now">Bet now</div>
+                  </a>
+                </div>
+              </div>
+              <!-- sports tab -->
+              <div id="sports" class="tab-content-bonus">
+                <div class="short-info">
+                  <ul>
+                    <li>Best Reward System</li>
+                    <li>UFC Brand Ambasadors</li>
+                    <li>Competitive Odds</li>
+                  </ul>
+                </div>
+                <div class="casino-bonus">
+                  <p class="casino-bonus-title"></p>
+                  <p>Parlay Power Play – $40K in Prizes</p>
+                </div>
+                <div class="buttons-toWebsite">
+                  <div class="promo-code">
+                    <p>Promo code</p>
+                    <p>ALL4WINS</p>
+                  </div>
+                  <a
+                    href="https://go.roobetaffiliates.com/visit/?bta=39114&nci=6458"
+                  >
+                    <div class="to-website" id="play-Bet-now">Bet now</div>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
 
-        <h2>Other Frequent Events</h2>
+          <!-- bonus info -->
+          <h1>Promotions and Bonuses</h1>
 
-        <p>
-          <strong>King Roo</strong> - Get ready for King Roo’s arrival—Roobet’s
-          biggest and most legendary event. During this
-          <strong>24-hour showdown</strong>, hitting a <strong>100x</strong> or
-          higher multiplier on any slot will crown you King Roo. While you hold
-          the title, you’ll earn a cut of all slot wagers site-wide until
-          someone else beats your multiplier and snatches the crown. There can
-          only be one King Roo, but you can claim the title as many times as you
-          can!
-        </p>
+          <p>
+            Once you are part of the Roobet community, you’ll find the
+            <strong>Promotions Page</strong> through the
+            <strong>megaphone icon</strong> on their handy left-hand sidebar.
+            This will be your go-to spot for staying up-to-date with all the
+            ways to win big. Whether it’s ongoing
+            <strong>slot tournaments</strong>, exciting
+            <strong>raffles</strong>, special
+            <strong>Sportsbook promotions</strong>, or their new
+            <strong>loyalty rewards system</strong>, every bet is a new chance
+            to boost your winnings.
+          </p>
 
-        <p>
-          <strong>Slot Potato</strong> - Another fan-favorite promotion at the
-          Fastest Growing Crypto Casino. During the event, track the
-          <strong>featured slot</strong> on the homepage and enjoy
-          <strong>3x Rewards</strong>. The featured slot changes every few
-          minutes, so keep an eye on the banner to stay in the game.
-        </p>
+          <h2>Rewards and Loyalty Program</h2>
 
-        <p></p>
+          <p>
+            Join the community, level up, and unlock exclusive
+            <strong>Rewards</strong> at every stage of your gameplay:
+          </p>
+          <ul>
+            <li>
+              <strong>Instant Rakeback:</strong> you can claim a percentage of
+              your wagered amount back every <strong>30 minutes</strong>, part
+              of it will go directly to your balance, and part of it will go
+              into <strong>The Vault</strong>.
+            </li>
+            <li>
+              <strong>The Vault:</strong> Extra lossback and rakeback available
+              that you can claim <strong>three times a day</strong>.
+            </li>
+            <li>
+              <strong>Daily, Weekly, and Monthly Bonuses:</strong> Stay active
+              for personalized rewards every day, every week, and every month
+              based on your previous activity.
+            </li>
+            <li>
+              <strong>Rake Boost:</strong> Better rakeback every time you claim
+              your rewards.
+            </li>
+            <li>
+              <strong>Rank-Up Bonuses:</strong> Instant cash rewards every time
+              you level up.
+            </li>
+          </ul>
+          <div class="review-img">
+            <img
+              src="/img/news-banners/roobet-promotions.webp"
+              width="300"
+              height="200"
+              loading="lazy"
+              alt="katsubet site"
+            />
+          </div>
+
+          <p>
+            As a valued Roobettor, you’ll earn extra perks, like
+            <strong>birthday rewards</strong>, and the chance to compete every
+            month in a <strong>$25,000 Loyalty Competition</strong>.
+          </p>
+
+          <h2>Ongoing Raffles</h2>
+
+          <p>
+            With <strong>$100,000</strong> up for grabs in August, Roobet’s
+            <strong>$100,000 Go for Gold Raffle</strong> is just a slice of
+            their <strong>$250,000 Go for Gold</strong> campaign that is taking
+            place this month. Keep an eye out for special
+            <strong>weekend events</strong>,
+            <strong>High Multi Tourneys</strong>, <strong>Cash Drops</strong>,
+            and even more opportunities to win.
+          </p>
+
+          <h2>Other Frequent Events</h2>
+
+          <p>
+            <strong>King Roo</strong> - Get ready for King Roo’s
+            arrival—Roobet’s biggest and most legendary event. During this
+            <strong>24-hour showdown</strong>, hitting a
+            <strong>100x</strong> or higher multiplier on any slot will crown
+            you King Roo. While you hold the title, you’ll earn a cut of all
+            slot wagers site-wide until someone else beats your multiplier and
+            snatches the crown. There can only be one King Roo, but you can
+            claim the title as many times as you can!
+          </p>
+
+          <p>
+            <strong>Slot Potato</strong> - Another fan-favorite promotion at the
+            Fastest Growing Crypto Casino. During the event, track the
+            <strong>featured slot</strong> on the homepage and enjoy
+            <strong>3x Rewards</strong>. The featured slot changes every few
+            minutes, so keep an eye on the banner to stay in the game.
+          </p>
+
+          <p></p>
+        </div>
       </div>
 
       <footer class="bottom-page">
