--- a/Reviews-page/Roobet/Payments/index.html
+++ b/Reviews-page/Roobet/Payments/index.html
@@ -276,224 +276,228 @@
 
   -->
     <section class="casino-allInfo">
-      <div class="casino-banner">
-        <a
-          href="https://go.roobetaffiliates.com/visit/?bta=39114&nci=5349"
-          aria-label="Read more about Roobet"
-          ><img
-            src="/img/news-banners/roobet-banner4.webp"
-            width="300"
-            height="200"
-            alt="roobet banner"
-        /></a>
-      </div>
-
-      <div class="casino-infoLogo">
-        <div class="logo-box">
-          <img src="/img/Roobet.webp" loading="lazy" alt="roobet logo" />
+      <div class="info-Block">
+        <div class="casino-banner">
+          <a
+            href="https://go.roobetaffiliates.com/visit/?bta=39114&nci=5349"
+            aria-label="Read more about Roobet"
+            ><img
+              src="/img/news-banners/roobet-banner4.webp"
+              width="300"
+              height="200"
+              alt="roobet banner"
+          /></a>
         </div>
-      </div>
-      <div class="play-now">
-        <a
-          href="https://go.roobetaffiliates.com/visit/?bta=39114&nci=5349"
-          aria-label="Read more about Roobet"
-          ><button>Play Now</button></a
-        >
-      </div>
 
-      <div class="tab-info">
-        <a href="/Reviews-page/Roobet/" class="tablinks">
-          <button>Overview</button>
-        </a>
-        <a href="/Reviews-page/Roobet/Bonus/" class="tablinks">
-          <button>Bonuses</button>
-        </a>
-        <a href="/Reviews-page/Roobet/Games/" class="tablinks">
-          <button>Games</button>
-        </a>
-        <a href="/Reviews-page/Roobet/Payments/" class="tablinks">
-          <button>Payments</button>
-        </a>
-      </div>
+        <div class="casino-infoLogo">
+          <div class="logo-box">
+            <img src="/img/Roobet.webp" loading="lazy" alt="roobet logo" />
+          </div>
+        </div>
+        <div class="play-now">
+          <a
+            href="https://go.roobetaffiliates.com/visit/?bta=39114&nci=5349"
+            aria-label="Read more about Roobet"
+            ><button>Play Now</button></a
+          >
+        </div>
 
-      <!-- Tab content -->
-      <div id="Payments" class="tabcontent-info">
-        <h1>Roobet Payment System Overview</h1>
+        <div class="tab-info">
+          <a href="/Reviews-page/Roobet/" class="tablinks">
+            <button>Overview</button>
+          </a>
+          <a href="/Reviews-page/Roobet/Bonus/" class="tablinks">
+            <button>Bonuses</button>
+          </a>
+          <a href="/Reviews-page/Roobet/Games/" class="tablinks">
+            <button>Games</button>
+          </a>
+          <a href="/Reviews-page/Roobet/Payments/" class="tablinks">
+            <button>Payments</button>
+          </a>
+        </div>
 
-        <p>
-          Roobet has built one of the most seamless and transparent payment
-          systems in the online casino industry. Focused primarily on crypto but
-          with support for select fiat methods, the platform allows players to
-          move funds quickly, safely, and with minimal fees. Its combination of
-          flexibility, security, and speed makes it a favorite among crypto
-          casino enthusiasts and newcomers alike.
-        </p>
+        <!-- Tab content -->
+        <div id="Payments" class="tabcontent-info">
+          <h1>Roobet Payment System Overview</h1>
 
-        <h2>Supported Cryptocurrencies</h2>
+          <p>
+            Roobet has built one of the most seamless and transparent payment
+            systems in the online casino industry. Focused primarily on crypto
+            but with support for select fiat methods, the platform allows
+            players to move funds quickly, safely, and with minimal fees. Its
+            combination of flexibility, security, and speed makes it a favorite
+            among crypto casino enthusiasts and newcomers alike.
+          </p>
 
-        <p>
-          As a crypto-first casino, Roobet supports a wide range of popular
-          digital currencies. Players can make deposits and withdrawals using
-          trusted coins such as:
-        </p>
+          <h2>Supported Cryptocurrencies</h2>
 
-        <ul>
-          <li>
-            <strong>Bitcoin (BTC)</strong> – the most widely used crypto on
-            Roobet, known for its stability and high liquidity.
-          </li>
-          <li>
-            <strong>Ethereum (ETH)</strong> – a top choice for fast transactions
-            and lower network fees during off-peak times.
-          </li>
-          <li>
-            <strong>Tether (USDT)</strong> – ideal for those who prefer
-            stablecoins pegged to the U.S. dollar, ensuring no value
-            fluctuations.
-          </li>
-          <li>
-            <strong>Litecoin (LTC)</strong> – popular for quick and
-            cost-effective transfers with smaller fees.
-          </li>
-          <li>
-            <strong>USD Coin (USDC)</strong> – another trusted stablecoin option
-            for consistent value transfers.
-          </li>
-          <li>
-            <strong>Dogecoin (DOGE)</strong> – a community-favorite token that
-            offers speedy transfers and growing support.
-          </li>
-          <li>
-            <strong>Ripple (XRP)</strong> – known for its near-instant
-            processing times and low transaction costs.
-          </li>
-        </ul>
+          <p>
+            As a crypto-first casino, Roobet supports a wide range of popular
+            digital currencies. Players can make deposits and withdrawals using
+            trusted coins such as:
+          </p>
 
-        <p>
-          These cryptocurrencies can be exchanged through reliable wallets and
-          platforms like <strong>Blockchain.com</strong>,
-          <strong>Exodus</strong>, or <strong>Coinbase</strong>. Roobet’s system
-          detects your deposit automatically after network confirmation, meaning
-          there’s no need for manual verification or long waiting times.
-        </p>
+          <ul>
+            <li>
+              <strong>Bitcoin (BTC)</strong> – the most widely used crypto on
+              Roobet, known for its stability and high liquidity.
+            </li>
+            <li>
+              <strong>Ethereum (ETH)</strong> – a top choice for fast
+              transactions and lower network fees during off-peak times.
+            </li>
+            <li>
+              <strong>Tether (USDT)</strong> – ideal for those who prefer
+              stablecoins pegged to the U.S. dollar, ensuring no value
+              fluctuations.
+            </li>
+            <li>
+              <strong>Litecoin (LTC)</strong> – popular for quick and
+              cost-effective transfers with smaller fees.
+            </li>
+            <li>
+              <strong>USD Coin (USDC)</strong> – another trusted stablecoin
+              option for consistent value transfers.
+            </li>
+            <li>
+              <strong>Dogecoin (DOGE)</strong> – a community-favorite token that
+              offers speedy transfers and growing support.
+            </li>
+            <li>
+              <strong>Ripple (XRP)</strong> – known for its near-instant
+              processing times and low transaction costs.
+            </li>
+          </ul>
 
-        <h2>Fiat Deposit and Withdrawal Options</h2>
+          <p>
+            These cryptocurrencies can be exchanged through reliable wallets and
+            platforms like <strong>Blockchain.com</strong>,
+            <strong>Exodus</strong>, or <strong>Coinbase</strong>. Roobet’s
+            system detects your deposit automatically after network
+            confirmation, meaning there’s no need for manual verification or
+            long waiting times.
+          </p>
 
-        <p>
-          Although Roobet primarily caters to crypto users, it also offers fiat
-          transaction options to enhance accessibility for a broader audience.
-          Players who prefer to deposit or withdraw using traditional currencies
-          can do so through supported payment processors or intermediary
-          services linked to crypto exchanges.
-        </p>
+          <h2>Fiat Deposit and Withdrawal Options</h2>
 
-        <p>
-          For fiat transactions, Roobet maintains clear and player-friendly
-          limits:
-        </p>
+          <p>
+            Although Roobet primarily caters to crypto users, it also offers
+            fiat transaction options to enhance accessibility for a broader
+            audience. Players who prefer to deposit or withdraw using
+            traditional currencies can do so through supported payment
+            processors or intermediary services linked to crypto exchanges.
+          </p>
 
-        <ul>
-          <li><strong>Minimum Deposit:</strong> $10</li>
-          <li><strong>Minimum Withdrawal:</strong> $10</li>
-          <li><strong>Maximum Withdrawal:</strong> $10,000</li>
-        </ul>
+          <p>
+            For fiat transactions, Roobet maintains clear and player-friendly
+            limits:
+          </p>
 
-        <p>
-          Unlike crypto transfers, which have no official upper limit, fiat
-          withdrawals are capped to ensure compliance with financial
-          regulations. Processing times for fiat withdrawals may take longer
-          than crypto transfers, depending on the payment provider and
-          verification requirements.
-        </p>
+          <ul>
+            <li><strong>Minimum Deposit:</strong> $10</li>
+            <li><strong>Minimum Withdrawal:</strong> $10</li>
+            <li><strong>Maximum Withdrawal:</strong> $10,000</li>
+          </ul>
 
-        <h2>Crypto Deposit and Withdrawal Process</h2>
+          <p>
+            Unlike crypto transfers, which have no official upper limit, fiat
+            withdrawals are capped to ensure compliance with financial
+            regulations. Processing times for fiat withdrawals may take longer
+            than crypto transfers, depending on the payment provider and
+            verification requirements.
+          </p>
 
-        <p>
-          Depositing with crypto on Roobet is fast and straightforward. Once
-          logged into your account, you can navigate to the wallet section,
-          select your preferred coin, and generate a deposit address. After
-          sending funds from your personal wallet, Roobet credits your account
-          after the blockchain confirms the transaction.
-        </p>
+          <h2>Crypto Deposit and Withdrawal Process</h2>
 
-        <p>
-          Withdrawals follow a similar process. Simply input the destination
-          wallet address and the amount you wish to cash out. In most cases,
-          transactions are processed within minutes, although network congestion
-          or additional verification can occasionally extend this timeframe.
-        </p>
+          <p>
+            Depositing with crypto on Roobet is fast and straightforward. Once
+            logged into your account, you can navigate to the wallet section,
+            select your preferred coin, and generate a deposit address. After
+            sending funds from your personal wallet, Roobet credits your account
+            after the blockchain confirms the transaction.
+          </p>
 
-        <h2>Transaction Speed and Fees</h2>
+          <p>
+            Withdrawals follow a similar process. Simply input the destination
+            wallet address and the amount you wish to cash out. In most cases,
+            transactions are processed within minutes, although network
+            congestion or additional verification can occasionally extend this
+            timeframe.
+          </p>
 
-        <p>
-          Roobet’s blockchain-based transactions are among the fastest in the
-          industry. The average crypto deposit is confirmed within minutes, and
-          withdrawals typically clear within the same hour. The platform does
-          not charge any internal transaction fees, though network fees may
-          apply based on your chosen cryptocurrency.
-        </p>
+          <h2>Transaction Speed and Fees</h2>
 
-        <p>
-          For fiat transactions, small service fees may be applied by the
-          intermediary payment processors. These fees vary depending on your
-          region and banking method but are always displayed transparently
-          before confirming the transaction.
-        </p>
+          <p>
+            Roobet’s blockchain-based transactions are among the fastest in the
+            industry. The average crypto deposit is confirmed within minutes,
+            and withdrawals typically clear within the same hour. The platform
+            does not charge any internal transaction fees, though network fees
+            may apply based on your chosen cryptocurrency.
+          </p>
 
-        <h2>Security and Verification</h2>
+          <p>
+            For fiat transactions, small service fees may be applied by the
+            intermediary payment processors. These fees vary depending on your
+            region and banking method but are always displayed transparently
+            before confirming the transaction.
+          </p>
 
-        <p>
-          Roobet places strong emphasis on security when it comes to financial
-          operations. All payments are processed using
-          <strong>SSL encryption</strong>, ensuring that sensitive data is fully
-          protected. In addition, Roobet implements a verification process for
-          large withdrawals or suspicious activity to prevent unauthorized
-          transactions.
-        </p>
+          <h2>Security and Verification</h2>
 
-        <p>
-          Users can enable <strong>two-factor authentication (2FA)</strong> to
-          add an additional layer of protection to their accounts. This ensures
-          that even if your login details are compromised, your funds remain
-          safe.
-        </p>
+          <p>
+            Roobet places strong emphasis on security when it comes to financial
+            operations. All payments are processed using
+            <strong>SSL encryption</strong>, ensuring that sensitive data is
+            fully protected. In addition, Roobet implements a verification
+            process for large withdrawals or suspicious activity to prevent
+            unauthorized transactions.
+          </p>
 
-        <h2>Customer Support and Assistance</h2>
+          <p>
+            Users can enable <strong>two-factor authentication (2FA)</strong> to
+            add an additional layer of protection to their accounts. This
+            ensures that even if your login details are compromised, your funds
+            remain safe.
+          </p>
 
-        <p>
-          If players ever encounter an issue with payments, Roobet’s customer
-          service team is available <strong>24/7</strong> through the integrated
-          live chat system. Accessible from the left-hand sidebar of the
-          interface, this chat connects users directly to an agent, with average
-          response times of under one minute.
-        </p>
+          <h2>Customer Support and Assistance</h2>
 
-        <p>
-          Additionally, Roobet offers a detailed
-          <strong>FAQ section</strong> covering topics like crypto wallet setup,
-          deposit confirmations, and withdrawal procedures. The support staff
-          are well-trained in handling both crypto and fiat inquiries, ensuring
-          smooth communication and quick resolutions.
-        </p>
+          <p>
+            If players ever encounter an issue with payments, Roobet’s customer
+            service team is available <strong>24/7</strong> through the
+            integrated live chat system. Accessible from the left-hand sidebar
+            of the interface, this chat connects users directly to an agent,
+            with average response times of under one minute.
+          </p>
 
-        <h2>Why Roobet’s Payment System Stands Out</h2>
+          <p>
+            Additionally, Roobet offers a detailed
+            <strong>FAQ section</strong> covering topics like crypto wallet
+            setup, deposit confirmations, and withdrawal procedures. The support
+            staff are well-trained in handling both crypto and fiat inquiries,
+            ensuring smooth communication and quick resolutions.
+          </p>
 
-        <p>
-          What truly sets Roobet apart from many other online casinos is its
-          perfect blend of traditional and digital payment options. By
-          supporting both fiat and crypto, Roobet provides flexibility to users
-          from various regions, making it suitable for beginners transitioning
-          into crypto as well as experienced players seeking instant blockchain
-          transactions.
-        </p>
+          <h2>Why Roobet’s Payment System Stands Out</h2>
 
-        <p>
-          With no hidden fees, low minimums, and fast withdrawal times, Roobet
-          has successfully built a payment ecosystem that balances accessibility
-          with innovation. Its emphasis on user security, fast processing, and
-          transparent policies cements its position as one of the most trusted
-          payment systems in the iGaming world.
-        </p>
+          <p>
+            What truly sets Roobet apart from many other online casinos is its
+            perfect blend of traditional and digital payment options. By
+            supporting both fiat and crypto, Roobet provides flexibility to
+            users from various regions, making it suitable for beginners
+            transitioning into crypto as well as experienced players seeking
+            instant blockchain transactions.
+          </p>
+
+          <p>
+            With no hidden fees, low minimums, and fast withdrawal times, Roobet
+            has successfully built a payment ecosystem that balances
+            accessibility with innovation. Its emphasis on user security, fast
+            processing, and transparent policies cements its position as one of
+            the most trusted payment systems in the iGaming world.
+          </p>
+        </div>
       </div>
 
       <footer class="bottom-page">
