--- a/Reviews-page/Roobet/index.html
+++ b/Reviews-page/Roobet/index.html
@@ -270,247 +270,250 @@
 
   -->
     <section class="casino-allInfo">
-      <div class="casino-banner">
-        <a
-          href="https://go.roobetaffiliates.com/visit/?bta=39114&nci=5349"
-          aria-label="Read more about Roobet"
-          ><img
-            src="/img/news-banners/roobet-banner4.webp"
-            width="300"
-            height="200"
-            alt="roobet banner"
-        /></a>
-      </div>
-
-      <div class="casino-infoLogo">
-        <div class="logo-box">
-          <img src="/img/Roobet.webp" loading="lazy" alt="roobet logo" />
+      <div class="info-Block">
+        <div class="casino-banner">
+          <a
+            href="https://go.roobetaffiliates.com/visit/?bta=39114&nci=5349"
+            aria-label="Read more about Roobet"
+            ><img
+              src="/img/news-banners/roobet-banner4.webp"
+              width="300"
+              height="200"
+              alt="roobet banner"
+          /></a>
         </div>
-      </div>
-      <div class="play-now">
-        <a
-          href="https://go.roobetaffiliates.com/visit/?bta=39114&nci=5349"
-          aria-label="Read more about Roobet"
-          ><button>Play Now</button></a
-        >
-      </div>
+        <div class="casino-infoLogo">
+          <div class="logo-box">
+            <img src="/img/Roobet.webp" loading="lazy" alt="roobet logo" />
+          </div>
+        </div>
+        <div class="play-now">
+          <a
+            href="https://go.roobetaffiliates.com/visit/?bta=39114&nci=5349"
+            aria-label="Read more about Roobet"
+            ><button>Play Now</button></a
+          >
+        </div>
 
-      <div class="tab-info">
-        <a href="/Reviews-page/Roobet/" class="tablinks">
-          <button>Overview</button>
-        </a>
-        <a href="/Reviews-page/Roobet/Bonus/" class="tablinks">
-          <button>Bonuses</button>
-        </a>
-        <a href="/Reviews-page/Roobet/Games/" class="tablinks">
-          <button>Games</button>
-        </a>
-        <a href="/Reviews-page/Roobet/Payments/" class="tablinks">
-          <button>Payments</button>
-        </a>
-      </div>
+        <div class="tab-info">
+          <a href="/Reviews-page/Roobet/" class="tablinks">
+            <button>Overview</button>
+          </a>
+          <a href="/Reviews-page/Roobet/Bonus/" class="tablinks">
+            <button>Bonuses</button>
+          </a>
+          <a href="/Reviews-page/Roobet/Games/" class="tablinks">
+            <button>Games</button>
+          </a>
+          <a href="/Reviews-page/Roobet/Payments/" class="tablinks">
+            <button>Payments</button>
+          </a>
+        </div>
 
-      <!-- Tab content -->
-      <div id="Overview" class="tabcontent-info">
-        <div class="overview-button-container">
-          <div class="overview-button">
-            <p>Company</p>
-            <p>RAW ENTERTAIMENT</p>
-          </div>
-          <div class="overview-button">
-            <p>Year Founded</p>
-            <p>2019</p>
-          </div>
-          <div class="overview-button">
-            <p>License</p>
-            <p>Curacao</p>
-          </div>
-          <div class="overview-button">
-            <p>Payout Speed</p>
-            <p>Instant</p>
-          </div>
-          <div class="overview-button">
-            <p>Minimum Deposit</p>
-            <p>$0.1</p>
-          </div>
-          <div class="overview-button">
-            <p>Withdrawal Limit</p>
-            <p>>10,000 per transaction</p>
-          </div>
-
-          <div class="overview-button" id="card-tipe-container">
-            <p>Deposit Methods</p>
-            <div class="cardTipe-container">
-              <img
-                class="card-tipe-info"
-                src="/img/visa-logo.webp"
-                loading="lazy"
-                alt="visa logo"
-              />
-              <img
-                class="card-tipe-info"
-                src="/img/mastercard-logo.webp"
-                loading="lazy"
-                alt="mastercard-logo"
-              />
-              <img
-                class="card-tipe-info"
-                src="/img/skrill-logo.webp"
-                loading="lazy"
-                alt="skrill logo"
-              />
-              <img
-                class="card-tipe tipe4"
-                src="/img/AstroPay.webp"
-                loading="lazy"
-                alt="astropay icon"
-              />
-              <img
-                class="card-tipe"
-                src="/img/litecoin-logo.webp"
-                loading="lazy"
-                alt="litecoin logo"
-              />
-              <img
-                class="card-tipe"
-                src="/img/ethrtium-logo.webp"
-                loading="lazy"
-                alt="etherium logo"
-              />
-              <img
-                class="card-tipe"
-                id="bitCoin-logo"
-                src="/img/bit-coin-logo.webp"
-                loading="lazy"
-                alt="bitcoin logo"
-              />
+        <!-- Tab content -->
+        <div id="Overview" class="tabcontent-info">
+          <div class="overview-button-container">
+            <div class="overview-button">
+              <p>Company</p>
+              <p>RAW ENTERTAIMENT</p>
             </div>
-          </div>
-          <div class="overview-summary">
-            <h1>Roobet, the fastest growing crypto casino</h1>
-
-            <p>
-              <strong>Roobet</strong>, the
-              <strong>fastest growing crypto casino</strong>, is a fully
-              licensed brand established in 2019 and created for gamers by
-              gamers. They have quickly become innovators in online
-              entertainment, pushing the boundaries of what a digital casino can
-              offer with fun always at the forefront.
-            </p>
-            <div class="review-img">
-              <img
-                src="/img/news-banners/roobet-casino.webp"
-                width="300"
-                height="200"
-                loading="lazy"
-                alt="katsubet site"
-              />
+            <div class="overview-button">
+              <p>Year Founded</p>
+              <p>2019</p>
+            </div>
+            <div class="overview-button">
+              <p>License</p>
+              <p>Curacao</p>
+            </div>
+            <div class="overview-button">
+              <p>Payout Speed</p>
+              <p>Instant</p>
+            </div>
+            <div class="overview-button">
+              <p>Minimum Deposit</p>
+              <p>$0.1</p>
+            </div>
+            <div class="overview-button">
+              <p>Withdrawal Limit</p>
+              <p>>10,000 per transaction</p>
             </div>
 
-            <p>
-              <strong>Roobet</strong> is powered by
-              <strong>blockchain technology</strong> and offers a cutting-edge,
-              secure platform that is just right for the new generation of
-              players.
-            </p>
-
-            <p>
-              They have over <strong>6,300 games</strong> from top-tier gaming
-              providers, a jam-packed <strong>Sportsbook</strong> that caters to
-              both traditional sports and <strong>esports</strong>, and an
-              incredible list of original house games. The list is constantly
-              growing and includes unique hits like <strong>Crash</strong>, a
-              totally redesigned <strong>Plinko</strong>, and more
-              out-of-the-box ones like <strong>Mission Uncrossable</strong> and
-              <strong>Snoop’s HotBox</strong>. The last one was created in
-              collaboration with the one and only <strong>Snoop Dogg</strong>,
-              who became a brand ambassador for the company in 2023 and was
-              awarded the title of <strong>Chief Ganjaroo</strong>. Their list
-              of iconic brand ambassadors also includes UFC legends like
-              <strong>Charles Oliveira</strong>.
-            </p>
-            <div class="review-img">
-              <img
-                src="/img/news-banners/roobet-slots.webp"
-                width="300"
-                height="200"
-                loading="lazy"
-                alt="katsubet site"
-              />
+            <div class="overview-button" id="card-tipe-container">
+              <p>Deposit Methods</p>
+              <div class="cardTipe-container">
+                <img
+                  class="card-tipe-info"
+                  src="/img/visa-logo.webp"
+                  loading="lazy"
+                  alt="visa logo"
+                />
+                <img
+                  class="card-tipe-info"
+                  src="/img/mastercard-logo.webp"
+                  loading="lazy"
+                  alt="mastercard-logo"
+                />
+                <img
+                  class="card-tipe-info"
+                  src="/img/skrill-logo.webp"
+                  loading="lazy"
+                  alt="skrill logo"
+                />
+                <img
+                  class="card-tipe tipe4"
+                  src="/img/AstroPay.webp"
+                  loading="lazy"
+                  alt="astropay icon"
+                />
+                <img
+                  class="card-tipe"
+                  src="/img/litecoin-logo.webp"
+                  loading="lazy"
+                  alt="litecoin logo"
+                />
+                <img
+                  class="card-tipe"
+                  src="/img/ethrtium-logo.webp"
+                  loading="lazy"
+                  alt="etherium logo"
+                />
+                <img
+                  class="card-tipe"
+                  id="bitCoin-logo"
+                  src="/img/bit-coin-logo.webp"
+                  loading="lazy"
+                  alt="bitcoin logo"
+                />
+              </div>
             </div>
-            <div class="review-img">
-              <img
-                src="/img/news-banners/roobet-original.webp"
-                width="300"
-                height="200"
-                loading="lazy"
-                alt="katsubet site"
-              />
+            <div class="overview-summary">
+              <h1>Roobet, the fastest growing crypto casino</h1>
+
+              <p>
+                <strong>Roobet</strong>, the
+                <strong>fastest growing crypto casino</strong>, is a fully
+                licensed brand established in 2019 and created for gamers by
+                gamers. They have quickly become innovators in online
+                entertainment, pushing the boundaries of what a digital casino
+                can offer with fun always at the forefront.
+              </p>
+              <div class="review-img">
+                <img
+                  src="/img/news-banners/roobet-casino.webp"
+                  width="300"
+                  height="200"
+                  loading="lazy"
+                  alt="katsubet site"
+                />
+              </div>
+
+              <p>
+                <strong>Roobet</strong> is powered by
+                <strong>blockchain technology</strong> and offers a
+                cutting-edge, secure platform that is just right for the new
+                generation of players.
+              </p>
+
+              <p>
+                They have over <strong>6,300 games</strong> from top-tier gaming
+                providers, a jam-packed <strong>Sportsbook</strong> that caters
+                to both traditional sports and <strong>esports</strong>, and an
+                incredible list of original house games. The list is constantly
+                growing and includes unique hits like <strong>Crash</strong>, a
+                totally redesigned <strong>Plinko</strong>, and more
+                out-of-the-box ones like
+                <strong>Mission Uncrossable</strong> and
+                <strong>Snoop’s HotBox</strong>. The last one was created in
+                collaboration with the one and only <strong>Snoop Dogg</strong>,
+                who became a brand ambassador for the company in 2023 and was
+                awarded the title of <strong>Chief Ganjaroo</strong>. Their list
+                of iconic brand ambassadors also includes UFC legends like
+                <strong>Charles Oliveira</strong>.
+              </p>
+              <div class="review-img">
+                <img
+                  src="/img/news-banners/roobet-slots.webp"
+                  width="300"
+                  height="200"
+                  loading="lazy"
+                  alt="katsubet site"
+                />
+              </div>
+              <div class="review-img">
+                <img
+                  src="/img/news-banners/roobet-original.webp"
+                  width="300"
+                  height="200"
+                  loading="lazy"
+                  alt="katsubet site"
+                />
+              </div>
+
+              <p>
+                <strong>Roobet’s</strong> mission is to push the boundaries of
+                <strong>crypto</strong> and
+                <strong>blockchain tech</strong> while building a fun and
+                inclusive community. If you haven’t yet, join their highly
+                interactive community of <strong>Roobettors</strong> and be a
+                part of the change as they set the stage for a new era of online
+                entertainment.
+              </p>
+
+              <p>
+                <strong>Roobet</strong> has multiple
+                <strong>crypto and fiat payment options</strong> available in
+                their user-friendly interface. In a short period of time, they
+                have gathered an outstanding reputation due to the
+                <strong>transparency</strong> with which they operate. This has
+                been proven by more than
+                <strong>5 billion bets placed</strong> in just under 5 years and
+                their <strong>provably fair ideology</strong>, so you don’t have
+                to believe they are fair, but they can actually prove it.
+              </p>
+
+              <p>
+                Make sure you are inside one of the permitted territories and
+                follow their easy <strong>KYC procedure</strong> to ensure you
+                are not in a restricted country.
+              </p>
+
+              <p>
+                Once you become a part of their interactive community, you will
+                find an ever-growing number of games on offer, convenient
+                methods available, attractive <strong>welcome offers</strong>,
+                ongoing <strong>promotions</strong>, and different
+                <strong>special events</strong>. Explore their new
+                <strong>rewards system</strong>, rank up to multiply your
+                gameplay bonuses, and unlock <strong>special rewards</strong> at
+                every level.
+              </p>
+              <h2>Roobet x 100 Thieves Esports Partnership</h2>
+
+              <p>
+                Roobet has teamed up with Matthew “Nadeshot” Haag and the
+                legendary esports organization 100 Thieves to create an exciting
+                collaboration for crypto casino and esports fans. This
+                partnership marks 100 Thieves’ return to Counter-Strike 2, now
+                competing under the banner 100 Thieves Roobet, and includes a
+                new competitive hub in Europe to support their comeback.
+              </p>
+
+              <p>
+                The collaboration brings exclusive benefits for Roobet players,
+                including special esports promotions, free bet offers during
+                major Counter-Strike tournaments, and limited-time rewards
+                through Roobet’s loyalty program. Fans can enjoy a front-row
+                experience of one of the most innovative esports and crypto
+                gaming partnerships in recent years.
+              </p>
+
+              <p>
+                Beyond promotions, this long-term partnership combines esports,
+                crypto gaming, and digital entertainment, offering interactive
+                experiences and exclusive content for fans while enhancing the
+                overall Roobet ecosystem.
+              </p>
             </div>
-
-            <p>
-              <strong>Roobet’s</strong> mission is to push the boundaries of
-              <strong>crypto</strong> and <strong>blockchain tech</strong> while
-              building a fun and inclusive community. If you haven’t yet, join
-              their highly interactive community of
-              <strong>Roobettors</strong> and be a part of the change as they
-              set the stage for a new era of online entertainment.
-            </p>
-
-            <p>
-              <strong>Roobet</strong> has multiple
-              <strong>crypto and fiat payment options</strong> available in
-              their user-friendly interface. In a short period of time, they
-              have gathered an outstanding reputation due to the
-              <strong>transparency</strong> with which they operate. This has
-              been proven by more than <strong>5 billion bets placed</strong> in
-              just under 5 years and their
-              <strong>provably fair ideology</strong>, so you don’t have to
-              believe they are fair, but they can actually prove it.
-            </p>
-
-            <p>
-              Make sure you are inside one of the permitted territories and
-              follow their easy <strong>KYC procedure</strong> to ensure you are
-              not in a restricted country.
-            </p>
-
-            <p>
-              Once you become a part of their interactive community, you will
-              find an ever-growing number of games on offer, convenient methods
-              available, attractive <strong>welcome offers</strong>, ongoing
-              <strong>promotions</strong>, and different
-              <strong>special events</strong>. Explore their new
-              <strong>rewards system</strong>, rank up to multiply your gameplay
-              bonuses, and unlock <strong>special rewards</strong> at every
-              level.
-            </p>
-            <h2>Roobet x 100 Thieves Esports Partnership</h2>
-
-            <p>
-              Roobet has teamed up with Matthew “Nadeshot” Haag and the
-              legendary esports organization 100 Thieves to create an exciting
-              collaboration for crypto casino and esports fans. This partnership
-              marks 100 Thieves’ return to Counter-Strike 2, now competing under
-              the banner 100 Thieves Roobet, and includes a new competitive hub
-              in Europe to support their comeback.
-            </p>
-
-            <p>
-              The collaboration brings exclusive benefits for Roobet players,
-              including special esports promotions, free bet offers during major
-              Counter-Strike tournaments, and limited-time rewards through
-              Roobet’s loyalty program. Fans can enjoy a front-row experience of
-              one of the most innovative esports and crypto gaming partnerships
-              in recent years.
-            </p>
-
-            <p>
-              Beyond promotions, this long-term partnership combines esports,
-              crypto gaming, and digital entertainment, offering interactive
-              experiences and exclusive content for fans while enhancing the
-              overall Roobet ecosystem.
-            </p>
           </div>
         </div>
       </div>
