--- a/Reviews-page/Thunderpick/Games/index.html
+++ b/Reviews-page/Thunderpick/Games/index.html
@@ -260,230 +260,239 @@
 
   -->
     <section class="casino-allInfo">
-      <div class="casino-banner">
-        <a
-          href="https://go.thunder.partners/visit/?bta=36640&nci=5502&campaign=ALL4WINS"
-          aria-label="Read more about thunderpick"
-          ><img
-            src="/img/news-banners/thunderpick-banner.webp"
-            alt="thunderpick banner banner"
-        /></a>
-      </div>
-
-      <div class="casino-infoLogo">
-        <div class="logo-box">
-          <img
-            src="/img/thunder-prick-logo.webp"
-            loading="lazy"
-            layout="intrinsic"
-            alt="thunderpick logo"
-          />
+      <div class="info-Block">
+        <div class="casino-banner">
+          <a
+            href="https://go.thunder.partners/visit/?bta=36640&nci=5502&campaign=ALL4WINS"
+            aria-label="Read more about thunderpick"
+            ><img
+              src="/img/news-banners/thunderpick-banner.webp"
+              alt="thunderpick banner banner"
+          /></a>
         </div>
-      </div>
-      <div class="play-now">
-        <a
-          href="https://go.thunder.partners/visit/?bta=36640&nci=5502&campaign=ALL4WINS"
-          aria-label="Read more about thunderpick"
-          ><button>Play Now</button></a
-        >
-      </div>
 
-      <div class="tab-info">
-        <a href="/Reviews-page/Thunderpick/" class="tablinks">
-          <button>Overview</button>
-        </a>
-        <a href="/Reviews-page/Thunderpick/Bonus/" class="tablinks">
-          <button>Bonuses</button>
-        </a>
-        <a href="/Reviews-page/Thunderpick/Games/" class="tablinks">
-          <button>Games</button>
-        </a>
-        <a href="/Reviews-page/Thunderpick/Payments/" class="tablinks">
-          <button>Payments</button>
-        </a>
-      </div>
-
-      <!-- Tab content -->
-
-      <div id="Games" class="tabcontent-info">
-        <h1>Explore Thunderpick's Diverse Gaming and Betting Systems</h1>
-
-        <p>
-          Thunderpick has an excellent selection of gaming and betting choices,
-          appealing to both traditional sports and esports fans. Thunderpick
-          offers a comprehensive experience for all types of gamblers, featuring
-          competitive odds and a dynamic live betting and streaming platform.
-          Here's a more comprehensive look at their offerings:
-        </p>
-
-        <h2>Thunderpick's Casino Games</h2>
-
-        <h3>Crash Games</h3>
-
-        <p>
-          Thunderpick offers a fantastic collection of crash games that combine
-          exhilarating gameplay with significant winning potential:
-        </p>
-
-        <ul>
-          <li>
-            <strong>Thunder Crash</strong>: In this fast-paced game, players
-            place bets on a multiplier that rapidly builds until it bursts. To
-            keep their profits, players must cash out before the crash occurs.
-          </li>
-          <li>
-            <strong>Thunder Spins</strong>: A unique take on standard slots that
-            incorporates crash dynamics, giving it a new spin on a casino
-            favorite.
-          </li>
-          <li>
-            <strong>Space Crasher</strong>:Thunder Spins, a unique take on
-            traditional slots, adds crash mechanics, putting a new spin on a
-            casino classic.
-          </li>
-          <li>
-            <strong>Kite Festival Crash</strong>: Play this crash game to get
-            into the festive spirit. Place bets on kite multipliers, hoping to
-            cash out at the optimal time to maximize profits.
-          </li>
-          <li>
-            <strong>Thunder Plinko</strong>:Similar to the conventional Plinko,
-            players drop balls down a peg-filled board, hoping to land in
-            high-value slots.
-          </li>
-          <li class="review-img">
+        <div class="casino-infoLogo">
+          <div class="logo-box">
             <img
-              src="/img/news-banners/thunderpick-crash-games.webp"
+              src="/img/thunder-prick-logo.webp"
               loading="lazy"
-              alt="thunderpick ranking sistem"
+              layout="intrinsic"
+              alt="thunderpick logo"
             />
-          </li>
-        </ul>
+          </div>
+        </div>
+        <div class="play-now">
+          <a
+            href="https://go.thunder.partners/visit/?bta=36640&nci=5502&campaign=ALL4WINS"
+            aria-label="Read more about thunderpick"
+            ><button>Play Now</button></a
+          >
+        </div>
 
-        <h2>Competitive Odds</h2>
+        <div class="tab-info">
+          <a href="/Reviews-page/Thunderpick/" class="tablinks">
+            <button>Overview</button>
+          </a>
+          <a href="/Reviews-page/Thunderpick/Bonus/" class="tablinks">
+            <button>Bonuses</button>
+          </a>
+          <a href="/Reviews-page/Thunderpick/Games/" class="tablinks">
+            <button>Games</button>
+          </a>
+          <a href="/Reviews-page/Thunderpick/Payments/" class="tablinks">
+            <button>Payments</button>
+          </a>
+        </div>
 
-        <p>
-          Thunderpick is noted for offering competitive odds on a variety of
-          sports. Here's a summary of what to expect:
-        </p>
+        <!-- Tab content -->
 
-        <h3>Odds Formats</h3>
+        <div id="Games" class="tabcontent-info">
+          <h1>Explore Thunderpick's Diverse Gaming and Betting Systems</h1>
 
-        <p>
-          The settings icon allows bettors to simply convert between decimal,
-          fractional, American, and other odds formats based on their particular
-          preferences.
-        </p>
+          <p>
+            Thunderpick has an excellent selection of gaming and betting
+            choices, appealing to both traditional sports and esports fans.
+            Thunderpick offers a comprehensive experience for all types of
+            gamblers, featuring competitive odds and a dynamic live betting and
+            streaming platform. Here's a more comprehensive look at their
+            offerings:
+          </p>
 
-        <h3>Average Odds Range by Sport</h3>
+          <h2>Thunderpick's Casino Games</h2>
 
-        <ul>
-          <li>
-            <strong>Football</strong>: Thunderpick's odds range from 88% to 93%.
-          </li>
-          <li><strong>Ice Hockey</strong>: Odds range from 86% to 92%.</li>
-          <li><strong>Tennis</strong>: The odds range between 87% and 91%.</li>
-          <li><strong>Basketball</strong>: Odds range from 86% to 90%.</li>
-          <li class="review-img">
-            <img
-              src="/img/news-banners/thunderpick-sports.webp"
-              loading="lazy"
-              alt="thunderpick ranking sistem"
-            />
-          </li>
-        </ul>
+          <h3>Crash Games</h3>
 
-        <h2>Enhanced Live Betting and Streaming</h2>
+          <p>
+            Thunderpick offers a fantastic collection of crash games that
+            combine exhilarating gameplay with significant winning potential:
+          </p>
 
-        <p>
-          Thunderpick's live betting platform highlights the thrill of real-time
-          action.
-        </p>
+          <ul>
+            <li>
+              <strong>Thunder Crash</strong>: In this fast-paced game, players
+              place bets on a multiplier that rapidly builds until it bursts. To
+              keep their profits, players must cash out before the crash occurs.
+            </li>
+            <li>
+              <strong>Thunder Spins</strong>: A unique take on standard slots
+              that incorporates crash dynamics, giving it a new spin on a casino
+              favorite.
+            </li>
+            <li>
+              <strong>Space Crasher</strong>:Thunder Spins, a unique take on
+              traditional slots, adds crash mechanics, putting a new spin on a
+              casino classic.
+            </li>
+            <li>
+              <strong>Kite Festival Crash</strong>: Play this crash game to get
+              into the festive spirit. Place bets on kite multipliers, hoping to
+              cash out at the optimal time to maximize profits.
+            </li>
+            <li>
+              <strong>Thunder Plinko</strong>:Similar to the conventional
+              Plinko, players drop balls down a peg-filled board, hoping to land
+              in high-value slots.
+            </li>
+            <li class="review-img">
+              <img
+                src="/img/news-banners/thunderpick-crash-games.webp"
+                loading="lazy"
+                alt="thunderpick ranking sistem"
+              />
+            </li>
+          </ul>
 
-        <ul>
-          <li>
-            <strong>Quick Odds Updates</strong>: The technology specializes at
-            providing instant odds updates for live events, especially smaller
-            ones like as table tennis.
-          </li>
-          <li>
-            <strong>Live Streaming</strong>:While direct streaming rights for
-            certain high-profile sports, such as the Premier League, are
-            limited, Thunderpick provides live streaming for a variety of sports
-            events, including tennis and MMA, via integrations with platforms
-            like as Twitch and YouTube
-          </li>
-        </ul>
+          <h2>Competitive Odds</h2>
 
-        <h2>Live Casino</h2>
+          <p>
+            Thunderpick is noted for offering competitive odds on a variety of
+            sports. Here's a summary of what to expect:
+          </p>
 
-        <p>Thunderpick's live dealer platform provides more than 100 games:</p>
+          <h3>Odds Formats</h3>
 
-        <ul>
-          <li>
-            <strong>Live Games</strong>: Enjoy popular table games such as
-            roulette and blackjack, as well as entertaining game shows like Mega
-            Wheel.
-          </li>
-        </ul>
+          <p>
+            The settings icon allows bettors to simply convert between decimal,
+            fractional, American, and other odds formats based on their
+            particular preferences.
+          </p>
 
-        <h2>Comprehensive Thunderpick Esports Betting</h2>
+          <h3>Average Odds Range by Sport</h3>
 
-        <p>
-          Thunderpick genuinely shines in its esports offers with a diverse
-          range of games and betting markets:
-        </p>
+          <ul>
+            <li>
+              <strong>Football</strong>: Thunderpick's odds range from 88% to
+              93%.
+            </li>
+            <li><strong>Ice Hockey</strong>: Odds range from 86% to 92%.</li>
+            <li>
+              <strong>Tennis</strong>: The odds range between 87% and 91%.
+            </li>
+            <li><strong>Basketball</strong>: Odds range from 86% to 90%.</li>
+            <li class="review-img">
+              <img
+                src="/img/news-banners/thunderpick-sports.webp"
+                loading="lazy"
+                alt="thunderpick ranking sistem"
+              />
+            </li>
+          </ul>
 
-        <h3>Extensive game selection</h3>
+          <h2>Enhanced Live Betting and Streaming</h2>
 
-        <p>
-          With over 20 games to select from, Thunderpick caters to a wide range
-          of interests:
-        </p>
+          <p>
+            Thunderpick's live betting platform highlights the thrill of
+            real-time action.
+          </p>
 
-        <ul>
-          <li>
-            <strong>Popular Games</strong>: Bet on League of Legends (LoL),
-            Valorant, and CS:GO.
-          </li>
-          <li>
-            <strong>Diverse Options</strong>: Play Halo, World of Warcraft
-            (WoW), and even virtual sports such as eSoccer and eCricket.
-          </li>
-          <li class="review-img">
-            <img
-              src="/img/news-banners/thunderpick-esports-games.webp"
-              loading="lazy"
-              alt="thunderpick ranking sistem"
-            />
-          </li>
-        </ul>
+          <ul>
+            <li>
+              <strong>Quick Odds Updates</strong>: The technology specializes at
+              providing instant odds updates for live events, especially smaller
+              ones like as table tennis.
+            </li>
+            <li>
+              <strong>Live Streaming</strong>:While direct streaming rights for
+              certain high-profile sports, such as the Premier League, are
+              limited, Thunderpick provides live streaming for a variety of
+              sports events, including tennis and MMA, via integrations with
+              platforms like as Twitch and YouTube
+            </li>
+          </ul>
 
-        <h3>Expansive Tournament Coverage</h3>
+          <h2>Live Casino</h2>
 
-        <p>
-          Thunderpick advertises every esports competition conceivable, from
-          major to niche tournaments.
-        </p>
+          <p>
+            Thunderpick's live dealer platform provides more than 100 games:
+          </p>
 
-        <ul>
-          <li>
-            <strong>Major Events</strong>: Bet on well-known events such as
-            BLAST Premier.
-          </li>
-          <li>
-            <strong>Regional Competitions</strong>: Take part in lesser-known
-            but as interesting regional events.
-          </li>
-        </ul>
+          <ul>
+            <li>
+              <strong>Live Games</strong>: Enjoy popular table games such as
+              roulette and blackjack, as well as entertaining game shows like
+              Mega Wheel.
+            </li>
+          </ul>
 
-        <h3>Highly Competitive Esports Odds</h3>
+          <h2>Comprehensive Thunderpick Esports Betting</h2>
 
-        <p>
-          Thunderpick is renowned for providing some of the best betting odds in
-          the esports domain, offering decent value on most betting lines. Odds
-          are consistently updated to reflect real-time changes accurately.
-        </p>
+          <p>
+            Thunderpick genuinely shines in its esports offers with a diverse
+            range of games and betting markets:
+          </p>
+
+          <h3>Extensive game selection</h3>
+
+          <p>
+            With over 20 games to select from, Thunderpick caters to a wide
+            range of interests:
+          </p>
+
+          <ul>
+            <li>
+              <strong>Popular Games</strong>: Bet on League of Legends (LoL),
+              Valorant, and CS:GO.
+            </li>
+            <li>
+              <strong>Diverse Options</strong>: Play Halo, World of Warcraft
+              (WoW), and even virtual sports such as eSoccer and eCricket.
+            </li>
+            <li class="review-img">
+              <img
+                src="/img/news-banners/thunderpick-esports-games.webp"
+                loading="lazy"
+                alt="thunderpick ranking sistem"
+              />
+            </li>
+          </ul>
+
+          <h3>Expansive Tournament Coverage</h3>
+
+          <p>
+            Thunderpick advertises every esports competition conceivable, from
+            major to niche tournaments.
+          </p>
+
+          <ul>
+            <li>
+              <strong>Major Events</strong>: Bet on well-known events such as
+              BLAST Premier.
+            </li>
+            <li>
+              <strong>Regional Competitions</strong>: Take part in lesser-known
+              but as interesting regional events.
+            </li>
+          </ul>
+
+          <h3>Highly Competitive Esports Odds</h3>
+
+          <p>
+            Thunderpick is renowned for providing some of the best betting odds
+            in the esports domain, offering decent value on most betting lines.
+            Odds are consistently updated to reflect real-time changes
+            accurately.
+          </p>
+        </div>
       </div>
 
       <footer class="bottom-page">
