--- a/Reviews-page/Thunderpick/Payments/index.html
+++ b/Reviews-page/Thunderpick/Payments/index.html
@@ -260,143 +260,145 @@
 
   -->
     <section class="casino-allInfo">
-      <div class="casino-banner">
-        <a
-          href="https://go.thunder.partners/visit/?bta=36640&nci=5502&campaign=ALL4WINS"
-          aria-label="Read more about thunderpick"
-          ><img
-            src="/img/news-banners/thunderpick-banner.webp"
-            alt="thunderpick banner banner"
-        /></a>
-      </div>
-
-      <div class="casino-infoLogo">
-        <div class="logo-box">
-          <img
-            src="/img/thunder-prick-logo.webp"
-            loading="lazy"
-            layout="intrinsic"
-            alt="thunderpick logo"
-          />
+      <div class="info-Block">
+        <div class="casino-banner">
+          <a
+            href="https://go.thunder.partners/visit/?bta=36640&nci=5502&campaign=ALL4WINS"
+            aria-label="Read more about thunderpick"
+            ><img
+              src="/img/news-banners/thunderpick-banner.webp"
+              alt="thunderpick banner banner"
+          /></a>
         </div>
-      </div>
-      <div class="play-now">
-        <a
-          href="https://go.thunder.partners/visit/?bta=36640&nci=5502&campaign=ALL4WINS"
-          aria-label="Read more about thunderpick"
-          ><button>Play Now</button></a
-        >
-      </div>
 
-      <div class="tab-info">
-        <a href="/Reviews-page/Thunderpick/" class="tablinks">
-          <button>Overview</button>
-        </a>
-        <a href="/Reviews-page/Thunderpick/Bonus/" class="tablinks">
-          <button>Bonuses</button>
-        </a>
-        <a href="/Reviews-page/Thunderpick/Games/" class="tablinks">
-          <button>Games</button>
-        </a>
-        <a href="/Reviews-page/Thunderpick/Payments/" class="tablinks">
-          <button>Payments</button>
-        </a>
-      </div>
+        <div class="casino-infoLogo">
+          <div class="logo-box">
+            <img
+              src="/img/thunder-prick-logo.webp"
+              loading="lazy"
+              layout="intrinsic"
+              alt="thunderpick logo"
+            />
+          </div>
+        </div>
+        <div class="play-now">
+          <a
+            href="https://go.thunder.partners/visit/?bta=36640&nci=5502&campaign=ALL4WINS"
+            aria-label="Read more about thunderpick"
+            ><button>Play Now</button></a
+          >
+        </div>
 
-      <!-- Tab content -->
+        <div class="tab-info">
+          <a href="/Reviews-page/Thunderpick/" class="tablinks">
+            <button>Overview</button>
+          </a>
+          <a href="/Reviews-page/Thunderpick/Bonus/" class="tablinks">
+            <button>Bonuses</button>
+          </a>
+          <a href="/Reviews-page/Thunderpick/Games/" class="tablinks">
+            <button>Games</button>
+          </a>
+          <a href="/Reviews-page/Thunderpick/Payments/" class="tablinks">
+            <button>Payments</button>
+          </a>
+        </div>
 
-      <div id="Payments" class="tabcontent-info">
-        <h1>Thunderpick's payment system is fast, free, and flexible.</h1>
+        <!-- Tab content -->
 
-        <p>
-          Thunderpick distinguishes out among esports betting sites since it
-          offers a wide range of payment choices. It may not be the largest
-          betting site, but its payment method offers everything for everyone,
-          including classic and innovative cryptocurrency choices.
-        </p>
+        <div id="Payments" class="tabcontent-info">
+          <h1>Thunderpick's payment system is fast, free, and flexible.</h1>
 
-        <h2>Traditional and Modern</h2>
+          <p>
+            Thunderpick distinguishes out among esports betting sites since it
+            offers a wide range of payment choices. It may not be the largest
+            betting site, but its payment method offers everything for everyone,
+            including classic and innovative cryptocurrency choices.
+          </p>
 
-        <p>
-          Thunderpick accepts typical payment options like as Visa, MasterCard,
-          Neteller, Skrill, and Paysafecard. So you may select a payment option
-          that works best for you.
-        </p>
+          <h2>Traditional and Modern</h2>
 
-        <h2>Thunderpick’s Payment System Update</h2>
+          <p>
+            Thunderpick accepts typical payment options like as Visa,
+            MasterCard, Neteller, Skrill, and Paysafecard. So you may select a
+            payment option that works best for you.
+          </p>
 
-        <p>
-          Thunderpick has recently launched a new and enhanced payment system,
-          and here are the exciting changes:
-        </p>
+          <h2>Thunderpick’s Payment System Update</h2>
 
-        <h3>Faster Crypto Transactions</h3>
+          <p>
+            Thunderpick has recently launched a new and enhanced payment system,
+            and here are the exciting changes:
+          </p>
 
-        <p>
-          The biggest change is the faster crypto transactions. Whether you
-          deposit or withdraw, the funds will be in your account in no time.
-          Some transactions are even instant. For example Binance Coin is
-          instant deposit and even Bitcoin can be instant deposit if you’re
-          using non-RBF transactions from wallets like Exodus.
-        </p>
+          <h3>Faster Crypto Transactions</h3>
 
-        <h3>Free Withdrawals</h3>
+          <p>
+            The biggest change is the faster crypto transactions. Whether you
+            deposit or withdraw, the funds will be in your account in no time.
+            Some transactions are even instant. For example Binance Coin is
+            instant deposit and even Bitcoin can be instant deposit if you’re
+            using non-RBF transactions from wallets like Exodus.
+          </p>
 
-        <p>
-          All withdrawals from Thunderpick are free of charge. The platform is
-          covering all blockchain transaction fees so no amount will be deducted
-          from your withdrawal. This is awesome! You can enjoy your winnings
-          without any hidden costs.
-        </p>
+          <h3>Free Withdrawals</h3>
 
-        <h3>Faster Withdrawals</h3>
+          <p>
+            All withdrawals from Thunderpick are free of charge. The platform is
+            covering all blockchain transaction fees so no amount will be
+            deducted from your withdrawal. This is awesome! You can enjoy your
+            winnings without any hidden costs.
+          </p>
 
-        <p>
-          Besides removing the fees, Thunderpick has also reduced the withdrawal
-          processing time. The average time from withdrawal request confirmation
-          to funds in your wallet is now 2 minutes so you can get your winnings
-          right away.
-        </p>
+          <h3>Faster Withdrawals</h3>
 
-        <h3>Higher Withdrawal Limits</h3>
+          <p>
+            Besides removing the fees, Thunderpick has also reduced the
+            withdrawal processing time. The average time from withdrawal request
+            confirmation to funds in your wallet is now 2 minutes so you can get
+            your winnings right away.
+          </p>
 
-        <p>
-          No more low transfer limits. Thunderpick now allows you to request up
-          to €100,000 weekly withdrawals so you can get access to your funds
-          easily and fast.
-        </p>
+          <h3>Higher Withdrawal Limits</h3>
 
-        <h3>Important Notes</h3>
+          <p>
+            No more low transfer limits. Thunderpick now allows you to request
+            up to €100,000 weekly withdrawals so you can get access to your
+            funds easily and fast.
+          </p>
 
-        <p>As with any system update, here are some things to remember:</p>
+          <h3>Important Notes</h3>
 
-        <ul>
-          <li>
-            Personal Deposit Addresses: Always check your personal deposit
-            addresses especially if you’re depositing directly from your crypto
-            wallet. Make sure they are updated to avoid any issues.
-          </li>
-          <li>
-            Minimum Deposit Amounts: Each cryptocurrency has a minimum deposit
-            amount. Depositing below this amount will result to loss of funds.
-            To avoid this, make sure you send a bit more than the minimum
-            required amount.
-          </li>
-        </ul>
+          <p>As with any system update, here are some things to remember:</p>
 
-        <ul>
-          <li>Bitcoin: 0.0001 BTC</li>
-          <li>Ethereum: 0.01 ETH</li>
-          <li>Litecoin: 0.01 LTC</li>
-          <li>Ripple: 0.001 XRP</li>
-          <li>Binance Coin: 0.01 BNB</li>
-          <li>Tether: 5 USDTE / 2 USDTT</li>
-          <li>Bitcoin Cash: 0.001 BCH</li>
-          <li>Cardano: 2 ADA</li>
-          <li>Dogecoin: 1 DOGE</li>
-          <li>Tron: 10 TRX</li>
-          <li>USD Coin (ERC-20): 5 USDC</li>
-        </ul>
+          <ul>
+            <li>
+              Personal Deposit Addresses: Always check your personal deposit
+              addresses especially if you’re depositing directly from your
+              crypto wallet. Make sure they are updated to avoid any issues.
+            </li>
+            <li>
+              Minimum Deposit Amounts: Each cryptocurrency has a minimum deposit
+              amount. Depositing below this amount will result to loss of funds.
+              To avoid this, make sure you send a bit more than the minimum
+              required amount.
+            </li>
+          </ul>
+
+          <ul>
+            <li>Bitcoin: 0.0001 BTC</li>
+            <li>Ethereum: 0.01 ETH</li>
+            <li>Litecoin: 0.01 LTC</li>
+            <li>Ripple: 0.001 XRP</li>
+            <li>Binance Coin: 0.01 BNB</li>
+            <li>Tether: 5 USDTE / 2 USDTT</li>
+            <li>Bitcoin Cash: 0.001 BCH</li>
+            <li>Cardano: 2 ADA</li>
+            <li>Dogecoin: 1 DOGE</li>
+            <li>Tron: 10 TRX</li>
+            <li>USD Coin (ERC-20): 5 USDC</li>
+          </ul>
+        </div>
       </div>
 
       <footer class="bottom-page">
