--- a/Reviews-page/TrustDice/Payments/index.html
+++ b/Reviews-page/TrustDice/Payments/index.html
@@ -260,7 +260,8 @@
 
   -->
     <section class="casino-allInfo">
-      <div class="casino-banner">
+      <div class="info-Block">
+        <div class="casino-banner">
         <a
           href="https://trustdice.win/?ref=u_all4wins"
           aria-label="Read more about thunderpick"
@@ -463,6 +464,8 @@
           of options to enhance your gambling journey.
         </p>
       </div>
+      </div>
+      
 
       <footer class="bottom-page">
         <a href="#" class="scroll-to-top"
