--- a/Reviews-page/Vave/Payments/index.html
+++ b/Reviews-page/Vave/Payments/index.html
@@ -263,7 +263,8 @@
 
   -->
     <section class="casino-allInfo">
-      <div class="casino-banner">
+      <div class="info-Block">
+        <div class="casino-banner">
         <a
           href="https://top.moxtop.com/redirect.aspx?pid=43930&bid=1481&lpid=198"
           aria-label="Read more about vave"
@@ -363,6 +364,8 @@
           best and enjoy a seamless gaming experience.
         </p>
       </div>
+      </div>
+      
 
       <footer class="bottom-page">
         <a href="#" class="scroll-to-top"
