--- a/Reviews-page/Wazamba/Payments/index.html
+++ b/Reviews-page/Wazamba/Payments/index.html
@@ -263,243 +263,251 @@
 
   -->
     <section class="casino-allInfo">
-      <div class="casino-banner">
-        <a
-          href="https://wzb.servclick1move.com/?mid=231292_1380510"
-          aria-label="Read more about vave"
-          ><img
-            src="/img/news-banners/wazamba-banner.webp"
-            alt="wazamba banner"
-        /></a>
-      </div>
-
-      <div class="casino-infoLogo">
-        <div class="logo-box">
-          <img src="/img/wazamba.webp" loading="lazy" alt=" wazambalogo img" />
-        </div>
-      </div>
-      <div class="play-now">
-        <a
-          href="https://wzb.servclick1move.com/?mid=231292_1380510"
-          aria-label="Read more about vave"
-          ><button>Play Now</button></a
-        >
-      </div>
-
-      <div class="tab-info">
-        <a href="/Reviews-page/Wazamba/" class="tablinks">
-          <button>Overview</button>
-        </a>
-        <a href="/Reviews-page/Wazamba/Bonus/" class="tablinks">
-          <button>Bonuses</button>
-        </a>
-        <a href="/Reviews-page/Wazamba/Games/" class="tablinks">
-          <button>Games</button>
-        </a>
-        <a href="/Reviews-page/Wazamba/Payments/" class="tablinks">
-          <button>Payments</button>
-        </a>
-      </div>
-
-      <!-- Tab content -->
-
-      <div id="Payments" class="tabcontent-info">
-        <h1>Wazamba Casino Payment System: A Comprehensive Review</h1>
-
-        <p>
-          Wazamba Casino offers a robust payment system tailored to meet the
-          needs of players from different regions. Whether you're depositing
-          funds or withdrawing your winnings, Wazamba ensures a seamless
-          experience with multiple payment options, varying limits, and
-          reasonable processing times. Let's dive into the details of how
-          deposits and withdrawals work at this casino.
-        </p>
-
-        <h2>Deposit Methods at Wazamba Casino</h2>
-
-        <p>
-          Depositing funds into your Wazamba Casino account is easy, with
-          numerous options to choose from. Once you're a registered user, the
-          available deposit methods depend on your location, providing you with
-          the most relevant and accurate options for your region.
-        </p>
-        <div class="review-img">
-          <img
-            src="/img/news-banners/Wazamba- Deposit Interface.webp"
-            loading="lazy"
-            alt="wazamba site"
-          />
+      <div class="info-Block">
+        <div class="casino-banner">
+          <a
+            href="https://wzb.servclick1move.com/?mid=231292_1380510"
+            aria-label="Read more about vave"
+            ><img
+              src="/img/news-banners/wazamba-banner.webp"
+              alt="wazamba banner"
+          /></a>
         </div>
 
-        <h3>Deposit Methods and Limits:</h3>
-        <ul>
-          <li>
-            <strong>Mastercard Debit/Visa Debit:</strong> Minimum €10, Maximum
-            €2000 (Instant)
-          </li>
-          <li>
-            <strong>Bank Transfer:</strong> Minimum €10, Maximum €5000 (Instant)
-          </li>
-          <li>
-            <strong>Neteller/Skrill:</strong> Minimum €10, Maximum €5000
-            (Instant)
-          </li>
-          <li>
-            <strong>Paysafecard:</strong> Minimum €10, Maximum €1000 (Instant)
-          </li>
-          <li>
-            <strong>Google Pay:</strong> Minimum €10, Maximum €750 (Instant)
-          </li>
-          <li>
-            <strong>Bitcoin/Litecoin/Ethereum/Ripple:</strong> Minimum €20,
-            Maximum €5000 (Instant)
-          </li>
-          <li>
-            <strong>eZeeWallet/MiFinity/Jeton:</strong> Minimum €20, Maximum
-            €5000 (Instant)
-          </li>
-        </ul>
+        <div class="casino-infoLogo">
+          <div class="logo-box">
+            <img
+              src="/img/wazamba.webp"
+              loading="lazy"
+              alt=" wazambalogo img"
+            />
+          </div>
+        </div>
+        <div class="play-now">
+          <a
+            href="https://wzb.servclick1move.com/?mid=231292_1380510"
+            aria-label="Read more about vave"
+            ><button>Play Now</button></a
+          >
+        </div>
 
-        <p>
-          <strong>💡 Note:</strong> A minimum deposit of €20 is required to
-          claim the welcome bonus. Deposits are processed instantly, ensuring
-          you can dive into the games right away.
-        </p>
+        <div class="tab-info">
+          <a href="/Reviews-page/Wazamba/" class="tablinks">
+            <button>Overview</button>
+          </a>
+          <a href="/Reviews-page/Wazamba/Bonus/" class="tablinks">
+            <button>Bonuses</button>
+          </a>
+          <a href="/Reviews-page/Wazamba/Games/" class="tablinks">
+            <button>Games</button>
+          </a>
+          <a href="/Reviews-page/Wazamba/Payments/" class="tablinks">
+            <button>Payments</button>
+          </a>
+        </div>
 
-        <h2>Wazamba Casino Withdrawal Methods</h2>
+        <!-- Tab content -->
 
-        <p>
-          Wazamba Casino ensures that withdrawals are processed through the same
-          method used for depositing, wherever possible. If that option isn't
-          available, an alternative method such as a bank transfer will be used.
-          Here's a breakdown of the available withdrawal methods and their
-          limits.
-        </p>
+        <div id="Payments" class="tabcontent-info">
+          <h1>Wazamba Casino Payment System: A Comprehensive Review</h1>
 
-        <h3>Withdrawal Methods and Limits:</h3>
-        <ul>
-          <li>
-            <strong>Mastercard/Visa Debit:</strong> Minimum €10, Maximum €3000
-            (1-3 business days)
-          </li>
-          <li>
-            <strong>Bank Transfer:</strong> Minimum €10, Maximum €2000 (2-5
-            business days)
-          </li>
-          <li>
-            <strong>Neteller/Skrill/Skrill 1-Tap:</strong> Minimum €10, Maximum
-            €5000 (Instant)
-          </li>
-          <li>
-            <strong>eZeeWallet/MiFinity/Jeton:</strong> Minimum €10, Maximum
-            €5000 (Instant)
-          </li>
-          <li>
-            <strong>Bitcoin/Litecoin/Ethereum/Ripple:</strong> Minimum €10,
-            Maximum €10000 (Instant)
-          </li>
-        </ul>
+          <p>
+            Wazamba Casino offers a robust payment system tailored to meet the
+            needs of players from different regions. Whether you're depositing
+            funds or withdrawing your winnings, Wazamba ensures a seamless
+            experience with multiple payment options, varying limits, and
+            reasonable processing times. Let's dive into the details of how
+            deposits and withdrawals work at this casino.
+          </p>
 
-        <p>
-          <strong>💡</strong> Most withdrawal methods are instant, but some may
-          take between 1-5 business days, depending on the method. Withdrawals
-          are only processed from Monday to Friday between 6 AM to 5 PM, which
-          could lead to slight delays.
-        </p>
+          <h2>Deposit Methods at Wazamba Casino</h2>
 
-        <h2>Minimum Deposit and Withdrawal Amounts</h2>
+          <p>
+            Depositing funds into your Wazamba Casino account is easy, with
+            numerous options to choose from. Once you're a registered user, the
+            available deposit methods depend on your location, providing you
+            with the most relevant and accurate options for your region.
+          </p>
+          <div class="review-img">
+            <img
+              src="/img/news-banners/Wazamba- Deposit Interface.webp"
+              loading="lazy"
+              alt="wazamba site"
+            />
+          </div>
 
-        <p>
-          Wazamba Casino's minimum deposit starts at €10, while the minimum
-          withdrawal is set at €20. This aligns with industry standards and
-          offers flexibility for both low and high-stakes players.
-        </p>
+          <h3>Deposit Methods and Limits:</h3>
+          <ul>
+            <li>
+              <strong>Mastercard Debit/Visa Debit:</strong> Minimum €10, Maximum
+              €2000 (Instant)
+            </li>
+            <li>
+              <strong>Bank Transfer:</strong> Minimum €10, Maximum €5000
+              (Instant)
+            </li>
+            <li>
+              <strong>Neteller/Skrill:</strong> Minimum €10, Maximum €5000
+              (Instant)
+            </li>
+            <li>
+              <strong>Paysafecard:</strong> Minimum €10, Maximum €1000 (Instant)
+            </li>
+            <li>
+              <strong>Google Pay:</strong> Minimum €10, Maximum €750 (Instant)
+            </li>
+            <li>
+              <strong>Bitcoin/Litecoin/Ethereum/Ripple:</strong> Minimum €20,
+              Maximum €5000 (Instant)
+            </li>
+            <li>
+              <strong>eZeeWallet/MiFinity/Jeton:</strong> Minimum €20, Maximum
+              €5000 (Instant)
+            </li>
+          </ul>
 
-        <ul>
-          <li><strong>Minimum Deposit:</strong> €10</li>
-          <li><strong>Minimum Withdrawal:</strong> €20</li>
-          <li>
-            <strong>Maximum Withdrawal:</strong> €500 - €1500 per day, €10,000 -
-            €20,000 monthly, depending on your VIP level.
-          </li>
-        </ul>
+          <p>
+            <strong>💡 Note:</strong> A minimum deposit of €20 is required to
+            claim the welcome bonus. Deposits are processed instantly, ensuring
+            you can dive into the games right away.
+          </p>
 
-        <h2>Withdrawal Processing Times</h2>
+          <h2>Wazamba Casino Withdrawal Methods</h2>
 
-        <p>
-          While Wazamba offers a variety of instant withdrawal methods like
-          Neteller, Skrill, and cryptocurrencies, other methods, such as bank
-          transfers and card payments, may take between 1-5 business days.
-        </p>
+          <p>
+            Wazamba Casino ensures that withdrawals are processed through the
+            same method used for depositing, wherever possible. If that option
+            isn't available, an alternative method such as a bank transfer will
+            be used. Here's a breakdown of the available withdrawal methods and
+            their limits.
+          </p>
 
-        <p>
-          It’s worth noting that withdrawals are processed only during business
-          hours, from Monday to Friday, which can lead to slight delays,
-          especially over the weekend. Additionally, Wazamba allows up to 3
-          pending withdrawal requests at a time.
-        </p>
+          <h3>Withdrawal Methods and Limits:</h3>
+          <ul>
+            <li>
+              <strong>Mastercard/Visa Debit:</strong> Minimum €10, Maximum €3000
+              (1-3 business days)
+            </li>
+            <li>
+              <strong>Bank Transfer:</strong> Minimum €10, Maximum €2000 (2-5
+              business days)
+            </li>
+            <li>
+              <strong>Neteller/Skrill/Skrill 1-Tap:</strong> Minimum €10,
+              Maximum €5000 (Instant)
+            </li>
+            <li>
+              <strong>eZeeWallet/MiFinity/Jeton:</strong> Minimum €10, Maximum
+              €5000 (Instant)
+            </li>
+            <li>
+              <strong>Bitcoin/Litecoin/Ethereum/Ripple:</strong> Minimum €10,
+              Maximum €10000 (Instant)
+            </li>
+          </ul>
 
-        <h2>Anti-Money Laundering and KYC Compliance</h2>
+          <p>
+            <strong>💡</strong> Most withdrawal methods are instant, but some
+            may take between 1-5 business days, depending on the method.
+            Withdrawals are only processed from Monday to Friday between 6 AM to
+            5 PM, which could lead to slight delays.
+          </p>
 
-        <p>
-          Wazamba adheres to standard Anti-Money Laundering (AML) regulations,
-          which means you must wager your last deposit at least once before
-          requesting a withdrawal. Failing to meet this requirement could result
-          in a fee, and the casino reserves the right to cancel any winnings in
-          such cases. The platform also has a robust Know Your Customer (KYC)
-          process in place, ensuring that all transactions are secure and
-          verified.
-        </p>
+          <h2>Minimum Deposit and Withdrawal Amounts</h2>
 
-        <p>During the KYC process, you’ll need to provide:</p>
-        <ul>
-          <li>A valid ID (passport, driver’s license)</li>
-          <li>A utility bill or bank statement</li>
-          <li>A clear photograph of your payment method (if required)</li>
-        </ul>
+          <p>
+            Wazamba Casino's minimum deposit starts at €10, while the minimum
+            withdrawal is set at €20. This aligns with industry standards and
+            offers flexibility for both low and high-stakes players.
+          </p>
 
-        <p>
-          <strong>💡</strong> Ensure that your documents are valid and clearly
-          visible for quicker verification.
-        </p>
+          <ul>
+            <li><strong>Minimum Deposit:</strong> €10</li>
+            <li><strong>Minimum Withdrawal:</strong> €20</li>
+            <li>
+              <strong>Maximum Withdrawal:</strong> €500 - €1500 per day, €10,000
+              - €20,000 monthly, depending on your VIP level.
+            </li>
+          </ul>
 
-        <h2>Cryptocurrency Transactions at Wazamba Casino</h2>
+          <h2>Withdrawal Processing Times</h2>
 
-        <p>
-          One of Wazamba Casino’s standout features is its support for
-          cryptocurrencies. Players can deposit and withdraw using Bitcoin,
-          Litecoin, Ethereum, and Ripple. These transactions are processed
-          instantly, providing an additional layer of privacy and convenience.
-        </p>
+          <p>
+            While Wazamba offers a variety of instant withdrawal methods like
+            Neteller, Skrill, and cryptocurrencies, other methods, such as bank
+            transfers and card payments, may take between 1-5 business days.
+          </p>
 
-        <ul>
-          <li>
-            <strong>Bitcoin/Litecoin/Ethereum/Ripple:</strong> Instant deposits
-            and withdrawals, with limits ranging from €10 to €10,000.
-          </li>
-        </ul>
+          <p>
+            It’s worth noting that withdrawals are processed only during
+            business hours, from Monday to Friday, which can lead to slight
+            delays, especially over the weekend. Additionally, Wazamba allows up
+            to 3 pending withdrawal requests at a time.
+          </p>
 
-        <h2>Wazamba Casino Payment Security</h2>
+          <h2>Anti-Money Laundering and KYC Compliance</h2>
 
-        <p>
-          Wazamba Casino is owned and operated by Araxio Development N.V. and is
-          licensed by the Curacao gaming authorities. Despite the occasional
-          slow payment processing that some Curacao-licensed casinos are known
-          for, Wazamba stands out as a reliable platform. All payment methods,
-          including cryptocurrencies, are secure and legal.
-        </p>
+          <p>
+            Wazamba adheres to standard Anti-Money Laundering (AML) regulations,
+            which means you must wager your last deposit at least once before
+            requesting a withdrawal. Failing to meet this requirement could
+            result in a fee, and the casino reserves the right to cancel any
+            winnings in such cases. The platform also has a robust Know Your
+            Customer (KYC) process in place, ensuring that all transactions are
+            secure and verified.
+          </p>
 
-        <h2>Final Thoughts on Wazamba Casino's Payment System</h2>
+          <p>During the KYC process, you’ll need to provide:</p>
+          <ul>
+            <li>A valid ID (passport, driver’s license)</li>
+            <li>A utility bill or bank statement</li>
+            <li>A clear photograph of your payment method (if required)</li>
+          </ul>
 
-        <p>
-          Wazamba Casino offers a well-rounded payment system with an extensive
-          range of deposit and withdrawal methods, including support for
-          cryptocurrencies. While the casino processes withdrawals only on
-          weekdays, the instant processing times for most methods make up for
-          this limitation. Whether you're using traditional payment methods or
-          modern options like Bitcoin, Wazamba ensures a safe and secure
-          experience for its players.
-        </p>
+          <p>
+            <strong>💡</strong> Ensure that your documents are valid and clearly
+            visible for quicker verification.
+          </p>
+
+          <h2>Cryptocurrency Transactions at Wazamba Casino</h2>
+
+          <p>
+            One of Wazamba Casino’s standout features is its support for
+            cryptocurrencies. Players can deposit and withdraw using Bitcoin,
+            Litecoin, Ethereum, and Ripple. These transactions are processed
+            instantly, providing an additional layer of privacy and convenience.
+          </p>
+
+          <ul>
+            <li>
+              <strong>Bitcoin/Litecoin/Ethereum/Ripple:</strong> Instant
+              deposits and withdrawals, with limits ranging from €10 to €10,000.
+            </li>
+          </ul>
+
+          <h2>Wazamba Casino Payment Security</h2>
+
+          <p>
+            Wazamba Casino is owned and operated by Araxio Development N.V. and
+            is licensed by the Curacao gaming authorities. Despite the
+            occasional slow payment processing that some Curacao-licensed
+            casinos are known for, Wazamba stands out as a reliable platform.
+            All payment methods, including cryptocurrencies, are secure and
+            legal.
+          </p>
+
+          <h2>Final Thoughts on Wazamba Casino's Payment System</h2>
+
+          <p>
+            Wazamba Casino offers a well-rounded payment system with an
+            extensive range of deposit and withdrawal methods, including support
+            for cryptocurrencies. While the casino processes withdrawals only on
+            weekdays, the instant processing times for most methods make up for
+            this limitation. Whether you're using traditional payment methods or
+            modern options like Bitcoin, Wazamba ensures a safe and secure
+            experience for its players.
+          </p>
+        </div>
       </div>
 
       <footer class="bottom-page">
