--- a/Reviews-page/Wild.io/Games/index.html
+++ b/Reviews-page/Wild.io/Games/index.html
@@ -264,267 +264,269 @@
 
   -->
     <section class="casino-allInfo">
-      <div class="casino-banner">
-        <a
-          href="https://wildpartners.app/a55d1e542"
-          aria-label="Read more about Wild.io"
-          ><img
-            src="/img/news-banners/wild.io-banner.webp"
-            alt="Wild.io banner"
-        /></a>
-      </div>
-
-      <div class="casino-infoLogo">
-        <div class="logo-box">
-          <img src="/img/wild-logo.webp" loading="lazy" alt=" wild.io img" />
-        </div>
-      </div>
-      <div class="play-now">
-        <a
-          href="https://wildpartners.app/a55d1e542"
-          aria-label="Read more about vave"
-          ><button>Play Now</button></a
-        >
-      </div>
-
-      <div class="tab-info">
-        <a href="/Reviews-page/Wild.io/" class="tablinks">
-          <button>Overview</button>
-        </a>
-        <a href="/Reviews-page/Wild.io/Bonus/" class="tablinks">
-          <button>Bonuses</button>
-        </a>
-        <a href="/Reviews-page/Wild.io/Games/" class="tablinks">
-          <button>Games</button>
-        </a>
-        <a href="/Reviews-page/Wild.io/Payments/" class="tablinks">
-          <button>Payments</button>
-        </a>
-      </div>
-
-      <!-- Tab content -->
-
-      <div id="Games" class="tabcontent-info">
-        <h1>Wild Casino Games: Slots, Table Games, Live Casino</h1>
-
-        <p>
-          Welcome to <strong>Wild.io</strong>, your home for an incredible
-          selection of online casino games! Whether you love the excitement of
-          slots, the strategy of table games, or the immersive thrill of live
-          casino, Wild.io has something for every player. In this guide, we’ll
-          dive deep into each game category, share tips for maximizing fun and
-          rewards, and highlight what makes Wild.io’s games stand out.
-        </p>
-
-        <h2>Top Slot Games at Wild.io</h2>
-
-        <p>
-          Slots are at the heart of Wild.io, offering a mix of classic themes,
-          modern features, and huge win potential. Here are some of the top slot
-          games you’ll find:
-        </p>
-
-        <ul>
-          <li>
-            <strong>Sugar Rush 1000 by Pragmatic Play</strong>: A vibrant,
-            colorful game full of candy-themed symbols. Bonus rounds and
-            multipliers keep gameplay exciting, and free spins can significantly
-            boost your winnings.
-          </li>
-          <li>
-            <strong>Coins of Ra Hold and Win by Betsoft</strong>: Dive into an
-            Egyptian adventure with a “hold-and-win” mechanic. Land the right
-            symbols to trigger jackpots and enjoy a fast-paced gameplay
-            experience.
-          </li>
-          <li>
-            <strong>Wild Tiger by BGaming</strong>: This high-volatility slot
-            offers big win potential. Its jungle theme, bonus rounds, and free
-            spins make it a favorite for thrill-seekers.
-          </li>
-          <li>
-            <strong>Gemhalla by BGaming</strong>: A visually stunning slot
-            filled with sparkling gems. Chain reactions and bonus multipliers
-            keep the gameplay exciting while maximizing win potential.
-          </li>
-          <li>
-            <strong>Heads and Tails by BGaming</strong>: A quick, easy-to-play
-            betting game. Perfect for players who want instant results and
-            simple fun.
-          </li>
-        </ul>
-
-        <div class="review-img">
-          <img
-            src="/img/news-banners/wild-slots.webp"
-            loading="lazy"
-            alt="wild.io slots overview"
-          />
-        </div>
-
-        <p><strong>Tips for Slots:</strong></p>
-        <ul>
-          <li>
-            Check each slot’s RTP (Return to Player) to maximize long-term
-            potential.
-          </li>
-          <li>
-            Use free spins from promotions to test new games before betting real
-            funds.
-          </li>
-          <li>
-            High-volatility slots like Wild Tiger are best for bigger bankrolls,
-            while low-volatility slots are ideal for longer, steady play
-            sessions.
-          </li>
-        </ul>
-
-        <h2>Table Games with a Bitcoin Twist</h2>
-
-        <p>
-          If you enjoy classic table games, Wild.io brings you favorites with a
-          modern twist, including Bitcoin integration for faster and more
-          flexible play.
-        </p>
-
-        <ul>
-          <li>
-            <strong>Bitcoin Roulette</strong>: Experience the classic roulette
-            game with the convenience of Bitcoin. Multiple betting options,
-            interactive gameplay, and real-time results make this a top pick.
-          </li>
-          <li>
-            <strong>Blackjack</strong>: Test your strategy against the dealer.
-            Classic rules apply, and knowing when to hit, stand, or double down
-            can make a big difference.
-          </li>
-          <li>
-            <strong>Other Table Games:</strong> Variants of baccarat, poker, and
-            dice games are also available, each offering unique rules and
-            strategies.
-          </li>
-        </ul>
-
-        <div class="review-img">
-          <img
-            src="/img/news-banners/wild-tableGames.webp"
-            loading="lazy"
-            alt="wild.io table games overview"
-          />
-        </div>
-
-        <p><strong>Table Game Tips:</strong></p>
-        <ul>
-          <li>
-            Learn basic strategies for games like blackjack and baccarat to
-            reduce the house edge.
-          </li>
-          <li>
-            Use smaller bets initially to get familiar with Bitcoin-based
-            gameplay and limits.
-          </li>
-          <li>
-            Take advantage of VIP perks and reload bonuses to maximize returns
-            on table games.
-          </li>
-        </ul>
-
-        <h2>Live Casino—Play from Home</h2>
-
-        <p>
-          Wild.io’s live casino games bring the thrill of real dealers and
-          authentic casino action directly to your screen. Interact with
-          dealers, chat with other players, and enjoy real-time results.
-        </p>
-
-        <ul>
-          <li>
-            <strong>Live Blackjack</strong>: Play against a real dealer with
-            live streaming. Strategy and timing are key, just like in a physical
-            casino.
-          </li>
-          <li>
-            <strong>Live Roulette</strong>: Bet on your lucky numbers and watch
-            the wheel spin live. Engage with the dealer and other players for a
-            fully immersive experience.
-          </li>
-          <li>
-            <strong>Live Baccarat and Poker</strong>: Enjoy real-time table
-            games with professional dealers, allowing for strategy-based and
-            social gameplay.
-          </li>
-        </ul>
-
-        <div class="review-img">
-          <img
-            src="/img/news-banners/wild-io-live-casino.webp"
-            loading="lazy"
-            alt="wild.io live casino overview"
-          />
-        </div>
-
-        <p><strong>Tips for Live Casino:</strong></p>
-        <ul>
-          <li>
-            Start with lower stakes until you get comfortable with the interface
-            and pace.
-          </li>
-          <li>
-            Observe the dealer and other players for patterns and strategies.
-          </li>
-          <li>
-            Combine live play with ongoing promotions like cashback or weekly
-            free spins to maximize value.
-          </li>
-        </ul>
-
-        <h2>VIP & Loyalty Benefits for Gamers</h2>
-
-        <p>
-          Wild.io rewards consistent play across slots, table games, and live
-          casino with its VIP program:
-        </p>
-
-        <ul>
-          <li>
-            Earn loyalty points for every bet you place, which help you climb
-            VIP tiers.
-          </li>
-          <li>
-            Higher VIP tiers unlock bigger bonuses, cashback percentages, and
-            exclusive promotions.
-          </li>
-          <li>
-            Access special tournaments and challenges reserved for VIP players,
-            giving you more chances to win.
-          </li>
-        </ul>
-
-        <h2>Responsible Gaming Tips</h2>
-
-        <p>While gaming is exciting, it’s important to play responsibly:</p>
-        <ul>
-          <li>Set deposit and loss limits before you start.</li>
-          <li>Take breaks to keep your gameplay balanced.</li>
-          <li>
-            Use bonus funds wisely — always check the wagering requirements and
-            eligible games.
-          </li>
-        </ul>
-
-        <h2>Sign Up Now at Wild.io</h2>
-
-        <p>
-          What are you waiting for?
+      <div class="info-Block">
+        <div class="casino-banner">
           <a
             href="https://wildpartners.app/a55d1e542"
-            aria-label="Sign up at Wild.io"
-            >Sign up at Wild.io</a
+            aria-label="Read more about Wild.io"
+            ><img
+              src="/img/news-banners/wild.io-banner.webp"
+              alt="Wild.io banner"
+          /></a>
+        </div>
+
+        <div class="casino-infoLogo">
+          <div class="logo-box">
+            <img src="/img/wild-logo.webp" loading="lazy" alt=" wild.io img" />
+          </div>
+        </div>
+        <div class="play-now">
+          <a
+            href="https://wildpartners.app/a55d1e542"
+            aria-label="Read more about vave"
+            ><button>Play Now</button></a
           >
-          today and start exploring an incredible selection of slots, table
-          games, and live casino options. With strategy, promotions, and VIP
-          rewards, you can enjoy the ultimate online casino experience!
-        </p>
+        </div>
+
+        <div class="tab-info">
+          <a href="/Reviews-page/Wild.io/" class="tablinks">
+            <button>Overview</button>
+          </a>
+          <a href="/Reviews-page/Wild.io/Bonus/" class="tablinks">
+            <button>Bonuses</button>
+          </a>
+          <a href="/Reviews-page/Wild.io/Games/" class="tablinks">
+            <button>Games</button>
+          </a>
+          <a href="/Reviews-page/Wild.io/Payments/" class="tablinks">
+            <button>Payments</button>
+          </a>
+        </div>
+
+        <!-- Tab content -->
+
+        <div id="Games" class="tabcontent-info">
+          <h1>Wild Casino Games: Slots, Table Games, Live Casino</h1>
+
+          <p>
+            Welcome to <strong>Wild.io</strong>, your home for an incredible
+            selection of online casino games! Whether you love the excitement of
+            slots, the strategy of table games, or the immersive thrill of live
+            casino, Wild.io has something for every player. In this guide, we’ll
+            dive deep into each game category, share tips for maximizing fun and
+            rewards, and highlight what makes Wild.io’s games stand out.
+          </p>
+
+          <h2>Top Slot Games at Wild.io</h2>
+
+          <p>
+            Slots are at the heart of Wild.io, offering a mix of classic themes,
+            modern features, and huge win potential. Here are some of the top
+            slot games you’ll find:
+          </p>
+
+          <ul>
+            <li>
+              <strong>Sugar Rush 1000 by Pragmatic Play</strong>: A vibrant,
+              colorful game full of candy-themed symbols. Bonus rounds and
+              multipliers keep gameplay exciting, and free spins can
+              significantly boost your winnings.
+            </li>
+            <li>
+              <strong>Coins of Ra Hold and Win by Betsoft</strong>: Dive into an
+              Egyptian adventure with a “hold-and-win” mechanic. Land the right
+              symbols to trigger jackpots and enjoy a fast-paced gameplay
+              experience.
+            </li>
+            <li>
+              <strong>Wild Tiger by BGaming</strong>: This high-volatility slot
+              offers big win potential. Its jungle theme, bonus rounds, and free
+              spins make it a favorite for thrill-seekers.
+            </li>
+            <li>
+              <strong>Gemhalla by BGaming</strong>: A visually stunning slot
+              filled with sparkling gems. Chain reactions and bonus multipliers
+              keep the gameplay exciting while maximizing win potential.
+            </li>
+            <li>
+              <strong>Heads and Tails by BGaming</strong>: A quick, easy-to-play
+              betting game. Perfect for players who want instant results and
+              simple fun.
+            </li>
+          </ul>
+
+          <div class="review-img">
+            <img
+              src="/img/news-banners/wild-slots.webp"
+              loading="lazy"
+              alt="wild.io slots overview"
+            />
+          </div>
+
+          <p><strong>Tips for Slots:</strong></p>
+          <ul>
+            <li>
+              Check each slot’s RTP (Return to Player) to maximize long-term
+              potential.
+            </li>
+            <li>
+              Use free spins from promotions to test new games before betting
+              real funds.
+            </li>
+            <li>
+              High-volatility slots like Wild Tiger are best for bigger
+              bankrolls, while low-volatility slots are ideal for longer, steady
+              play sessions.
+            </li>
+          </ul>
+
+          <h2>Table Games with a Bitcoin Twist</h2>
+
+          <p>
+            If you enjoy classic table games, Wild.io brings you favorites with
+            a modern twist, including Bitcoin integration for faster and more
+            flexible play.
+          </p>
+
+          <ul>
+            <li>
+              <strong>Bitcoin Roulette</strong>: Experience the classic roulette
+              game with the convenience of Bitcoin. Multiple betting options,
+              interactive gameplay, and real-time results make this a top pick.
+            </li>
+            <li>
+              <strong>Blackjack</strong>: Test your strategy against the dealer.
+              Classic rules apply, and knowing when to hit, stand, or double
+              down can make a big difference.
+            </li>
+            <li>
+              <strong>Other Table Games:</strong> Variants of baccarat, poker,
+              and dice games are also available, each offering unique rules and
+              strategies.
+            </li>
+          </ul>
+
+          <div class="review-img">
+            <img
+              src="/img/news-banners/wild-tableGames.webp"
+              loading="lazy"
+              alt="wild.io table games overview"
+            />
+          </div>
+
+          <p><strong>Table Game Tips:</strong></p>
+          <ul>
+            <li>
+              Learn basic strategies for games like blackjack and baccarat to
+              reduce the house edge.
+            </li>
+            <li>
+              Use smaller bets initially to get familiar with Bitcoin-based
+              gameplay and limits.
+            </li>
+            <li>
+              Take advantage of VIP perks and reload bonuses to maximize returns
+              on table games.
+            </li>
+          </ul>
+
+          <h2>Live Casino—Play from Home</h2>
+
+          <p>
+            Wild.io’s live casino games bring the thrill of real dealers and
+            authentic casino action directly to your screen. Interact with
+            dealers, chat with other players, and enjoy real-time results.
+          </p>
+
+          <ul>
+            <li>
+              <strong>Live Blackjack</strong>: Play against a real dealer with
+              live streaming. Strategy and timing are key, just like in a
+              physical casino.
+            </li>
+            <li>
+              <strong>Live Roulette</strong>: Bet on your lucky numbers and
+              watch the wheel spin live. Engage with the dealer and other
+              players for a fully immersive experience.
+            </li>
+            <li>
+              <strong>Live Baccarat and Poker</strong>: Enjoy real-time table
+              games with professional dealers, allowing for strategy-based and
+              social gameplay.
+            </li>
+          </ul>
+
+          <div class="review-img">
+            <img
+              src="/img/news-banners/wild-io-live-casino.webp"
+              loading="lazy"
+              alt="wild.io live casino overview"
+            />
+          </div>
+
+          <p><strong>Tips for Live Casino:</strong></p>
+          <ul>
+            <li>
+              Start with lower stakes until you get comfortable with the
+              interface and pace.
+            </li>
+            <li>
+              Observe the dealer and other players for patterns and strategies.
+            </li>
+            <li>
+              Combine live play with ongoing promotions like cashback or weekly
+              free spins to maximize value.
+            </li>
+          </ul>
+
+          <h2>VIP & Loyalty Benefits for Gamers</h2>
+
+          <p>
+            Wild.io rewards consistent play across slots, table games, and live
+            casino with its VIP program:
+          </p>
+
+          <ul>
+            <li>
+              Earn loyalty points for every bet you place, which help you climb
+              VIP tiers.
+            </li>
+            <li>
+              Higher VIP tiers unlock bigger bonuses, cashback percentages, and
+              exclusive promotions.
+            </li>
+            <li>
+              Access special tournaments and challenges reserved for VIP
+              players, giving you more chances to win.
+            </li>
+          </ul>
+
+          <h2>Responsible Gaming Tips</h2>
+
+          <p>While gaming is exciting, it’s important to play responsibly:</p>
+          <ul>
+            <li>Set deposit and loss limits before you start.</li>
+            <li>Take breaks to keep your gameplay balanced.</li>
+            <li>
+              Use bonus funds wisely — always check the wagering requirements
+              and eligible games.
+            </li>
+          </ul>
+
+          <h2>Sign Up Now at Wild.io</h2>
+
+          <p>
+            What are you waiting for?
+            <a
+              href="https://wildpartners.app/a55d1e542"
+              aria-label="Sign up at Wild.io"
+              >Sign up at Wild.io</a
+            >
+            today and start exploring an incredible selection of slots, table
+            games, and live casino options. With strategy, promotions, and VIP
+            rewards, you can enjoy the ultimate online casino experience!
+          </p>
+        </div>
       </div>
 
       <footer class="bottom-page">
