--- a/Reviews-page/Wild.io/Payments/index.html
+++ b/Reviews-page/Wild.io/Payments/index.html
@@ -263,7 +263,8 @@
 
   -->
     <section class="casino-allInfo">
-      <div class="casino-banner">
+      <div class="info-Block">
+        <div class="casino-banner">
         <a
           href="https://wildpartners.app/a55d1e542"
           aria-label="Read more about Wild.io"
@@ -495,6 +496,8 @@
           </p>
         </div>
       </div>
+      </div>
+      
 
       <div id="Bonuses" class="tabcontent-info">
         <!-- bonus tabs -->
