--- a/Reviews-page/Wild.io/index.html
+++ b/Reviews-page/Wild.io/index.html
@@ -259,236 +259,240 @@
 
   -->
     <section class="casino-allInfo">
-      <div class="casino-banner">
-        <a
-          href="https://wildpartners.app/a55d1e542"
-          aria-label="Read more about Wild.io"
-          ><img
-            src="/img/news-banners/wild.io-banner.webp"
-            alt="Wild.io banner"
-        /></a>
-      </div>
-
-      <div class="casino-infoLogo">
-        <div class="logo-box">
-          <img src="/img/wild-logo.webp" loading="lazy" alt=" wild.io img" />
+      <div class="info-Block">
+        <div class="casino-banner">
+          <a
+            href="https://wildpartners.app/a55d1e542"
+            aria-label="Read more about Wild.io"
+            ><img
+              src="/img/news-banners/wild.io-banner.webp"
+              alt="Wild.io banner"
+          /></a>
         </div>
-      </div>
-      <div class="play-now">
-        <a
-          href="https://wildpartners.app/a55d1e542"
-          aria-label="Read more about vave"
-          ><button>Play Now</button></a
-        >
-      </div>
 
-      <div class="tab-info">
-        <a href="/Reviews-page/Wild.io/" class="tablinks">
-          <button>Overview</button>
-        </a>
-        <a href="/Reviews-page/Wild.io/Bonus/" class="tablinks">
-          <button>Bonuses</button>
-        </a>
-        <a href="/Reviews-page/Wild.io/Games/" class="tablinks">
-          <button>Games</button>
-        </a>
-        <a href="/Reviews-page/Wild.io/Payments/" class="tablinks">
-          <button>Payments</button>
-        </a>
-      </div>
+        <div class="casino-infoLogo">
+          <div class="logo-box">
+            <img src="/img/wild-logo.webp" loading="lazy" alt=" wild.io img" />
+          </div>
+        </div>
+        <div class="play-now">
+          <a
+            href="https://wildpartners.app/a55d1e542"
+            aria-label="Read more about vave"
+            ><button>Play Now</button></a
+          >
+        </div>
 
-      <!-- Tab content -->
-      <div id="Overview" class="tabcontent-info">
-        <div class="overview-button-container">
-          <div class="overview-button">
-            <p>Company</p>
-            <p>Nonce Gaming B.V.</p>
-          </div>
-          <div class="overview-button">
-            <p>Year Founded</p>
-            <p>2022</p>
-          </div>
-          <div class="overview-button">
-            <p>License</p>
-            <p>Curacao</p>
-          </div>
-          <div class="overview-button">
-            <p>Payout Speed</p>
-            <p>5 minutes</p>
-          </div>
-          <div class="overview-button">
-            <p>Minimum Deposit</p>
-            <p>0.00006 BTC</p>
-          </div>
-          <div class="overview-button">
-            <p>Withdrawal Limit</p>
-            <p>$15,000 per month</p>
-          </div>
+        <div class="tab-info">
+          <a href="/Reviews-page/Wild.io/" class="tablinks">
+            <button>Overview</button>
+          </a>
+          <a href="/Reviews-page/Wild.io/Bonus/" class="tablinks">
+            <button>Bonuses</button>
+          </a>
+          <a href="/Reviews-page/Wild.io/Games/" class="tablinks">
+            <button>Games</button>
+          </a>
+          <a href="/Reviews-page/Wild.io/Payments/" class="tablinks">
+            <button>Payments</button>
+          </a>
+        </div>
 
-          <div class="overview-button" id="card-tipe-container">
-            <p>Deposit Methods</p>
-            <div class="cardTipe-container">
-              <img
-                class="card-tipe-info"
-                src="/img/visa-logo.webp"
-                loading="lazy"
-                alt="visa logo"
-              />
-              <img
-                class="card-tipe-info"
-                src="/img/visa-logo.webp"
-                loading="lazy"
-                alt="mastercard logo"
-              />
-              <img
-                class="card-tipe-info"
-                src="/img/skrill-logo.webp"
-                loading="lazy"
-                alt="skrill logo"
-              />
-              <img
-                class="card-tipe tipe4"
-                src="/img/AstroPay.webp"
-                loading="lazy"
-                alt="astropay icon"
-              />
-              <img
-                class="card-tipe"
-                src="/img/litecoin-logo.webp"
-                loading="lazy"
-                alt="litecoin logo"
-              />
-              <img
-                class="card-tipe"
-                src="/img/ethrtium-logo.webp"
-                loading="lazy"
-                alt="etherium logo"
-              />
-              <img
-                class="card-tipe"
-                id="bitCoin-logo"
-                src="/img/bit-coin-logo.webp"
-                loading="lazy"
-                alt="bitcoin logo"
-              />
+        <!-- Tab content -->
+        <div id="Overview" class="tabcontent-info">
+          <div class="overview-button-container">
+            <div class="overview-button">
+              <p>Company</p>
+              <p>Nonce Gaming B.V.</p>
+            </div>
+            <div class="overview-button">
+              <p>Year Founded</p>
+              <p>2022</p>
+            </div>
+            <div class="overview-button">
+              <p>License</p>
+              <p>Curacao</p>
+            </div>
+            <div class="overview-button">
+              <p>Payout Speed</p>
+              <p>5 minutes</p>
+            </div>
+            <div class="overview-button">
+              <p>Minimum Deposit</p>
+              <p>0.00006 BTC</p>
+            </div>
+            <div class="overview-button">
+              <p>Withdrawal Limit</p>
+              <p>$15,000 per month</p>
+            </div>
+
+            <div class="overview-button" id="card-tipe-container">
+              <p>Deposit Methods</p>
+              <div class="cardTipe-container">
+                <img
+                  class="card-tipe-info"
+                  src="/img/visa-logo.webp"
+                  loading="lazy"
+                  alt="visa logo"
+                />
+                <img
+                  class="card-tipe-info"
+                  src="/img/visa-logo.webp"
+                  loading="lazy"
+                  alt="mastercard logo"
+                />
+                <img
+                  class="card-tipe-info"
+                  src="/img/skrill-logo.webp"
+                  loading="lazy"
+                  alt="skrill logo"
+                />
+                <img
+                  class="card-tipe tipe4"
+                  src="/img/AstroPay.webp"
+                  loading="lazy"
+                  alt="astropay icon"
+                />
+                <img
+                  class="card-tipe"
+                  src="/img/litecoin-logo.webp"
+                  loading="lazy"
+                  alt="litecoin logo"
+                />
+                <img
+                  class="card-tipe"
+                  src="/img/ethrtium-logo.webp"
+                  loading="lazy"
+                  alt="etherium logo"
+                />
+                <img
+                  class="card-tipe"
+                  id="bitCoin-logo"
+                  src="/img/bit-coin-logo.webp"
+                  loading="lazy"
+                  alt="bitcoin logo"
+                />
+              </div>
             </div>
           </div>
-        </div>
-        <div class="overview-summary">
-          <h1>Wild.io Overview: The Ultimate Crypto Casino Experience</h1>
-          <div class="review-img">
-            <img
-              src="/img/news-banners/wild.io-overview.webp"
-              loading="lazy"
-              alt="wild.io overview"
-            />
+          <div class="overview-summary">
+            <h1>Wild.io Overview: The Ultimate Crypto Casino Experience</h1>
+            <div class="review-img">
+              <img
+                src="/img/news-banners/wild.io-overview.webp"
+                loading="lazy"
+                alt="wild.io overview"
+              />
+            </div>
+
+            <p>
+              <strong>Wild.io</strong> is a leading cryptocurrency-based online
+              casino, offering a diverse selection of games, fast transactions,
+              and rewarding bonuses tailored to crypto enthusiasts. If you're
+              looking for a seamless online casino experience with the
+              convenience of digital currencies, Wild.io has everything you
+              need.
+            </p>
+
+            <h2>Game Selection at Wild.io</h2>
+            <ul>
+              <li>
+                <strong>Top Slot Games</strong>: Enjoy popular slot titles like
+                <em>Sugar Rush 1000</em> by Pragmatic Play,
+                <em>Coins of Ra</em> by Betsoft, <em>Wild Tiger</em> and
+                <em>Gemhalla</em> by BGaming. These slots feature vibrant
+                graphics, exciting bonus rounds, and immersive gameplay.
+              </li>
+              <li>
+                <strong>Bitcoin Table Games</strong>: Classic games like
+                <em>Bitcoin Roulette</em> and <em>Blackjack</em> bring a new
+                dimension to online table games with the added benefit of
+                cryptocurrency betting, allowing for seamless and secure
+                wagering.
+              </li>
+              <li>
+                <strong>Live Casino</strong>: For those who prefer the thrill of
+                live interaction, Wild.io offers live games like
+                <em>Live Blackjack</em> and <em>Live Roulette</em>, where
+                players can engage with professional dealers and other players
+                in real-time.
+              </li>
+            </ul>
+
+            <h2>Wild.io Bonuses & Promotions</h2>
+            <ul>
+              <li>
+                <strong>350% Welcome Bonus</strong>: New players are welcomed
+                with a 350% bonus package spread across the first three
+                deposits, plus 200 free spins:
+                <ul>
+                  <li>1st Deposit: 120% + 75 Free Spins</li>
+                  <li>2nd Deposit: 120% + 75 Free Spins</li>
+                  <li>3rd Deposit: 120% + 75 Free Spins</li>
+                </ul>
+              </li>
+              <li>
+                <strong>Cashback Offers</strong>: With up to 20% cashback
+                available daily and weekly, Wild.io ensures you stay in the game
+                longer:
+                <ul>
+                  <li>
+                    <em>10% Daily Cashback</em> on live games with 0x wagering
+                    for two weeks.
+                  </li>
+                  <li>
+                    <em>20% VIP Cashback</em> with no wagering requirements for
+                    VIP players.
+                  </li>
+                  <li>
+                    <em>Weekly Cashback</em>: Up to 20% weekly cashback on all
+                    gameplay.
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <strong>Weekly Promotions</strong>: Players can take advantage
+                of regular promotions like reload bonuses, free spins, and
+                double status points on select games. The
+                <em>Casino Challenge</em> offers a chance to win a share of
+                $15,000 in rewards and free spins.
+              </li>
+            </ul>
+
+            <h2>Fast Crypto Payments</h2>
+            <ul>
+              <li>
+                <strong>Cryptocurrency Support</strong>: Wild.io supports a wide
+                range of cryptocurrencies, including Bitcoin (BTC), Ethereum
+                (ETH), Litecoin (LTC), Bitcoin Cash (BCH), Dogecoin (DOGE),
+                Ripple (XRP), Tron (TRX), Tether (USDT), and Cardano (ADA). This
+                variety allows players to choose their preferred digital
+                currency for seamless transactions.
+              </li>
+              <li>
+                <strong>Instant Deposits & Fast Withdrawals</strong>: Deposits
+                are processed instantly, and withdrawals typically take 0-1
+                hours with no fees. However, withdrawal limits are set at BTC 3
+                per week and BTC 10 per month.
+              </li>
+              <li>
+                <strong>Secure Verification</strong>: ID verification may be
+                required for your first withdrawal, ensuring the security of
+                your funds.
+              </li>
+            </ul>
+
+            <h2>Why Choose Wild.io?</h2>
+            <p>
+              Wild.io stands out as a top-tier crypto casino with a rich game
+              selection, substantial bonuses, and fast payment methods. With a
+              focus on providing a smooth experience for cryptocurrency users,
+              it’s an ideal choice for both casual players and crypto-savvy
+              high-rollers. Join Wild.io today and take advantage of its
+              incredible welcome package, ongoing promotions, and fast crypto
+              transactions.
+            </p>
           </div>
-
-          <p>
-            <strong>Wild.io</strong> is a leading cryptocurrency-based online
-            casino, offering a diverse selection of games, fast transactions,
-            and rewarding bonuses tailored to crypto enthusiasts. If you're
-            looking for a seamless online casino experience with the convenience
-            of digital currencies, Wild.io has everything you need.
-          </p>
-
-          <h2>Game Selection at Wild.io</h2>
-          <ul>
-            <li>
-              <strong>Top Slot Games</strong>: Enjoy popular slot titles like
-              <em>Sugar Rush 1000</em> by Pragmatic Play,
-              <em>Coins of Ra</em> by Betsoft, <em>Wild Tiger</em> and
-              <em>Gemhalla</em> by BGaming. These slots feature vibrant
-              graphics, exciting bonus rounds, and immersive gameplay.
-            </li>
-            <li>
-              <strong>Bitcoin Table Games</strong>: Classic games like
-              <em>Bitcoin Roulette</em> and <em>Blackjack</em> bring a new
-              dimension to online table games with the added benefit of
-              cryptocurrency betting, allowing for seamless and secure wagering.
-            </li>
-            <li>
-              <strong>Live Casino</strong>: For those who prefer the thrill of
-              live interaction, Wild.io offers live games like
-              <em>Live Blackjack</em> and <em>Live Roulette</em>, where players
-              can engage with professional dealers and other players in
-              real-time.
-            </li>
-          </ul>
-
-          <h2>Wild.io Bonuses & Promotions</h2>
-          <ul>
-            <li>
-              <strong>350% Welcome Bonus</strong>: New players are welcomed with
-              a 350% bonus package spread across the first three deposits, plus
-              200 free spins:
-              <ul>
-                <li>1st Deposit: 120% + 75 Free Spins</li>
-                <li>2nd Deposit: 120% + 75 Free Spins</li>
-                <li>3rd Deposit: 120% + 75 Free Spins</li>
-              </ul>
-            </li>
-            <li>
-              <strong>Cashback Offers</strong>: With up to 20% cashback
-              available daily and weekly, Wild.io ensures you stay in the game
-              longer:
-              <ul>
-                <li>
-                  <em>10% Daily Cashback</em> on live games with 0x wagering for
-                  two weeks.
-                </li>
-                <li>
-                  <em>20% VIP Cashback</em> with no wagering requirements for
-                  VIP players.
-                </li>
-                <li>
-                  <em>Weekly Cashback</em>: Up to 20% weekly cashback on all
-                  gameplay.
-                </li>
-              </ul>
-            </li>
-            <li>
-              <strong>Weekly Promotions</strong>: Players can take advantage of
-              regular promotions like reload bonuses, free spins, and double
-              status points on select games. The
-              <em>Casino Challenge</em> offers a chance to win a share of
-              $15,000 in rewards and free spins.
-            </li>
-          </ul>
-
-          <h2>Fast Crypto Payments</h2>
-          <ul>
-            <li>
-              <strong>Cryptocurrency Support</strong>: Wild.io supports a wide
-              range of cryptocurrencies, including Bitcoin (BTC), Ethereum
-              (ETH), Litecoin (LTC), Bitcoin Cash (BCH), Dogecoin (DOGE), Ripple
-              (XRP), Tron (TRX), Tether (USDT), and Cardano (ADA). This variety
-              allows players to choose their preferred digital currency for
-              seamless transactions.
-            </li>
-            <li>
-              <strong>Instant Deposits & Fast Withdrawals</strong>: Deposits are
-              processed instantly, and withdrawals typically take 0-1 hours with
-              no fees. However, withdrawal limits are set at BTC 3 per week and
-              BTC 10 per month.
-            </li>
-            <li>
-              <strong>Secure Verification</strong>: ID verification may be
-              required for your first withdrawal, ensuring the security of your
-              funds.
-            </li>
-          </ul>
-
-          <h2>Why Choose Wild.io?</h2>
-          <p>
-            Wild.io stands out as a top-tier crypto casino with a rich game
-            selection, substantial bonuses, and fast payment methods. With a
-            focus on providing a smooth experience for cryptocurrency users,
-            it’s an ideal choice for both casual players and crypto-savvy
-            high-rollers. Join Wild.io today and take advantage of its
-            incredible welcome package, ongoing promotions, and fast crypto
-            transactions.
-          </p>
         </div>
       </div>
 
